ansible/roles/!_network/shorewall/zero-in/templates/necessary/iptables.insert.fixes.txt
# Generated by iptables-save v1.6.1 on Wed Oct 16 11:06:24 2019
*raw
:PREROUTING ACCEPT [2826:1101031]
:OUTPUT ACCEPT [2719:770044]
-A PREROUTING -p udp -m udp --dport 10080 -j CT --helper amanda
-A PREROUTING -p tcp -m tcp --dport 21 --tcp-flags FIN,SYN,RST,ACK SYN -j CT --helper ftp
-A PREROUTING -p udp -m udp --dport 1719 -j CT --helper RAS
-A PREROUTING -p tcp -m tcp --dport 1720 --tcp-flags FIN,SYN,RST,ACK SYN -j CT --helper Q.931
-A PREROUTING -p tcp -m tcp --dport 6667 --tcp-flags FIN,SYN,RST,ACK SYN -j CT --helper irc
-A PREROUTING -p udp -m udp --dport 137 -j CT --helper netbios-ns
-A PREROUTING -p tcp -m tcp --dport 1723 --tcp-flags FIN,SYN,RST,ACK SYN -j CT --helper pptp
-A PREROUTING -p tcp -m tcp --dport 6566 --tcp-flags FIN,SYN,RST,ACK SYN -j CT --helper sane
-A PREROUTING -p udp -m udp --dport 5060 -j CT --helper sip
-A PREROUTING -p udp -m udp --dport 161 -j CT --helper snmp
-A PREROUTING -p udp -m udp --dport 69 -j CT --helper tftp
-A OUTPUT -p udp -m udp --dport 10080 -j CT --helper amanda
-A OUTPUT -p tcp -m tcp --dport 21 --tcp-flags FIN,SYN,RST,ACK SYN -j CT --helper ftp
-A OUTPUT -p udp -m udp --dport 1719 -j CT --helper RAS
-A OUTPUT -p tcp -m tcp --dport 1720 --tcp-flags FIN,SYN,RST,ACK SYN -j CT --helper Q.931
-A OUTPUT -p tcp -m tcp --dport 6667 --tcp-flags FIN,SYN,RST,ACK SYN -j CT --helper irc
-A OUTPUT -p udp -m udp --dport 137 -j CT --helper netbios-ns
-A OUTPUT -p tcp -m tcp --dport 1723 --tcp-flags FIN,SYN,RST,ACK SYN -j CT --helper pptp
-A OUTPUT -p tcp -m tcp --dport 6566 --tcp-flags FIN,SYN,RST,ACK SYN -j CT --helper sane
-A OUTPUT -p udp -m udp --dport 5060 -j CT --helper sip
-A OUTPUT -p udp -m udp --dport 161 -j CT --helper snmp
-A OUTPUT -p udp -m udp --dport 69 -j CT --helper tftp
COMMIT
# Completed on Wed Oct 16 11:06:24 2019
# Generated by iptables-save v1.6.1 on Wed Oct 16 11:06:24 2019
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
:DOCKER - [0:0]
:DOCKER-INGRESS - [0:0]
:DOCKER-ISOLATION - [0:0]
:DOCKER-USER - [0:0]
:_bas2brg - [0:0]
:_bas2cde - [0:0]
:_bas2clu - [0:0]
:_bas2ess - [0:0]
:_bas2fw - [0:0]
:_bas2geov - [0:0]
:_bas2loc - [0:0]
:_bas2net - [0:0]
:_bas2nginx - [0:0]
:_bas2repo - [0:0]
:_bas2vip - [0:0]
:_bas2vpn - [0:0]
:_bas2vrrp - [0:0]
:_bas2wan - [0:0]
:_brg2bas - [0:0]
:_brg2cde - [0:0]
:_brg2clu - [0:0]
:_brg2ess - [0:0]
:_brg2fw - [0:0]
:_brg2geov - [0:0]
:_brg2loc - [0:0]
:_brg2net - [0:0]
:_brg2nginx - [0:0]
:_brg2repo - [0:0]
:_brg2vip - [0:0]
:_brg2vpn - [0:0]
:_brg2vrrp - [0:0]
:_brg2wan - [0:0]
:_cde2bas - [0:0]
:_cde2brg - [0:0]
:_cde2clu - [0:0]
:_cde2ess - [0:0]
:_cde2fw - [0:0]
:_cde2geov - [0:0]
:_cde2loc - [0:0]
:_cde2net - [0:0]
:_cde2nginx - [0:0]
:_cde2repo - [0:0]
:_cde2vip - [0:0]
:_cde2vpn - [0:0]
:_cde2vrrp - [0:0]
:_cde2wan - [0:0]
:_clu2bas - [0:0]
:_clu2brg - [0:0]
:_clu2cde - [0:0]
:_clu2ess - [0:0]
:_clu2fw - [0:0]
:_clu2geov - [0:0]
:_clu2loc - [0:0]
:_clu2net - [0:0]
:_clu2nginx - [0:0]
:_clu2repo - [0:0]
:_clu2vip - [0:0]
:_clu2vpn - [0:0]
:_clu2vrrp - [0:0]
:_clu2wan - [0:0]
:_ess2bas - [0:0]
:_ess2brg - [0:0]
:_ess2cde - [0:0]
:_ess2clu - [0:0]
:_ess2fw - [0:0]
:_ess2geov - [0:0]
:_ess2loc - [0:0]
:_ess2net - [0:0]
:_ess2nginx - [0:0]
:_ess2repo - [0:0]
:_ess2vip - [0:0]
:_ess2vpn - [0:0]
:_ess2vrrp - [0:0]
:_ess2wan - [0:0]
:_fw2bas - [0:0]
:_fw2brg - [0:0]
:_fw2cde - [0:0]
:_fw2clu - [0:0]
:_fw2ess - [0:0]
:_fw2fw - [0:0]
:_fw2geov - [0:0]
:_fw2loc - [0:0]
:_fw2net - [0:0]
:_fw2nginx - [0:0]
:_fw2repo - [0:0]
:_fw2vip - [0:0]
:_fw2vpn - [0:0]
:_fw2vrrp - [0:0]
:_fw2wan - [0:0]
:_geov2bas - [0:0]
:_geov2brg - [0:0]
:_geov2cde - [0:0]
:_geov2clu - [0:0]
:_geov2ess - [0:0]
:_geov2fw - [0:0]
:_geov2loc - [0:0]
:_geov2net - [0:0]
:_geov2nginx - [0:0]
:_geov2repo - [0:0]
:_geov2vip - [0:0]
:_geov2vpn - [0:0]
:_geov2vrrp - [0:0]
:_geov2wan - [0:0]
:_loc2bas - [0:0]
:_loc2brg - [0:0]
:_loc2cde - [0:0]
:_loc2clu - [0:0]
:_loc2ess - [0:0]
:_loc2fw - [0:0]
:_loc2geov - [0:0]
:_loc2net - [0:0]
:_loc2nginx - [0:0]
:_loc2repo - [0:0]
:_loc2vip - [0:0]
:_loc2vpn - [0:0]
:_loc2vrrp - [0:0]
:_loc2wan - [0:0]
:_net2bas - [0:0]
:_net2brg - [0:0]
:_net2cde - [0:0]
:_net2clu - [0:0]
:_net2ess - [0:0]
:_net2fw - [0:0]
:_net2geov - [0:0]
:_net2loc - [0:0]
:_net2nginx - [0:0]
:_net2repo - [0:0]
:_net2vip - [0:0]
:_net2vpn - [0:0]
:_net2vrrp - [0:0]
:_net2wan - [0:0]
:_nginx2bas - [0:0]
:_nginx2brg - [0:0]
:_nginx2cde - [0:0]
:_nginx2clu - [0:0]
:_nginx2ess - [0:0]
:_nginx2fw - [0:0]
:_nginx2geov - [0:0]
:_nginx2loc - [0:0]
:_nginx2net - [0:0]
:_nginx2repo - [0:0]
:_nginx2vip - [0:0]
:_nginx2vpn - [0:0]
:_nginx2vrrp - [0:0]
:_nginx2wan - [0:0]
:_repo2bas - [0:0]
:_repo2brg - [0:0]
:_repo2cde - [0:0]
:_repo2clu - [0:0]
:_repo2ess - [0:0]
:_repo2fw - [0:0]
:_repo2geov - [0:0]
:_repo2loc - [0:0]
:_repo2net - [0:0]
:_repo2nginx - [0:0]
:_repo2vip - [0:0]
:_repo2vpn - [0:0]
:_repo2vrrp - [0:0]
:_repo2wan - [0:0]
:_vip2bas - [0:0]
:_vip2brg - [0:0]
:_vip2cde - [0:0]
:_vip2clu - [0:0]
:_vip2ess - [0:0]
:_vip2fw - [0:0]
:_vip2geov - [0:0]
:_vip2loc - [0:0]
:_vip2net - [0:0]
:_vip2nginx - [0:0]
:_vip2repo - [0:0]
:_vip2vpn - [0:0]
:_vip2vrrp - [0:0]
:_vip2wan - [0:0]
:_vpn2bas - [0:0]
:_vpn2brg - [0:0]
:_vpn2cde - [0:0]
:_vpn2clu - [0:0]
:_vpn2ess - [0:0]
:_vpn2fw - [0:0]
:_vpn2geov - [0:0]
:_vpn2loc - [0:0]
:_vpn2net - [0:0]
:_vpn2nginx - [0:0]
:_vpn2repo - [0:0]
:_vpn2vip - [0:0]
:_vpn2vrrp - [0:0]
:_vpn2wan - [0:0]
:_vrrp2bas - [0:0]
:_vrrp2brg - [0:0]
:_vrrp2cde - [0:0]
:_vrrp2clu - [0:0]
:_vrrp2ess - [0:0]
:_vrrp2fw - [0:0]
:_vrrp2geov - [0:0]
:_vrrp2loc - [0:0]
:_vrrp2net - [0:0]
:_vrrp2nginx - [0:0]
:_vrrp2repo - [0:0]
:_vrrp2vip - [0:0]
:_vrrp2vpn - [0:0]
:_vrrp2wan - [0:0]
:_wan2bas - [0:0]
:_wan2brg - [0:0]
:_wan2cde - [0:0]
:_wan2clu - [0:0]
:_wan2ess - [0:0]
:_wan2fw - [0:0]
:_wan2geov - [0:0]
:_wan2loc - [0:0]
:_wan2net - [0:0]
:_wan2nginx - [0:0]
:_wan2repo - [0:0]
:_wan2vip - [0:0]
:_wan2vpn - [0:0]
:_wan2vrrp - [0:0]
:bas2brg - [0:0]
:bas2cde - [0:0]
:bas2clu - [0:0]
:bas2ess - [0:0]
:bas2fw - [0:0]
:bas2geov - [0:0]
:bas2loc - [0:0]
:bas2net - [0:0]
:bas2nginx - [0:0]
:bas2repo - [0:0]
:bas2vip - [0:0]
:bas2vpn - [0:0]
:bas2vrrp - [0:0]
:bas2wan - [0:0]
:bas_frwd - [0:0]
:brg2bas - [0:0]
:brg2cde - [0:0]
:brg2clu - [0:0]
:brg2ess - [0:0]
:brg2fw - [0:0]
:brg2geov - [0:0]
:brg2loc - [0:0]
:brg2net - [0:0]
:brg2nginx - [0:0]
:brg2repo - [0:0]
:brg2vip - [0:0]
:brg2vpn - [0:0]
:brg2vrrp - [0:0]
:brg2wan - [0:0]
:brg_frwd - [0:0]
:cde2bas - [0:0]
:cde2brg - [0:0]
:cde2clu - [0:0]
:cde2ess - [0:0]
:cde2fw - [0:0]
:cde2geov - [0:0]
:cde2loc - [0:0]
:cde2net - [0:0]
:cde2nginx - [0:0]
:cde2repo - [0:0]
:cde2vip - [0:0]
:cde2vpn - [0:0]
:cde2vrrp - [0:0]
:cde2wan - [0:0]
:cde_frwd - [0:0]
:clu2bas - [0:0]
:clu2brg - [0:0]
:clu2cde - [0:0]
:clu2ess - [0:0]
:clu2fw - [0:0]
:clu2geov - [0:0]
:clu2loc - [0:0]
:clu2net - [0:0]
:clu2nginx - [0:0]
:clu2repo - [0:0]
:clu2vip - [0:0]
:clu2vpn - [0:0]
:clu2vrrp - [0:0]
:clu2wan - [0:0]
:clu_frwd - [0:0]
:docker_gwbridge_fwd - [0:0]
:docker_gwbridge_in - [0:0]
:docker_gwbridge_mac - [0:0]
:docker_gwbridge_out - [0:0]
:dynamic - [0:0]
:ens192_fwd - [0:0]
:ens192_in - [0:0]
:ens192_mac - [0:0]
:ens192_out - [0:0]
:ess2bas - [0:0]
:ess2brg - [0:0]
:ess2cde - [0:0]
:ess2clu - [0:0]
:ess2fw - [0:0]
:ess2geov - [0:0]
:ess2loc - [0:0]
:ess2net - [0:0]
:ess2nginx - [0:0]
:ess2repo - [0:0]
:ess2vip - [0:0]
:ess2vpn - [0:0]
:ess2vrrp - [0:0]
:ess2wan - [0:0]
:ess_frwd - [0:0]
:fw2bas - [0:0]
:fw2brg - [0:0]
:fw2cde - [0:0]
:fw2clu - [0:0]
:fw2ess - [0:0]
:fw2fw - [0:0]
:fw2geov - [0:0]
:fw2loc - [0:0]
:fw2net - [0:0]
:fw2nginx - [0:0]
:fw2repo - [0:0]
:fw2vip - [0:0]
:fw2vpn - [0:0]
:fw2vrrp - [0:0]
:fw2wan - [0:0]
:geov2bas - [0:0]
:geov2brg - [0:0]
:geov2cde - [0:0]
:geov2clu - [0:0]
:geov2ess - [0:0]
:geov2fw - [0:0]
:geov2loc - [0:0]
:geov2net - [0:0]
:geov2nginx - [0:0]
:geov2repo - [0:0]
:geov2vip - [0:0]
:geov2vpn - [0:0]
:geov2vrrp - [0:0]
:geov2wan - [0:0]
:geov_frwd - [0:0]
:loc2bas - [0:0]
:loc2brg - [0:0]
:loc2cde - [0:0]
:loc2clu - [0:0]
:loc2ess - [0:0]
:loc2fw - [0:0]
:loc2geov - [0:0]
:loc2net - [0:0]
:loc2nginx - [0:0]
:loc2repo - [0:0]
:loc2vip - [0:0]
:loc2vpn - [0:0]
:loc2vrrp - [0:0]
:loc2wan - [0:0]
:loc_frwd - [0:0]
:logdrop - [0:0]
:logflags - [0:0]
:logreject - [0:0]
:net2bas - [0:0]
:net2brg - [0:0]
:net2cde - [0:0]
:net2clu - [0:0]
:net2ess - [0:0]
:net2fw - [0:0]
:net2geov - [0:0]
:net2loc - [0:0]
:net2nginx - [0:0]
:net2repo - [0:0]
:net2vip - [0:0]
:net2vpn - [0:0]
:net2vrrp - [0:0]
:net2wan - [0:0]
:net_frwd - [0:0]
:nginx2bas - [0:0]
:nginx2brg - [0:0]
:nginx2cde - [0:0]
:nginx2clu - [0:0]
:nginx2ess - [0:0]
:nginx2fw - [0:0]
:nginx2geov - [0:0]
:nginx2loc - [0:0]
:nginx2net - [0:0]
:nginx2repo - [0:0]
:nginx2vip - [0:0]
:nginx2vpn - [0:0]
:nginx2vrrp - [0:0]
:nginx2wan - [0:0]
:nginx_frwd - [0:0]
:reject - [0:0]
:repo2bas - [0:0]
:repo2brg - [0:0]
:repo2cde - [0:0]
:repo2clu - [0:0]
:repo2ess - [0:0]
:repo2fw - [0:0]
:repo2geov - [0:0]
:repo2loc - [0:0]
:repo2net - [0:0]
:repo2nginx - [0:0]
:repo2vip - [0:0]
:repo2vpn - [0:0]
:repo2vrrp - [0:0]
:repo2wan - [0:0]
:repo_frwd - [0:0]
:sha-lh-2f73cbe20578f5a3c5e7 - [0:0]
:sha-rh-a7cef495ee07ce0d0c8e - [0:0]
:shorewall - [0:0]
:smurflog - [0:0]
:smurfs - [0:0]
:tcpflags - [0:0]
:vip2bas - [0:0]
:vip2brg - [0:0]
:vip2cde - [0:0]
:vip2clu - [0:0]
:vip2ess - [0:0]
:vip2fw - [0:0]
:vip2geov - [0:0]
:vip2loc - [0:0]
:vip2net - [0:0]
:vip2nginx - [0:0]
:vip2repo - [0:0]
:vip2vpn - [0:0]
:vip2vrrp - [0:0]
:vip2wan - [0:0]
:vip_frwd - [0:0]
:vpn2bas - [0:0]
:vpn2brg - [0:0]
:vpn2cde - [0:0]
:vpn2clu - [0:0]
:vpn2ess - [0:0]
:vpn2fw - [0:0]
:vpn2geov - [0:0]
:vpn2loc - [0:0]
:vpn2net - [0:0]
:vpn2nginx - [0:0]
:vpn2repo - [0:0]
:vpn2vip - [0:0]
:vpn2vrrp - [0:0]
:vpn2wan - [0:0]
:vpn_frwd - [0:0]
:vrrp2bas - [0:0]
:vrrp2brg - [0:0]
:vrrp2cde - [0:0]
:vrrp2clu - [0:0]
:vrrp2ess - [0:0]
:vrrp2fw - [0:0]
:vrrp2geov - [0:0]
:vrrp2loc - [0:0]
:vrrp2net - [0:0]
:vrrp2nginx - [0:0]
:vrrp2repo - [0:0]
:vrrp2vip - [0:0]
:vrrp2vpn - [0:0]
:vrrp2wan - [0:0]
:vrrp_frwd - [0:0]
:wan2bas - [0:0]
:wan2brg - [0:0]
:wan2cde - [0:0]
:wan2clu - [0:0]
:wan2ess - [0:0]
:wan2fw - [0:0]
:wan2geov - [0:0]
:wan2loc - [0:0]
:wan2net - [0:0]
:wan2nginx - [0:0]
:wan2repo - [0:0]
:wan2vip - [0:0]
:wan2vpn - [0:0]
:wan2vrrp - [0:0]
:wan_frwd - [0:0]
-A INPUT -i ens160 -j wan2fw
-A INPUT -i ens192 -j ens192_in
-A INPUT -i docker0 -j brg2fw
-A INPUT -i docker_gwbridge -j docker_gwbridge_in
-A INPUT -i lo -j ACCEPT
-A INPUT -m addrtype --dst-type BROADCAST -j DROP
-A INPUT -m addrtype --dst-type ANYCAST -j DROP
-A INPUT -m addrtype --dst-type MULTICAST -j DROP
-A INPUT -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:INPUT:DROP:" --log-level 6
-A INPUT -j DROP
-A FORWARD -j DOCKER-INGRESS
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-ISOLATION
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A FORWARD -i ens160 -j wan_frwd
-A FORWARD -i ens192 -j ens192_fwd
-A FORWARD -i docker0 -j brg_frwd
-A FORWARD -i docker_gwbridge -j docker_gwbridge_fwd
-A FORWARD -m addrtype --dst-type BROADCAST -j DROP
-A FORWARD -m addrtype --dst-type ANYCAST -j DROP
-A FORWARD -m addrtype --dst-type MULTICAST -j DROP
-A FORWARD -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:FORWARD:DROP:" --log-level 6
-A FORWARD -j DROP
-A OUTPUT -j DOCKER
-A OUTPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -o ens160 -j fw2wan
-A OUTPUT -o ens192 -j ens192_out
-A OUTPUT -o docker0 -j fw2brg
-A OUTPUT -o docker_gwbridge -j docker_gwbridge_out
-A OUTPUT -o lo -j fw2fw
-A OUTPUT -m addrtype --dst-type BROADCAST -j DROP
-A OUTPUT -m addrtype --dst-type ANYCAST -j DROP
-A OUTPUT -m addrtype --dst-type MULTICAST -j DROP
-A OUTPUT -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:OUTPUT:DROP:" --log-level 6
-A OUTPUT -j DROP
-A DOCKER -d 172.17.0.3/32 ! -i docker0 -o docker0 -p tcp -m tcp --dport 9153 -j ACCEPT
-A DOCKER -d 172.17.0.3/32 ! -i docker0 -o docker0 -p tcp -m tcp --dport 53 -j ACCEPT
-A DOCKER -d 172.17.0.3/32 ! -i docker0 -o docker0 -p udp -m udp --dport 53 -j ACCEPT
-A DOCKER -d 172.17.0.5/32 ! -i docker0 -o docker0 -p tcp -m tcp --dport 443 -j ACCEPT
-A DOCKER -d 172.17.0.5/32 ! -i docker0 -o docker0 -p tcp -m tcp --dport 1194 -j ACCEPT
-A DOCKER -d 172.17.0.5/32 ! -i docker0 -o docker0 -p tcp -m tcp --dport 80 -j ACCEPT
-A _bas2brg -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_bas2brg::" --log-level 6
-A _bas2cde -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_bas2cde::" --log-level 6
-A _bas2clu -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_bas2clu::" --log-level 6
-A _bas2ess -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_bas2ess::" --log-level 6
-A _bas2fw -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_bas2fw::" --log-level 6
-A _bas2geov -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_bas2geov::" --log-level 6
-A _bas2loc -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_bas2loc::" --log-level 6
-A _bas2net -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_bas2net::" --log-level 6
-A _bas2nginx -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_bas2nginx::" --log-level 6
-A _bas2repo -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_bas2repo::" --log-level 6
-A _bas2vip -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_bas2vip::" --log-level 6
-A _bas2vpn -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_bas2vpn::" --log-level 6
-A _bas2vrrp -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_bas2vrrp::" --log-level 6
-A _bas2wan -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_bas2wan::" --log-level 6
-A _brg2bas -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_brg2bas::" --log-level 6
-A _brg2cde -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_brg2cde::" --log-level 6
-A _brg2clu -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_brg2clu::" --log-level 6
-A _brg2ess -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_brg2ess::" --log-level 6
-A _brg2fw -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_brg2fw::" --log-level 6
-A _brg2geov -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_brg2geov::" --log-level 6
-A _brg2loc -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_brg2loc::" --log-level 6
-A _brg2net -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_brg2net::" --log-level 6
-A _brg2nginx -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_brg2nginx::" --log-level 6
-A _brg2repo -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_brg2repo::" --log-level 6
-A _brg2vip -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_brg2vip::" --log-level 6
-A _brg2vpn -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_brg2vpn::" --log-level 6
-A _brg2vrrp -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_brg2vrrp::" --log-level 6
-A _brg2wan -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_brg2wan::" --log-level 6
-A _cde2bas -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_cde2bas::" --log-level 6
-A _cde2brg -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_cde2brg::" --log-level 6
-A _cde2clu -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_cde2clu::" --log-level 6
-A _cde2ess -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_cde2ess::" --log-level 6
-A _cde2fw -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_cde2fw::" --log-level 6
-A _cde2geov -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_cde2geov::" --log-level 6
-A _cde2loc -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_cde2loc::" --log-level 6
-A _cde2net -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_cde2net::" --log-level 6
-A _cde2nginx -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_cde2nginx::" --log-level 6
-A _cde2repo -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_cde2repo::" --log-level 6
-A _cde2vip -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_cde2vip::" --log-level 6
-A _cde2vpn -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_cde2vpn::" --log-level 6
-A _cde2vrrp -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_cde2vrrp::" --log-level 6
-A _cde2wan -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_cde2wan::" --log-level 6
-A _clu2bas -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_clu2bas::" --log-level 6
-A _clu2brg -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_clu2brg::" --log-level 6
-A _clu2cde -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_clu2cde::" --log-level 6
-A _clu2ess -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_clu2ess::" --log-level 6
-A _clu2fw -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_clu2fw::" --log-level 6
-A _clu2geov -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_clu2geov::" --log-level 6
-A _clu2loc -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_clu2loc::" --log-level 6
-A _clu2net -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_clu2net::" --log-level 6
-A _clu2nginx -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_clu2nginx::" --log-level 6
-A _clu2repo -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_clu2repo::" --log-level 6
-A _clu2vip -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_clu2vip::" --log-level 6
-A _clu2vpn -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_clu2vpn::" --log-level 6
-A _clu2vrrp -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_clu2vrrp::" --log-level 6
-A _clu2wan -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_clu2wan::" --log-level 6
-A _ess2bas -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_ess2bas::" --log-level 6
-A _ess2brg -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_ess2brg::" --log-level 6
-A _ess2cde -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_ess2cde::" --log-level 6
-A _ess2clu -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_ess2clu::" --log-level 6
-A _ess2fw -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_ess2fw::" --log-level 6
-A _ess2geov -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_ess2geov::" --log-level 6
-A _ess2loc -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_ess2loc::" --log-level 6
-A _ess2net -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_ess2net::" --log-level 6
-A _ess2nginx -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_ess2nginx::" --log-level 6
-A _ess2repo -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_ess2repo::" --log-level 6
-A _ess2vip -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_ess2vip::" --log-level 6
-A _ess2vpn -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_ess2vpn::" --log-level 6
-A _ess2vrrp -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_ess2vrrp::" --log-level 6
-A _ess2wan -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_ess2wan::" --log-level 6
-A _fw2bas -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_fw2bas::" --log-level 6
-A _fw2brg -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_fw2brg::" --log-level 6
-A _fw2cde -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_fw2cde::" --log-level 6
-A _fw2clu -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_fw2clu::" --log-level 6
-A _fw2ess -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_fw2ess::" --log-level 6
-A _fw2fw -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_fw2fw::" --log-level 6
-A _fw2geov -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_fw2geov::" --log-level 6
-A _fw2loc -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_fw2loc::" --log-level 6
-A _fw2net -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_fw2net::" --log-level 6
-A _fw2nginx -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_fw2nginx::" --log-level 6
-A _fw2repo -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_fw2repo::" --log-level 6
-A _fw2vip -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_fw2vip::" --log-level 6
-A _fw2vpn -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_fw2vpn::" --log-level 6
-A _fw2vrrp -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_fw2vrrp::" --log-level 6
-A _fw2wan -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_fw2wan::" --log-level 6
-A _geov2bas -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_geov2bas::" --log-level 6
-A _geov2brg -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_geov2brg::" --log-level 6
-A _geov2cde -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_geov2cde::" --log-level 6
-A _geov2clu -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_geov2clu::" --log-level 6
-A _geov2ess -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_geov2ess::" --log-level 6
-A _geov2fw -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_geov2fw::" --log-level 6
-A _geov2loc -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_geov2loc::" --log-level 6
-A _geov2net -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_geov2net::" --log-level 6
-A _geov2nginx -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_geov2nginx::" --log-level 6
-A _geov2repo -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_geov2repo::" --log-level 6
-A _geov2vip -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_geov2vip::" --log-level 6
-A _geov2vpn -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_geov2vpn::" --log-level 6
-A _geov2vrrp -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_geov2vrrp::" --log-level 6
-A _geov2wan -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_geov2wan::" --log-level 6
-A _loc2bas -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_loc2bas::" --log-level 6
-A _loc2brg -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_loc2brg::" --log-level 6
-A _loc2cde -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_loc2cde::" --log-level 6
-A _loc2clu -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_loc2clu::" --log-level 6
-A _loc2ess -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_loc2ess::" --log-level 6
-A _loc2fw -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_loc2fw::" --log-level 6
-A _loc2geov -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_loc2geov::" --log-level 6
-A _loc2net -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_loc2net::" --log-level 6
-A _loc2nginx -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_loc2nginx::" --log-level 6
-A _loc2repo -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_loc2repo::" --log-level 6
-A _loc2vip -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_loc2vip::" --log-level 6
-A _loc2vpn -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_loc2vpn::" --log-level 6
-A _loc2vrrp -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_loc2vrrp::" --log-level 6
-A _loc2wan -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_loc2wan::" --log-level 6
-A _net2bas -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_net2bas::" --log-level 6
-A _net2brg -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_net2brg::" --log-level 6
-A _net2cde -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_net2cde::" --log-level 6
-A _net2clu -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_net2clu::" --log-level 6
-A _net2ess -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_net2ess::" --log-level 6
-A _net2fw -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_net2fw::" --log-level 6
-A _net2geov -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_net2geov::" --log-level 6
-A _net2loc -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_net2loc::" --log-level 6
-A _net2nginx -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_net2nginx::" --log-level 6
-A _net2repo -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_net2repo::" --log-level 6
-A _net2vip -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_net2vip::" --log-level 6
-A _net2vpn -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_net2vpn::" --log-level 6
-A _net2vrrp -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_net2vrrp::" --log-level 6
-A _net2wan -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_net2wan::" --log-level 6
-A _nginx2bas -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_nginx2bas::" --log-level 6
-A _nginx2brg -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_nginx2brg::" --log-level 6
-A _nginx2cde -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_nginx2cde::" --log-level 6
-A _nginx2clu -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_nginx2clu::" --log-level 6
-A _nginx2ess -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_nginx2ess::" --log-level 6
-A _nginx2fw -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_nginx2fw::" --log-level 6
-A _nginx2geov -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_nginx2geov::" --log-level 6
-A _nginx2loc -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_nginx2loc::" --log-level 6
-A _nginx2net -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_nginx2net::" --log-level 6
-A _nginx2repo -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_nginx2repo::" --log-level 6
-A _nginx2vip -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_nginx2vip::" --log-level 6
-A _nginx2vpn -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_nginx2vpn::" --log-level 6
-A _nginx2vrrp -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_nginx2vrrp::" --log-level 6
-A _nginx2wan -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_nginx2wan::" --log-level 6
-A _repo2bas -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_repo2bas::" --log-level 6
-A _repo2brg -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_repo2brg::" --log-level 6
-A _repo2cde -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_repo2cde::" --log-level 6
-A _repo2clu -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_repo2clu::" --log-level 6
-A _repo2ess -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_repo2ess::" --log-level 6
-A _repo2fw -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_repo2fw::" --log-level 6
-A _repo2geov -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_repo2geov::" --log-level 6
-A _repo2loc -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_repo2loc::" --log-level 6
-A _repo2net -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_repo2net::" --log-level 6
-A _repo2nginx -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_repo2nginx::" --log-level 6
-A _repo2vip -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_repo2vip::" --log-level 6
-A _repo2vpn -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_repo2vpn::" --log-level 6
-A _repo2vrrp -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_repo2vrrp::" --log-level 6
-A _repo2wan -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_repo2wan::" --log-level 6
-A _vip2bas -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_vip2bas::" --log-level 6
-A _vip2brg -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_vip2brg::" --log-level 6
-A _vip2cde -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_vip2cde::" --log-level 6
-A _vip2clu -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_vip2clu::" --log-level 6
-A _vip2ess -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_vip2ess::" --log-level 6
-A _vip2fw -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_vip2fw::" --log-level 6
-A _vip2geov -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_vip2geov::" --log-level 6
-A _vip2loc -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_vip2loc::" --log-level 6
-A _vip2net -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_vip2net::" --log-level 6
-A _vip2nginx -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_vip2nginx::" --log-level 6
-A _vip2repo -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_vip2repo::" --log-level 6
-A _vip2vpn -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_vip2vpn::" --log-level 6
-A _vip2vrrp -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_vip2vrrp::" --log-level 6
-A _vip2wan -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_vip2wan::" --log-level 6
-A _vpn2bas -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_vpn2bas::" --log-level 6
-A _vpn2brg -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_vpn2brg::" --log-level 6
-A _vpn2cde -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_vpn2cde::" --log-level 6
-A _vpn2clu -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_vpn2clu::" --log-level 6
-A _vpn2ess -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_vpn2ess::" --log-level 6
-A _vpn2fw -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_vpn2fw::" --log-level 6
-A _vpn2geov -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_vpn2geov::" --log-level 6
-A _vpn2loc -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_vpn2loc::" --log-level 6
-A _vpn2net -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_vpn2net::" --log-level 6
-A _vpn2nginx -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_vpn2nginx::" --log-level 6
-A _vpn2repo -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_vpn2repo::" --log-level 6
-A _vpn2vip -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_vpn2vip::" --log-level 6
-A _vpn2vrrp -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_vpn2vrrp::" --log-level 6
-A _vpn2wan -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_vpn2wan::" --log-level 6
-A _vrrp2bas -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_vrrp2bas::" --log-level 6
-A _vrrp2brg -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_vrrp2brg::" --log-level 6
-A _vrrp2cde -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_vrrp2cde::" --log-level 6
-A _vrrp2clu -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_vrrp2clu::" --log-level 6
-A _vrrp2ess -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_vrrp2ess::" --log-level 6
-A _vrrp2fw -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_vrrp2fw::" --log-level 6
-A _vrrp2geov -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_vrrp2geov::" --log-level 6
-A _vrrp2loc -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_vrrp2loc::" --log-level 6
-A _vrrp2net -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_vrrp2net::" --log-level 6
-A _vrrp2nginx -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_vrrp2nginx::" --log-level 6
-A _vrrp2repo -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_vrrp2repo::" --log-level 6
-A _vrrp2vip -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_vrrp2vip::" --log-level 6
-A _vrrp2vpn -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_vrrp2vpn::" --log-level 6
-A _vrrp2wan -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_vrrp2wan::" --log-level 6
-A _wan2bas -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_wan2bas::" --log-level 6
-A _wan2brg -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_wan2brg::" --log-level 6
-A _wan2cde -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_wan2cde::" --log-level 6
-A _wan2clu -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_wan2clu::" --log-level 6
-A _wan2ess -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_wan2ess::" --log-level 6
-A _wan2fw -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_wan2fw::" --log-level 6
-A _wan2geov -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_wan2geov::" --log-level 6
-A _wan2loc -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_wan2loc::" --log-level 6
-A _wan2net -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_wan2net::" --log-level 6
-A _wan2nginx -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_wan2nginx::" --log-level 6
-A _wan2repo -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_wan2repo::" --log-level 6
-A _wan2vip -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_wan2vip::" --log-level 6
-A _wan2vpn -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_wan2vpn::" --log-level 6
-A _wan2vrrp -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:_wan2vrrp::" --log-level 6
-A bas2brg -m conntrack --ctstate INVALID -j _bas2brg
-A bas2brg -m addrtype --dst-type BROADCAST -j DROP
-A bas2brg -m addrtype --dst-type ANYCAST -j DROP
-A bas2brg -m addrtype --dst-type MULTICAST -j DROP
-A bas2brg -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:bas2brg:DROP:" --log-level 6
-A bas2brg -j DROP
-A bas2cde -m conntrack --ctstate INVALID -j _bas2cde
-A bas2cde -m addrtype --dst-type BROADCAST -j DROP
-A bas2cde -m addrtype --dst-type ANYCAST -j DROP
-A bas2cde -m addrtype --dst-type MULTICAST -j DROP
-A bas2cde -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:bas2cde:DROP:" --log-level 6
-A bas2cde -j DROP
-A bas2clu -m conntrack --ctstate INVALID -j _bas2clu
-A bas2clu -m addrtype --dst-type BROADCAST -j DROP
-A bas2clu -m addrtype --dst-type ANYCAST -j DROP
-A bas2clu -m addrtype --dst-type MULTICAST -j DROP
-A bas2clu -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:bas2clu:DROP:" --log-level 6
-A bas2clu -j DROP
-A bas2ess -m conntrack --ctstate INVALID -j _bas2ess
-A bas2ess -m addrtype --dst-type BROADCAST -j DROP
-A bas2ess -m addrtype --dst-type ANYCAST -j DROP
-A bas2ess -m addrtype --dst-type MULTICAST -j DROP
-A bas2ess -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:bas2ess:DROP:" --log-level 6
-A bas2ess -j DROP
-A bas2fw -m conntrack --ctstate INVALID -j _bas2fw
-A bas2fw -p icmp -j ACCEPT
-A bas2fw -p tcp -m tcp --dport 22 -j ACCEPT
-A bas2fw -p tcp -m tcp --dport 11443 -j ACCEPT
-A bas2fw -p tcp -m tcp --dport 22 -j ACCEPT
-A bas2fw -p tcp -m tcp --dport 22 -j ACCEPT
-A bas2fw -s 10.0.0.0/8 -j DROP
-A bas2fw -s 172.16.0.0/12 -j DROP
-A bas2fw -s 192.168.0.0/16 -j DROP
-A bas2fw -s 169.254.0.0/16 -j DROP
-A bas2fw -s 0.0.0.0/8 -j DROP
-A bas2fw -s 127.0.0.0/8 -j DROP
-A bas2fw -s 240.0.0.0/4 -j DROP
-A bas2fw -s 255.255.255.255/32 -j DROP
-A bas2fw -s 192.0.2.0/24 -j DROP
-A bas2fw -s 100.64.0.0/10 -j DROP
-A bas2fw -s 192.0.0.0/24 -j DROP
-A bas2fw -s 198.18.0.0/15 -j DROP
-A bas2fw -s 198.51.100.0/24 -j DROP
-A bas2fw -s 203.0.113.0/24 -j DROP
-A bas2fw -s 224.0.0.0/4 -j DROP
-A bas2fw -p icmp -m icmp --icmp-type 8 -m hashlimit --hashlimit-upto 2/sec --hashlimit-burst 5 --hashlimit-mode srcip --hashlimit-name shorewall4 -m comment --comment Ping -j ACCEPT
-A bas2fw -p icmp -m icmp --icmp-type 3/4 -j ACCEPT
-A bas2fw -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A bas2fw -p icmp -m icmp --icmp-type 11 -j ACCEPT
-A bas2fw -p udp -m udp --dport 33434:33529 -j ACCEPT
-A bas2fw -p tcp -m tcp --dport 23 -j DROP
-A bas2fw -p icmp -m hashlimit --hashlimit-upto 2/sec --hashlimit-burst 5 --hashlimit-mode srcip --hashlimit-name shorewall12 -j ACCEPT
-A bas2fw -p tcp -m tcp --dport 22 -j ACCEPT
-A bas2fw -p icmp -m hashlimit --hashlimit-upto 2/sec --hashlimit-burst 5 --hashlimit-mode srcip --hashlimit-name shorewall26 -j ACCEPT
-A bas2fw -p tcp -m tcp --dport 9103 -j DROP
-A bas2fw -p tcp -m tcp --dport 8080 -j DROP
-A bas2fw -p tcp -m tcp --dport 22 -j ACCEPT
-A bas2fw -m addrtype --dst-type BROADCAST -j DROP
-A bas2fw -m addrtype --dst-type ANYCAST -j DROP
-A bas2fw -m addrtype --dst-type MULTICAST -j DROP
-A bas2fw -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:bas2fw:DROP:" --log-level 6
-A bas2fw -j DROP
-A bas2geov -m conntrack --ctstate INVALID -j _bas2geov
-A bas2geov -m addrtype --dst-type BROADCAST -j DROP
-A bas2geov -m addrtype --dst-type ANYCAST -j DROP
-A bas2geov -m addrtype --dst-type MULTICAST -j DROP
-A bas2geov -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:bas2geov:DROP:" --log-level 6
-A bas2geov -j DROP
-A bas2loc -m conntrack --ctstate INVALID -j _bas2loc
-A bas2loc -m addrtype --dst-type BROADCAST -j DROP
-A bas2loc -m addrtype --dst-type ANYCAST -j DROP
-A bas2loc -m addrtype --dst-type MULTICAST -j DROP
-A bas2loc -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:bas2loc:DROP:" --log-level 6
-A bas2loc -j DROP
-A bas2net -m conntrack --ctstate INVALID -j _bas2net
-A bas2net -m addrtype --dst-type BROADCAST -j DROP
-A bas2net -m addrtype --dst-type ANYCAST -j DROP
-A bas2net -m addrtype --dst-type MULTICAST -j DROP
-A bas2net -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:bas2net:DROP:" --log-level 6
-A bas2net -j DROP
-A bas2nginx -m conntrack --ctstate INVALID -j _bas2nginx
-A bas2nginx -p tcp -m tcp --dport 11443 -j ACCEPT
-A bas2nginx -p tcp -m tcp --dport 6101 -j DROP
-A bas2nginx -p tcp -m tcp --dport 3100 -j DROP
-A bas2nginx -p tcp -m tcp --dport 4100 -j DROP
-A bas2nginx -p tcp -m tcp --dport 5100 -j DROP
-A bas2nginx -p tcp -m tcp --dport 8100 -j DROP
-A bas2nginx -p tcp -m tcp --dport 9100 -j DROP
-A bas2nginx -p tcp -m tcp --dport 4101 -j DROP
-A bas2nginx -p tcp -m tcp --dport 8022 -j DROP
-A bas2nginx -p tcp -m tcp --dport 7657 -j DROP
-A bas2nginx -p tcp -m tcp --dport 5104 -j DROP
-A bas2nginx -p tcp -m tcp --dport 5204 -j DROP
-A bas2nginx -p tcp -m tcp --dport 5304 -j DROP
-A bas2nginx -p tcp -m tcp --dport 5602 -j DROP
-A bas2nginx -p tcp -m tcp --dport 9702 -j DROP
-A bas2nginx -p tcp -m tcp --dport 4740 -j DROP
-A bas2nginx -p tcp -m tcp --dport 5052 -j DROP
-A bas2nginx -p tcp -m tcp --dport 3202 -j DROP
-A bas2nginx -p tcp -m tcp --dport 9003 -j DROP
-A bas2nginx -p tcp -m tcp --dport 8803 -j DROP
-A bas2nginx -p tcp -m tcp --dport 9997 -j DROP
-A bas2nginx -p tcp -m tcp --dport 9101 -j DROP
-A bas2nginx -p tcp -m tcp --dport 5070 -j DROP
-A bas2nginx -p tcp -m tcp --dport 3001 -j DROP
-A bas2nginx -p tcp -m tcp --dport 9090 -j DROP
-A bas2nginx -p tcp -m tcp --dport 9093 -j DROP
-A bas2nginx -p tcp -m tcp --dport 5606 -j DROP
-A bas2nginx -m addrtype --dst-type BROADCAST -j DROP
-A bas2nginx -m addrtype --dst-type ANYCAST -j DROP
-A bas2nginx -m addrtype --dst-type MULTICAST -j DROP
-A bas2nginx -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:bas2nginx:DROP:" --log-level 6
-A bas2nginx -j DROP
-A bas2repo -m conntrack --ctstate INVALID -j _bas2repo
-A bas2repo -m addrtype --dst-type BROADCAST -j DROP
-A bas2repo -m addrtype --dst-type ANYCAST -j DROP
-A bas2repo -m addrtype --dst-type MULTICAST -j DROP
-A bas2repo -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:bas2repo:DROP:" --log-level 6
-A bas2repo -j DROP
-A bas2vip -m conntrack --ctstate INVALID -j _bas2vip
-A bas2vip -m addrtype --dst-type BROADCAST -j DROP
-A bas2vip -m addrtype --dst-type ANYCAST -j DROP
-A bas2vip -m addrtype --dst-type MULTICAST -j DROP
-A bas2vip -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:bas2vip:DROP:" --log-level 6
-A bas2vip -j DROP
-A bas2vpn -m conntrack --ctstate INVALID -j _bas2vpn
-A bas2vpn -m addrtype --dst-type BROADCAST -j DROP
-A bas2vpn -m addrtype --dst-type ANYCAST -j DROP
-A bas2vpn -m addrtype --dst-type MULTICAST -j DROP
-A bas2vpn -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:bas2vpn:DROP:" --log-level 6
-A bas2vpn -j DROP
-A bas2vrrp -m conntrack --ctstate INVALID -j _bas2vrrp
-A bas2vrrp -m addrtype --dst-type BROADCAST -j DROP
-A bas2vrrp -m addrtype --dst-type ANYCAST -j DROP
-A bas2vrrp -m addrtype --dst-type MULTICAST -j DROP
-A bas2vrrp -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:bas2vrrp:DROP:" --log-level 6
-A bas2vrrp -j DROP
-A bas2wan -m conntrack --ctstate INVALID -j _bas2wan
-A bas2wan -m addrtype --dst-type BROADCAST -j DROP
-A bas2wan -m addrtype --dst-type ANYCAST -j DROP
-A bas2wan -m addrtype --dst-type MULTICAST -j DROP
-A bas2wan -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:bas2wan:DROP:" --log-level 6
-A bas2wan -j DROP
-A bas_frwd -o ens160 -j bas2wan
-A bas_frwd -d 172.16.1.3/32 -o ens192 -j bas2nginx
-A bas_frwd -d 172.16.1.2/32 -o ens192 -j bas2nginx
-A bas_frwd -d 172.16.1.1/32 -o ens192 -j bas2nginx
-A bas_frwd -d 172.16.1.10/32 -o ens192 -j bas2repo
-A bas_frwd -d 172.16.1.5/32 -o ens192 -j bas2vrrp
-A bas_frwd -d 172.16.1.4/32 -o ens192 -j bas2vrrp
-A bas_frwd -d 172.16.1.100/32 -o ens192 -j bas2vip
-A bas_frwd -d 172.16.1.6/32 -o ens192 -j bas2cde
-A bas_frwd -d 172.16.1.7/32 -o ens192 -j bas2cde
-A bas_frwd -d 172.16.1.8/32 -o ens192 -j bas2cde
-A bas_frwd -d 172.16.1.3/32 -o ens192 -j bas2clu
-A bas_frwd -d 172.16.1.2/32 -o ens192 -j bas2clu
-A bas_frwd -d 172.16.1.1/32 -o ens192 -j bas2clu
-A bas_frwd -o ens192 -j bas2net
-A bas_frwd -o docker0 -j bas2brg
-A bas_frwd -d 10.255.0.0/16 -o docker_gwbridge -j bas2ess
-A bas_frwd -d 10.0.3.0/24 -o docker_gwbridge -j bas2vpn
-A bas_frwd -d 10.0.0.0/24 -o docker_gwbridge -j bas2loc
-A bas_frwd -o docker_gwbridge -j bas2geov
-A brg2bas -m conntrack --ctstate INVALID -j _brg2bas
-A brg2bas -j ACCEPT
-A brg2cde -m conntrack --ctstate INVALID -j _brg2cde
-A brg2cde -j ACCEPT
-A brg2clu -m conntrack --ctstate INVALID -j _brg2clu
-A brg2clu -j ACCEPT
-A brg2ess -m conntrack --ctstate INVALID -j _brg2ess
-A brg2ess -j ACCEPT
-A brg2fw -m conntrack --ctstate INVALID,NEW,UNTRACKED -j dynamic
-A brg2fw -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A brg2fw -p tcp -j tcpflags
-A brg2fw -m conntrack --ctstate INVALID -j _brg2fw
-A brg2fw -p icmp -j ACCEPT
-A brg2fw -s 10.0.0.0/8 -j DROP
-A brg2fw -s 172.16.0.0/12 -j DROP
-A brg2fw -s 192.168.0.0/16 -j DROP
-A brg2fw -s 169.254.0.0/16 -j DROP
-A brg2fw -s 0.0.0.0/8 -j DROP
-A brg2fw -s 127.0.0.0/8 -j DROP
-A brg2fw -s 240.0.0.0/4 -j DROP
-A brg2fw -s 255.255.255.255/32 -j DROP
-A brg2fw -s 192.0.2.0/24 -j DROP
-A brg2fw -s 100.64.0.0/10 -j DROP
-A brg2fw -s 192.0.0.0/24 -j DROP
-A brg2fw -s 198.18.0.0/15 -j DROP
-A brg2fw -s 198.51.100.0/24 -j DROP
-A brg2fw -s 203.0.113.0/24 -j DROP
-A brg2fw -s 224.0.0.0/4 -j DROP
-A brg2fw -p icmp -m icmp --icmp-type 8 -m hashlimit --hashlimit-upto 2/sec --hashlimit-burst 5 --hashlimit-mode srcip --hashlimit-name shorewall9 -m comment --comment Ping -j ACCEPT
-A brg2fw -p icmp -m icmp --icmp-type 3/4 -j ACCEPT
-A brg2fw -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A brg2fw -p icmp -m icmp --icmp-type 11 -j ACCEPT
-A brg2fw -p udp -m udp --dport 33434:33529 -j ACCEPT
-A brg2fw -p tcp -m tcp --dport 23 -j DROP
-A brg2fw -p icmp -m hashlimit --hashlimit-upto 2/sec --hashlimit-burst 5 --hashlimit-mode srcip --hashlimit-name shorewall19 -j ACCEPT
-A brg2fw -p tcp -m tcp --dport 22 -j ACCEPT
-A brg2fw -p icmp -m hashlimit --hashlimit-upto 2/sec --hashlimit-burst 5 --hashlimit-mode srcip --hashlimit-name shorewall33 -j ACCEPT
-A brg2fw -p tcp -m tcp --dport 9103 -j DROP
-A brg2fw -p tcp -m tcp --dport 8080 -j DROP
-A brg2fw -p tcp -m tcp --dport 22 -j ACCEPT
-A brg2fw -p tcp -m tcp --dport 53 -j ACCEPT
-A brg2fw -p udp -m udp --dport 53 -j ACCEPT
-A brg2fw -m addrtype --dst-type BROADCAST -j DROP
-A brg2fw -m addrtype --dst-type ANYCAST -j DROP
-A brg2fw -m addrtype --dst-type MULTICAST -j DROP
-A brg2fw -g reject
-A brg2geov -m conntrack --ctstate INVALID -j _brg2geov
-A brg2geov -j ACCEPT
-A brg2loc -m conntrack --ctstate INVALID -j _brg2loc
-A brg2loc -j ACCEPT
-A brg2net -m conntrack --ctstate INVALID -j _brg2net
-A brg2net -j ACCEPT
-A brg2nginx -m conntrack --ctstate INVALID -j _brg2nginx
-A brg2nginx -p tcp -m tcp --dport 6101 -j DROP
-A brg2nginx -p tcp -m tcp --dport 3100 -j DROP
-A brg2nginx -p tcp -m tcp --dport 4100 -j DROP
-A brg2nginx -p tcp -m tcp --dport 5100 -j DROP
-A brg2nginx -p tcp -m tcp --dport 8100 -j DROP
-A brg2nginx -p tcp -m tcp --dport 9100 -j DROP
-A brg2nginx -p tcp -m tcp --dport 4101 -j DROP
-A brg2nginx -p tcp -m tcp --dport 8022 -j DROP
-A brg2nginx -p tcp -m tcp --dport 7657 -j DROP
-A brg2nginx -p tcp -m tcp --dport 5104 -j DROP
-A brg2nginx -p tcp -m tcp --dport 5204 -j DROP
-A brg2nginx -p tcp -m tcp --dport 5304 -j DROP
-A brg2nginx -p tcp -m tcp --dport 5602 -j DROP
-A brg2nginx -p tcp -m tcp --dport 9702 -j DROP
-A brg2nginx -p tcp -m tcp --dport 4740 -j DROP
-A brg2nginx -p tcp -m tcp --dport 5052 -j DROP
-A brg2nginx -p tcp -m tcp --dport 3202 -j DROP
-A brg2nginx -p tcp -m tcp --dport 9003 -j DROP
-A brg2nginx -p tcp -m tcp --dport 8803 -j DROP
-A brg2nginx -p tcp -m tcp --dport 9997 -j DROP
-A brg2nginx -p tcp -m tcp --dport 9101 -j DROP
-A brg2nginx -p tcp -m tcp --dport 5070 -j DROP
-A brg2nginx -p tcp -m tcp --dport 3001 -j DROP
-A brg2nginx -p tcp -m tcp --dport 9090 -j DROP
-A brg2nginx -p tcp -m tcp --dport 9093 -j DROP
-A brg2nginx -p tcp -m tcp --dport 5606 -j DROP
-A brg2nginx -j ACCEPT
-A brg2repo -m conntrack --ctstate INVALID -j _brg2repo
-A brg2repo -j ACCEPT
-A brg2vip -m conntrack --ctstate INVALID -j _brg2vip
-A brg2vip -j ACCEPT
-A brg2vpn -m conntrack --ctstate INVALID -j _brg2vpn
-A brg2vpn -j ACCEPT
-A brg2vrrp -m conntrack --ctstate INVALID -j _brg2vrrp
-A brg2vrrp -p tcp -m tcp --dport 53 -j ACCEPT
-A brg2vrrp -p udp -m udp --dport 53 -j ACCEPT
-A brg2vrrp -j ACCEPT
-A brg2wan -m conntrack --ctstate INVALID -j _brg2wan
-A brg2wan -p tcp -m tcp --dport 53 -j ACCEPT
-A brg2wan -p udp -m udp --dport 53 -j ACCEPT
-A brg2wan -d 8.8.8.8/32 -p tcp -m tcp --dport 53 -j ACCEPT
-A brg2wan -d 8.8.4.4/32 -p tcp -m tcp --dport 53 -j ACCEPT
-A brg2wan -d 195.54.210.26/32 -p tcp -m tcp --dport 53 -j ACCEPT
-A brg2wan -d 8.8.8.8/32 -p udp -m udp --dport 53 -j ACCEPT
-A brg2wan -d 8.8.4.4/32 -p udp -m udp --dport 53 -j ACCEPT
-A brg2wan -d 195.54.210.26/32 -p udp -m udp --dport 53 -j ACCEPT
-A brg2wan -j ACCEPT
-A brg_frwd -m conntrack --ctstate INVALID,NEW,UNTRACKED -j dynamic
-A brg_frwd -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A brg_frwd -p tcp -j tcpflags
-A brg_frwd -o ens160 -j brg2wan
-A brg_frwd -d 172.16.1.3/32 -o ens192 -j brg2nginx
-A brg_frwd -d 172.16.1.2/32 -o ens192 -j brg2nginx
-A brg_frwd -d 172.16.1.1/32 -o ens192 -j brg2nginx
-A brg_frwd -d 172.16.1.9/32 -o ens192 -j brg2bas
-A brg_frwd -d 172.16.1.10/32 -o ens192 -j brg2repo
-A brg_frwd -d 172.16.1.5/32 -o ens192 -j brg2vrrp
-A brg_frwd -d 172.16.1.4/32 -o ens192 -j brg2vrrp
-A brg_frwd -d 172.16.1.100/32 -o ens192 -j brg2vip
-A brg_frwd -d 172.16.1.6/32 -o ens192 -j brg2cde
-A brg_frwd -d 172.16.1.7/32 -o ens192 -j brg2cde
-A brg_frwd -d 172.16.1.8/32 -o ens192 -j brg2cde
-A brg_frwd -d 172.16.1.3/32 -o ens192 -j brg2clu
-A brg_frwd -d 172.16.1.2/32 -o ens192 -j brg2clu
-A brg_frwd -d 172.16.1.1/32 -o ens192 -j brg2clu
-A brg_frwd -o ens192 -j brg2net
-A brg_frwd -o docker0 -j ACCEPT
-A brg_frwd -d 10.255.0.0/16 -o docker_gwbridge -j brg2ess
-A brg_frwd -d 10.0.3.0/24 -o docker_gwbridge -j brg2vpn
-A brg_frwd -d 10.0.0.0/24 -o docker_gwbridge -j brg2loc
-A brg_frwd -o docker_gwbridge -j brg2geov
-A cde2bas -m conntrack --ctstate INVALID -j _cde2bas
-A cde2bas -m addrtype --dst-type BROADCAST -j DROP
-A cde2bas -m addrtype --dst-type ANYCAST -j DROP
-A cde2bas -m addrtype --dst-type MULTICAST -j DROP
-A cde2bas -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:cde2bas:DROP:" --log-level 6
-A cde2bas -j DROP
-A cde2brg -m conntrack --ctstate INVALID -j _cde2brg
-A cde2brg -m addrtype --dst-type BROADCAST -j DROP
-A cde2brg -m addrtype --dst-type ANYCAST -j DROP
-A cde2brg -m addrtype --dst-type MULTICAST -j DROP
-A cde2brg -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:cde2brg:DROP:" --log-level 6
-A cde2brg -j DROP
-A cde2clu -m conntrack --ctstate INVALID -j _cde2clu
-A cde2clu -m addrtype --dst-type BROADCAST -j DROP
-A cde2clu -m addrtype --dst-type ANYCAST -j DROP
-A cde2clu -m addrtype --dst-type MULTICAST -j DROP
-A cde2clu -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:cde2clu:DROP:" --log-level 6
-A cde2clu -j DROP
-A cde2ess -m conntrack --ctstate INVALID -j _cde2ess
-A cde2ess -m addrtype --dst-type BROADCAST -j DROP
-A cde2ess -m addrtype --dst-type ANYCAST -j DROP
-A cde2ess -m addrtype --dst-type MULTICAST -j DROP
-A cde2ess -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:cde2ess:DROP:" --log-level 6
-A cde2ess -j DROP
-A cde2fw -m conntrack --ctstate INVALID -j _cde2fw
-A cde2fw -s 10.0.0.0/8 -j DROP
-A cde2fw -s 172.16.0.0/12 -j DROP
-A cde2fw -s 192.168.0.0/16 -j DROP
-A cde2fw -s 169.254.0.0/16 -j DROP
-A cde2fw -s 0.0.0.0/8 -j DROP
-A cde2fw -s 127.0.0.0/8 -j DROP
-A cde2fw -s 240.0.0.0/4 -j DROP
-A cde2fw -s 255.255.255.255/32 -j DROP
-A cde2fw -s 192.0.2.0/24 -j DROP
-A cde2fw -s 100.64.0.0/10 -j DROP
-A cde2fw -s 192.0.0.0/24 -j DROP
-A cde2fw -s 198.18.0.0/15 -j DROP
-A cde2fw -s 198.51.100.0/24 -j DROP
-A cde2fw -s 203.0.113.0/24 -j DROP
-A cde2fw -s 224.0.0.0/4 -j DROP
-A cde2fw -p icmp -m icmp --icmp-type 8 -m hashlimit --hashlimit-upto 2/sec --hashlimit-burst 5 --hashlimit-mode srcip --hashlimit-name shorewall8 -m comment --comment Ping -j ACCEPT
-A cde2fw -p icmp -m icmp --icmp-type 3/4 -j ACCEPT
-A cde2fw -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A cde2fw -p icmp -m icmp --icmp-type 11 -j ACCEPT
-A cde2fw -p udp -m udp --dport 33434:33529 -j ACCEPT
-A cde2fw -p tcp -m tcp --dport 23 -j DROP
-A cde2fw -p icmp -m hashlimit --hashlimit-upto 2/sec --hashlimit-burst 5 --hashlimit-mode srcip --hashlimit-name shorewall16 -j ACCEPT
-A cde2fw -p tcp -m tcp --dport 22 -j ACCEPT
-A cde2fw -p icmp -m hashlimit --hashlimit-upto 2/sec --hashlimit-burst 5 --hashlimit-mode srcip --hashlimit-name shorewall30 -j ACCEPT
-A cde2fw -p tcp -m tcp --dport 9103 -j DROP
-A cde2fw -p tcp -m tcp --dport 8080 -j DROP
-A cde2fw -p tcp -m tcp --dport 22 -j ACCEPT
-A cde2fw -m addrtype --dst-type BROADCAST -j DROP
-A cde2fw -m addrtype --dst-type ANYCAST -j DROP
-A cde2fw -m addrtype --dst-type MULTICAST -j DROP
-A cde2fw -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:cde2fw:DROP:" --log-level 6
-A cde2fw -j DROP
-A cde2geov -m conntrack --ctstate INVALID -j _cde2geov
-A cde2geov -m addrtype --dst-type BROADCAST -j DROP
-A cde2geov -m addrtype --dst-type ANYCAST -j DROP
-A cde2geov -m addrtype --dst-type MULTICAST -j DROP
-A cde2geov -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:cde2geov:DROP:" --log-level 6
-A cde2geov -j DROP
-A cde2loc -m conntrack --ctstate INVALID -j _cde2loc
-A cde2loc -m addrtype --dst-type BROADCAST -j DROP
-A cde2loc -m addrtype --dst-type ANYCAST -j DROP
-A cde2loc -m addrtype --dst-type MULTICAST -j DROP
-A cde2loc -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:cde2loc:DROP:" --log-level 6
-A cde2loc -j DROP
-A cde2net -m conntrack --ctstate INVALID -j _cde2net
-A cde2net -m addrtype --dst-type BROADCAST -j DROP
-A cde2net -m addrtype --dst-type ANYCAST -j DROP
-A cde2net -m addrtype --dst-type MULTICAST -j DROP
-A cde2net -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:cde2net:DROP:" --log-level 6
-A cde2net -j DROP
-A cde2nginx -m conntrack --ctstate INVALID -j _cde2nginx
-A cde2nginx -p tcp -m tcp --dport 6101 -j DROP
-A cde2nginx -p tcp -m tcp --dport 3100 -j DROP
-A cde2nginx -p tcp -m tcp --dport 4100 -j DROP
-A cde2nginx -p tcp -m tcp --dport 5100 -j DROP
-A cde2nginx -p tcp -m tcp --dport 8100 -j DROP
-A cde2nginx -p tcp -m tcp --dport 9100 -j DROP
-A cde2nginx -p tcp -m tcp --dport 4101 -j DROP
-A cde2nginx -p tcp -m tcp --dport 8022 -j DROP
-A cde2nginx -p tcp -m tcp --dport 7657 -j DROP
-A cde2nginx -p tcp -m tcp --dport 5104 -j DROP
-A cde2nginx -p tcp -m tcp --dport 5204 -j DROP
-A cde2nginx -p tcp -m tcp --dport 5304 -j DROP
-A cde2nginx -p tcp -m tcp --dport 5602 -j DROP
-A cde2nginx -p tcp -m tcp --dport 9702 -j DROP
-A cde2nginx -p tcp -m tcp --dport 4740 -j DROP
-A cde2nginx -p tcp -m tcp --dport 5052 -j DROP
-A cde2nginx -p tcp -m tcp --dport 3202 -j DROP
-A cde2nginx -p tcp -m tcp --dport 9003 -j DROP
-A cde2nginx -p tcp -m tcp --dport 8803 -j DROP
-A cde2nginx -p tcp -m tcp --dport 9997 -j DROP
-A cde2nginx -p tcp -m tcp --dport 9101 -j DROP
-A cde2nginx -p tcp -m tcp --dport 5070 -j DROP
-A cde2nginx -p tcp -m tcp --dport 3001 -j DROP
-A cde2nginx -p tcp -m tcp --dport 9090 -j DROP
-A cde2nginx -p tcp -m tcp --dport 9093 -j DROP
-A cde2nginx -p tcp -m tcp --dport 5606 -j DROP
-A cde2nginx -m addrtype --dst-type BROADCAST -j DROP
-A cde2nginx -m addrtype --dst-type ANYCAST -j DROP
-A cde2nginx -m addrtype --dst-type MULTICAST -j DROP
-A cde2nginx -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:cde2nginx:DROP:" --log-level 6
-A cde2nginx -j DROP
-A cde2repo -m conntrack --ctstate INVALID -j _cde2repo
-A cde2repo -m addrtype --dst-type BROADCAST -j DROP
-A cde2repo -m addrtype --dst-type ANYCAST -j DROP
-A cde2repo -m addrtype --dst-type MULTICAST -j DROP
-A cde2repo -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:cde2repo:DROP:" --log-level 6
-A cde2repo -j DROP
-A cde2vip -m conntrack --ctstate INVALID -j _cde2vip
-A cde2vip -m addrtype --dst-type BROADCAST -j DROP
-A cde2vip -m addrtype --dst-type ANYCAST -j DROP
-A cde2vip -m addrtype --dst-type MULTICAST -j DROP
-A cde2vip -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:cde2vip:DROP:" --log-level 6
-A cde2vip -j DROP
-A cde2vpn -m conntrack --ctstate INVALID -j _cde2vpn
-A cde2vpn -m addrtype --dst-type BROADCAST -j DROP
-A cde2vpn -m addrtype --dst-type ANYCAST -j DROP
-A cde2vpn -m addrtype --dst-type MULTICAST -j DROP
-A cde2vpn -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:cde2vpn:DROP:" --log-level 6
-A cde2vpn -j DROP
-A cde2vrrp -m conntrack --ctstate INVALID -j _cde2vrrp
-A cde2vrrp -m addrtype --dst-type BROADCAST -j DROP
-A cde2vrrp -m addrtype --dst-type ANYCAST -j DROP
-A cde2vrrp -m addrtype --dst-type MULTICAST -j DROP
-A cde2vrrp -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:cde2vrrp:DROP:" --log-level 6
-A cde2vrrp -j DROP
-A cde2wan -m conntrack --ctstate INVALID -j _cde2wan
-A cde2wan -m addrtype --dst-type BROADCAST -j DROP
-A cde2wan -m addrtype --dst-type ANYCAST -j DROP
-A cde2wan -m addrtype --dst-type MULTICAST -j DROP
-A cde2wan -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:cde2wan:DROP:" --log-level 6
-A cde2wan -j DROP
-A cde_frwd -o ens160 -j cde2wan
-A cde_frwd -d 172.16.1.3/32 -o ens192 -j cde2nginx
-A cde_frwd -d 172.16.1.2/32 -o ens192 -j cde2nginx
-A cde_frwd -d 172.16.1.1/32 -o ens192 -j cde2nginx
-A cde_frwd -d 172.16.1.9/32 -o ens192 -j cde2bas
-A cde_frwd -d 172.16.1.10/32 -o ens192 -j cde2repo
-A cde_frwd -d 172.16.1.5/32 -o ens192 -j cde2vrrp
-A cde_frwd -d 172.16.1.4/32 -o ens192 -j cde2vrrp
-A cde_frwd -d 172.16.1.100/32 -o ens192 -j cde2vip
-A cde_frwd -d 172.16.1.3/32 -o ens192 -j cde2clu
-A cde_frwd -d 172.16.1.2/32 -o ens192 -j cde2clu
-A cde_frwd -d 172.16.1.1/32 -o ens192 -j cde2clu
-A cde_frwd -o ens192 -j cde2net
-A cde_frwd -o docker0 -j cde2brg
-A cde_frwd -d 10.255.0.0/16 -o docker_gwbridge -j cde2ess
-A cde_frwd -d 10.0.3.0/24 -o docker_gwbridge -j cde2vpn
-A cde_frwd -d 10.0.0.0/24 -o docker_gwbridge -j cde2loc
-A cde_frwd -o docker_gwbridge -j cde2geov
-A clu2bas -m conntrack --ctstate INVALID -j _clu2bas
-A clu2bas -m addrtype --dst-type BROADCAST -j DROP
-A clu2bas -m addrtype --dst-type ANYCAST -j DROP
-A clu2bas -m addrtype --dst-type MULTICAST -j DROP
-A clu2bas -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:clu2bas:DROP:" --log-level 6
-A clu2bas -j DROP
-A clu2brg -m conntrack --ctstate INVALID -j _clu2brg
-A clu2brg -m addrtype --dst-type BROADCAST -j DROP
-A clu2brg -m addrtype --dst-type ANYCAST -j DROP
-A clu2brg -m addrtype --dst-type MULTICAST -j DROP
-A clu2brg -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:clu2brg:DROP:" --log-level 6
-A clu2brg -j DROP
-A clu2cde -m conntrack --ctstate INVALID -j _clu2cde
-A clu2cde -m addrtype --dst-type BROADCAST -j DROP
-A clu2cde -m addrtype --dst-type ANYCAST -j DROP
-A clu2cde -m addrtype --dst-type MULTICAST -j DROP
-A clu2cde -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:clu2cde:DROP:" --log-level 6
-A clu2cde -j DROP
-A clu2ess -m conntrack --ctstate INVALID -j _clu2ess
-A clu2ess -m addrtype --dst-type BROADCAST -j DROP
-A clu2ess -m addrtype --dst-type ANYCAST -j DROP
-A clu2ess -m addrtype --dst-type MULTICAST -j DROP
-A clu2ess -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:clu2ess:DROP:" --log-level 6
-A clu2ess -j DROP
-A clu2fw -m conntrack --ctstate INVALID -j _clu2fw
-A clu2fw -p icmp -j ACCEPT
-A clu2fw -p icmp -j ACCEPT
-A clu2fw -p tcp -m multiport --dports 2376,2377,7946 -j ACCEPT
-A clu2fw -p udp -m multiport --dports 4789,7946 -j ACCEPT
-A clu2fw -p icmp -m hashlimit --hashlimit-upto 2/sec --hashlimit-burst 5 --hashlimit-mode srcip --hashlimit-name shorewall17 -j ACCEPT
-A clu2fw -p tcp -m tcp --dport 22 -j ACCEPT
-A clu2fw -p icmp -m hashlimit --hashlimit-upto 2/sec --hashlimit-burst 5 --hashlimit-mode srcip --hashlimit-name shorewall31 -j ACCEPT
-A clu2fw -p tcp -m tcp --dport 9103 -j DROP
-A clu2fw -p tcp -m tcp --dport 8080 -j DROP
-A clu2fw -p tcp -m tcp --dport 22 -j ACCEPT
-A clu2fw -p tcp -m multiport --dports 2376,2377,7946 -j ACCEPT
-A clu2fw -p udp -m multiport --dports 4789,7946 -j ACCEPT
-A clu2fw -m addrtype --dst-type BROADCAST -j DROP
-A clu2fw -m addrtype --dst-type ANYCAST -j DROP
-A clu2fw -m addrtype --dst-type MULTICAST -j DROP
-A clu2fw -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:clu2fw:DROP:" --log-level 6
-A clu2fw -j DROP
-A clu2geov -m conntrack --ctstate INVALID -j _clu2geov
-A clu2geov -m addrtype --dst-type BROADCAST -j DROP
-A clu2geov -m addrtype --dst-type ANYCAST -j DROP
-A clu2geov -m addrtype --dst-type MULTICAST -j DROP
-A clu2geov -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:clu2geov:DROP:" --log-level 6
-A clu2geov -j DROP
-A clu2loc -m conntrack --ctstate INVALID -j _clu2loc
-A clu2loc -m addrtype --dst-type BROADCAST -j DROP
-A clu2loc -m addrtype --dst-type ANYCAST -j DROP
-A clu2loc -m addrtype --dst-type MULTICAST -j DROP
-A clu2loc -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:clu2loc:DROP:" --log-level 6
-A clu2loc -j DROP
-A clu2net -m conntrack --ctstate INVALID -j _clu2net
-A clu2net -m addrtype --dst-type BROADCAST -j DROP
-A clu2net -m addrtype --dst-type ANYCAST -j DROP
-A clu2net -m addrtype --dst-type MULTICAST -j DROP
-A clu2net -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:clu2net:DROP:" --log-level 6
-A clu2net -j DROP
-A clu2nginx -m conntrack --ctstate INVALID -j _clu2nginx
-A clu2nginx -p tcp -m tcp --dport 6101 -j DROP
-A clu2nginx -p tcp -m tcp --dport 3100 -j DROP
-A clu2nginx -p tcp -m tcp --dport 4100 -j DROP
-A clu2nginx -p tcp -m tcp --dport 5100 -j DROP
-A clu2nginx -p tcp -m tcp --dport 8100 -j DROP
-A clu2nginx -p tcp -m tcp --dport 9100 -j DROP
-A clu2nginx -p tcp -m tcp --dport 4101 -j DROP
-A clu2nginx -p tcp -m tcp --dport 8022 -j DROP
-A clu2nginx -p tcp -m tcp --dport 7657 -j DROP
-A clu2nginx -p tcp -m tcp --dport 5104 -j DROP
-A clu2nginx -p tcp -m tcp --dport 5204 -j DROP
-A clu2nginx -p tcp -m tcp --dport 5304 -j DROP
-A clu2nginx -p tcp -m tcp --dport 5602 -j DROP
-A clu2nginx -p tcp -m tcp --dport 9702 -j DROP
-A clu2nginx -p tcp -m tcp --dport 4740 -j DROP
-A clu2nginx -p tcp -m tcp --dport 5052 -j DROP
-A clu2nginx -p tcp -m tcp --dport 3202 -j DROP
-A clu2nginx -p tcp -m tcp --dport 9003 -j DROP
-A clu2nginx -p tcp -m tcp --dport 8803 -j DROP
-A clu2nginx -p tcp -m tcp --dport 9997 -j DROP
-A clu2nginx -p tcp -m tcp --dport 9101 -j DROP
-A clu2nginx -p tcp -m tcp --dport 5070 -j DROP
-A clu2nginx -p tcp -m tcp --dport 3001 -j DROP
-A clu2nginx -p tcp -m tcp --dport 9090 -j DROP
-A clu2nginx -p tcp -m tcp --dport 9093 -j DROP
-A clu2nginx -p tcp -m tcp --dport 5606 -j DROP
-A clu2nginx -m addrtype --dst-type BROADCAST -j DROP
-A clu2nginx -m addrtype --dst-type ANYCAST -j DROP
-A clu2nginx -m addrtype --dst-type MULTICAST -j DROP
-A clu2nginx -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:clu2nginx:DROP:" --log-level 6
-A clu2nginx -j DROP
-A clu2repo -m conntrack --ctstate INVALID -j _clu2repo
-A clu2repo -m addrtype --dst-type BROADCAST -j DROP
-A clu2repo -m addrtype --dst-type ANYCAST -j DROP
-A clu2repo -m addrtype --dst-type MULTICAST -j DROP
-A clu2repo -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:clu2repo:DROP:" --log-level 6
-A clu2repo -j DROP
-A clu2vip -m conntrack --ctstate INVALID -j _clu2vip
-A clu2vip -m addrtype --dst-type BROADCAST -j DROP
-A clu2vip -m addrtype --dst-type ANYCAST -j DROP
-A clu2vip -m addrtype --dst-type MULTICAST -j DROP
-A clu2vip -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:clu2vip:DROP:" --log-level 6
-A clu2vip -j DROP
-A clu2vpn -m conntrack --ctstate INVALID -j _clu2vpn
-A clu2vpn -m addrtype --dst-type BROADCAST -j DROP
-A clu2vpn -m addrtype --dst-type ANYCAST -j DROP
-A clu2vpn -m addrtype --dst-type MULTICAST -j DROP
-A clu2vpn -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:clu2vpn:DROP:" --log-level 6
-A clu2vpn -j DROP
-A clu2vrrp -m conntrack --ctstate INVALID -j _clu2vrrp
-A clu2vrrp -m addrtype --dst-type BROADCAST -j DROP
-A clu2vrrp -m addrtype --dst-type ANYCAST -j DROP
-A clu2vrrp -m addrtype --dst-type MULTICAST -j DROP
-A clu2vrrp -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:clu2vrrp:DROP:" --log-level 6
-A clu2vrrp -j DROP
-A clu2wan -m conntrack --ctstate INVALID -j _clu2wan
-A clu2wan -m addrtype --dst-type BROADCAST -j DROP
-A clu2wan -m addrtype --dst-type ANYCAST -j DROP
-A clu2wan -m addrtype --dst-type MULTICAST -j DROP
-A clu2wan -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:clu2wan:DROP:" --log-level 6
-A clu2wan -j DROP
-A clu_frwd -o ens160 -j clu2wan
-A clu_frwd -d 172.16.1.3/32 -o ens192 -j clu2nginx
-A clu_frwd -d 172.16.1.2/32 -o ens192 -j clu2nginx
-A clu_frwd -d 172.16.1.1/32 -o ens192 -j clu2nginx
-A clu_frwd -d 172.16.1.9/32 -o ens192 -j clu2bas
-A clu_frwd -d 172.16.1.10/32 -o ens192 -j clu2repo
-A clu_frwd -d 172.16.1.5/32 -o ens192 -j clu2vrrp
-A clu_frwd -d 172.16.1.4/32 -o ens192 -j clu2vrrp
-A clu_frwd -d 172.16.1.100/32 -o ens192 -j clu2vip
-A clu_frwd -d 172.16.1.6/32 -o ens192 -j clu2cde
-A clu_frwd -d 172.16.1.7/32 -o ens192 -j clu2cde
-A clu_frwd -d 172.16.1.8/32 -o ens192 -j clu2cde
-A clu_frwd -o ens192 -j clu2net
-A clu_frwd -o docker0 -j clu2brg
-A clu_frwd -d 10.255.0.0/16 -o docker_gwbridge -j clu2ess
-A clu_frwd -d 10.0.3.0/24 -o docker_gwbridge -j clu2vpn
-A clu_frwd -d 10.0.0.0/24 -o docker_gwbridge -j clu2loc
-A clu_frwd -o docker_gwbridge -j clu2geov
-A docker_gwbridge_fwd -m conntrack --ctstate INVALID,NEW,UNTRACKED -j dynamic
-A docker_gwbridge_fwd -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A docker_gwbridge_fwd -p tcp -j tcpflags
-A docker_gwbridge_fwd -s 10.255.0.0/16 -m conntrack --ctstate NEW,UNTRACKED -j docker_gwbridge_mac
-A docker_gwbridge_fwd -s 10.0.3.0/24 -m conntrack --ctstate NEW,UNTRACKED -j docker_gwbridge_mac
-A docker_gwbridge_fwd -s 10.0.0.0/24 -m conntrack --ctstate NEW,UNTRACKED -j docker_gwbridge_mac
-A docker_gwbridge_fwd -s 10.255.0.0/16 -j ess_frwd
-A docker_gwbridge_fwd -s 10.0.3.0/24 -j vpn_frwd
-A docker_gwbridge_fwd -s 10.0.0.0/24 -j loc_frwd
-A docker_gwbridge_fwd -j geov_frwd
-A docker_gwbridge_in -m conntrack --ctstate INVALID,NEW,UNTRACKED -j dynamic
-A docker_gwbridge_in -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A docker_gwbridge_in -p tcp -j tcpflags
-A docker_gwbridge_in -s 10.255.0.0/16 -m conntrack --ctstate NEW,UNTRACKED -j docker_gwbridge_mac
-A docker_gwbridge_in -s 10.0.3.0/24 -m conntrack --ctstate NEW,UNTRACKED -j docker_gwbridge_mac
-A docker_gwbridge_in -s 10.0.0.0/24 -m conntrack --ctstate NEW,UNTRACKED -j docker_gwbridge_mac
-A docker_gwbridge_in -s 10.255.0.0/16 -j ess2fw
-A docker_gwbridge_in -s 10.0.3.0/24 -j vpn2fw
-A docker_gwbridge_in -s 10.0.0.0/24 -j loc2fw
-A docker_gwbridge_in -j geov2fw
-A docker_gwbridge_mac -s 172.18.0.1/32 -m addrtype --dst-type BROADCAST -j RETURN
-A docker_gwbridge_mac -s 172.18.0.1/32 -d 224.0.0.0/4 -j RETURN
-A docker_gwbridge_mac -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:docker_gwbridge_ma " --log-level 6
-A docker_gwbridge_mac -j RETURN
-A docker_gwbridge_out -d 10.255.0.0/16 -j fw2ess
-A docker_gwbridge_out -d 10.0.3.0/24 -j fw2vpn
-A docker_gwbridge_out -d 10.0.0.0/24 -j fw2loc
-A docker_gwbridge_out -j fw2geov
-A ens192_fwd -m conntrack --ctstate INVALID,NEW,UNTRACKED -j dynamic
-A ens192_fwd -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A ens192_fwd -m conntrack --ctstate INVALID,NEW,UNTRACKED -j smurfs
-A ens192_fwd -p tcp -j tcpflags
-A ens192_fwd -s 172.16.1.3/32 -m conntrack --ctstate NEW,UNTRACKED -j ens192_mac
-A ens192_fwd -s 172.16.1.2/32 -m conntrack --ctstate NEW,UNTRACKED -j ens192_mac
-A ens192_fwd -s 172.16.1.1/32 -m conntrack --ctstate NEW,UNTRACKED -j ens192_mac
-A ens192_fwd -s 172.16.1.9/32 -m conntrack --ctstate NEW,UNTRACKED -j ens192_mac
-A ens192_fwd -s 172.16.1.10/32 -m conntrack --ctstate NEW,UNTRACKED -j ens192_mac
-A ens192_fwd -s 172.16.1.5/32 -m conntrack --ctstate NEW,UNTRACKED -j ens192_mac
-A ens192_fwd -s 172.16.1.4/32 -m conntrack --ctstate NEW,UNTRACKED -j ens192_mac
-A ens192_fwd -s 172.16.1.100/32 -m conntrack --ctstate NEW,UNTRACKED -j ens192_mac
-A ens192_fwd -s 172.16.1.6/32 -m conntrack --ctstate NEW,UNTRACKED -j ens192_mac
-A ens192_fwd -s 172.16.1.7/32 -m conntrack --ctstate NEW,UNTRACKED -j ens192_mac
-A ens192_fwd -s 172.16.1.8/32 -m conntrack --ctstate NEW,UNTRACKED -j ens192_mac
-A ens192_fwd -s 172.16.1.3/32 -m conntrack --ctstate NEW,UNTRACKED -j ens192_mac
-A ens192_fwd -s 172.16.1.2/32 -m conntrack --ctstate NEW,UNTRACKED -j ens192_mac
-A ens192_fwd -s 172.16.1.1/32 -m conntrack --ctstate NEW,UNTRACKED -j ens192_mac
-A ens192_fwd -s 172.16.1.3/32 -j nginx_frwd
-A ens192_fwd -s 172.16.1.2/32 -j nginx_frwd
-A ens192_fwd -s 172.16.1.1/32 -j nginx_frwd
-A ens192_fwd -s 172.16.1.9/32 -j bas_frwd
-A ens192_fwd -s 172.16.1.10/32 -j repo_frwd
-A ens192_fwd -s 172.16.1.5/32 -j vrrp_frwd
-A ens192_fwd -s 172.16.1.4/32 -j vrrp_frwd
-A ens192_fwd -s 172.16.1.100/32 -j vip_frwd
-A ens192_fwd -s 172.16.1.6/32 -j cde_frwd
-A ens192_fwd -s 172.16.1.7/32 -j cde_frwd
-A ens192_fwd -s 172.16.1.8/32 -j cde_frwd
-A ens192_fwd -s 172.16.1.3/32 -j clu_frwd
-A ens192_fwd -s 172.16.1.2/32 -j clu_frwd
-A ens192_fwd -s 172.16.1.1/32 -j clu_frwd
-A ens192_fwd -j net_frwd
-A ens192_in -m conntrack --ctstate INVALID,NEW,UNTRACKED -j dynamic
-A ens192_in -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A ens192_in -m conntrack --ctstate INVALID,NEW,UNTRACKED -j smurfs
-A ens192_in -p tcp -j tcpflags
-A ens192_in -s 172.16.1.3/32 -m conntrack --ctstate NEW,UNTRACKED -j ens192_mac
-A ens192_in -s 172.16.1.2/32 -m conntrack --ctstate NEW,UNTRACKED -j ens192_mac
-A ens192_in -s 172.16.1.1/32 -m conntrack --ctstate NEW,UNTRACKED -j ens192_mac
-A ens192_in -s 172.16.1.9/32 -m conntrack --ctstate NEW,UNTRACKED -j ens192_mac
-A ens192_in -s 172.16.1.10/32 -m conntrack --ctstate NEW,UNTRACKED -j ens192_mac
-A ens192_in -s 172.16.1.5/32 -m conntrack --ctstate NEW,UNTRACKED -j ens192_mac
-A ens192_in -s 172.16.1.4/32 -m conntrack --ctstate NEW,UNTRACKED -j ens192_mac
-A ens192_in -s 172.16.1.100/32 -m conntrack --ctstate NEW,UNTRACKED -j ens192_mac
-A ens192_in -s 172.16.1.6/32 -m conntrack --ctstate NEW,UNTRACKED -j ens192_mac
-A ens192_in -s 172.16.1.7/32 -m conntrack --ctstate NEW,UNTRACKED -j ens192_mac
-A ens192_in -s 172.16.1.8/32 -m conntrack --ctstate NEW,UNTRACKED -j ens192_mac
-A ens192_in -s 172.16.1.3/32 -m conntrack --ctstate NEW,UNTRACKED -j ens192_mac
-A ens192_in -s 172.16.1.2/32 -m conntrack --ctstate NEW,UNTRACKED -j ens192_mac
-A ens192_in -s 172.16.1.1/32 -m conntrack --ctstate NEW,UNTRACKED -j ens192_mac
-A ens192_in -s 172.16.1.3/32 -j nginx2fw
-A ens192_in -s 172.16.1.2/32 -j nginx2fw
-A ens192_in -s 172.16.1.1/32 -j nginx2fw
-A ens192_in -s 172.16.1.9/32 -j bas2fw
-A ens192_in -s 172.16.1.10/32 -j repo2fw
-A ens192_in -s 172.16.1.5/32 -j vrrp2fw
-A ens192_in -s 172.16.1.4/32 -j vrrp2fw
-A ens192_in -s 172.16.1.100/32 -j vip2fw
-A ens192_in -s 172.16.1.6/32 -j cde2fw
-A ens192_in -s 172.16.1.7/32 -j cde2fw
-A ens192_in -s 172.16.1.8/32 -j cde2fw
-A ens192_in -s 172.16.1.3/32 -j clu2fw
-A ens192_in -s 172.16.1.2/32 -j clu2fw
-A ens192_in -s 172.16.1.1/32 -j clu2fw
-A ens192_in -j net2fw
-A ens192_mac -s 172.16.1.2/32 -m addrtype --dst-type BROADCAST -j RETURN
-A ens192_mac -s 172.16.1.2/32 -d 224.0.0.0/4 -j RETURN
-A ens192_mac -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:ens192_mac:ACCEPT:" --log-level 6
-A ens192_mac -j RETURN
-A ens192_out -d 172.16.1.3/32 -j fw2nginx
-A ens192_out -d 172.16.1.2/32 -j fw2nginx
-A ens192_out -d 172.16.1.1/32 -j fw2nginx
-A ens192_out -d 172.16.1.9/32 -j fw2bas
-A ens192_out -d 172.16.1.10/32 -j fw2repo
-A ens192_out -d 172.16.1.5/32 -j fw2vrrp
-A ens192_out -d 172.16.1.4/32 -j fw2vrrp
-A ens192_out -d 172.16.1.100/32 -j fw2vip
-A ens192_out -d 172.16.1.6/32 -j fw2cde
-A ens192_out -d 172.16.1.7/32 -j fw2cde
-A ens192_out -d 172.16.1.8/32 -j fw2cde
-A ens192_out -d 172.16.1.3/32 -j fw2clu
-A ens192_out -d 172.16.1.2/32 -j fw2clu
-A ens192_out -d 172.16.1.1/32 -j fw2clu
-A ens192_out -j fw2net
-A ess2bas -m conntrack --ctstate INVALID -j _ess2bas
-A ess2bas -m addrtype --dst-type BROADCAST -j DROP
-A ess2bas -m addrtype --dst-type ANYCAST -j DROP
-A ess2bas -m addrtype --dst-type MULTICAST -j DROP
-A ess2bas -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:ess2bas:DROP:" --log-level 6
-A ess2bas -j DROP
-A ess2brg -m conntrack --ctstate INVALID -j _ess2brg
-A ess2brg -m addrtype --dst-type BROADCAST -j DROP
-A ess2brg -m addrtype --dst-type ANYCAST -j DROP
-A ess2brg -m addrtype --dst-type MULTICAST -j DROP
-A ess2brg -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:ess2brg:DROP:" --log-level 6
-A ess2brg -j DROP
-A ess2cde -m conntrack --ctstate INVALID -j _ess2cde
-A ess2cde -m addrtype --dst-type BROADCAST -j DROP
-A ess2cde -m addrtype --dst-type ANYCAST -j DROP
-A ess2cde -m addrtype --dst-type MULTICAST -j DROP
-A ess2cde -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:ess2cde:DROP:" --log-level 6
-A ess2cde -j DROP
-A ess2clu -m conntrack --ctstate INVALID -j _ess2clu
-A ess2clu -m addrtype --dst-type BROADCAST -j DROP
-A ess2clu -m addrtype --dst-type ANYCAST -j DROP
-A ess2clu -m addrtype --dst-type MULTICAST -j DROP
-A ess2clu -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:ess2clu:DROP:" --log-level 6
-A ess2clu -j DROP
-A ess2fw -m conntrack --ctstate INVALID -j _ess2fw
-A ess2fw -p icmp -m hashlimit --hashlimit-upto 2/sec --hashlimit-burst 5 --hashlimit-mode srcip --hashlimit-name shorewall20 -j ACCEPT
-A ess2fw -p tcp -m tcp --dport 22 -j ACCEPT
-A ess2fw -p icmp -m hashlimit --hashlimit-upto 2/sec --hashlimit-burst 5 --hashlimit-mode srcip --hashlimit-name shorewall34 -j ACCEPT
-A ess2fw -p tcp -m tcp --dport 9103 -j DROP
-A ess2fw -p tcp -m tcp --dport 8080 -j DROP
-A ess2fw -p tcp -m tcp --dport 22 -j ACCEPT
-A ess2fw -m addrtype --dst-type BROADCAST -j DROP
-A ess2fw -m addrtype --dst-type ANYCAST -j DROP
-A ess2fw -m addrtype --dst-type MULTICAST -j DROP
-A ess2fw -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:ess2fw:DROP:" --log-level 6
-A ess2fw -j DROP
-A ess2geov -m conntrack --ctstate INVALID -j _ess2geov
-A ess2geov -m addrtype --dst-type BROADCAST -j DROP
-A ess2geov -m addrtype --dst-type ANYCAST -j DROP
-A ess2geov -m addrtype --dst-type MULTICAST -j DROP
-A ess2geov -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:ess2geov:DROP:" --log-level 6
-A ess2geov -j DROP
-A ess2loc -m conntrack --ctstate INVALID -j _ess2loc
-A ess2loc -m addrtype --dst-type BROADCAST -j DROP
-A ess2loc -m addrtype --dst-type ANYCAST -j DROP
-A ess2loc -m addrtype --dst-type MULTICAST -j DROP
-A ess2loc -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:ess2loc:DROP:" --log-level 6
-A ess2loc -j DROP
-A ess2net -m conntrack --ctstate INVALID -j _ess2net
-A ess2net -m addrtype --dst-type BROADCAST -j DROP
-A ess2net -m addrtype --dst-type ANYCAST -j DROP
-A ess2net -m addrtype --dst-type MULTICAST -j DROP
-A ess2net -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:ess2net:DROP:" --log-level 6
-A ess2net -j DROP
-A ess2nginx -m conntrack --ctstate INVALID -j _ess2nginx
-A ess2nginx -p tcp -m tcp --dport 6101 -j DROP
-A ess2nginx -p tcp -m tcp --dport 3100 -j DROP
-A ess2nginx -p tcp -m tcp --dport 4100 -j DROP
-A ess2nginx -p tcp -m tcp --dport 5100 -j DROP
-A ess2nginx -p tcp -m tcp --dport 8100 -j DROP
-A ess2nginx -p tcp -m tcp --dport 9100 -j DROP
-A ess2nginx -p tcp -m tcp --dport 4101 -j DROP
-A ess2nginx -p tcp -m tcp --dport 8022 -j DROP
-A ess2nginx -p tcp -m tcp --dport 7657 -j DROP
-A ess2nginx -p tcp -m tcp --dport 5104 -j DROP
-A ess2nginx -p tcp -m tcp --dport 5204 -j DROP
-A ess2nginx -p tcp -m tcp --dport 5304 -j DROP
-A ess2nginx -p tcp -m tcp --dport 5602 -j DROP
-A ess2nginx -p tcp -m tcp --dport 9702 -j DROP
-A ess2nginx -p tcp -m tcp --dport 4740 -j DROP
-A ess2nginx -p tcp -m tcp --dport 5052 -j DROP
-A ess2nginx -p tcp -m tcp --dport 3202 -j DROP
-A ess2nginx -p tcp -m tcp --dport 9003 -j DROP
-A ess2nginx -p tcp -m tcp --dport 8803 -j DROP
-A ess2nginx -p tcp -m tcp --dport 9997 -j DROP
-A ess2nginx -p tcp -m tcp --dport 9101 -j DROP
-A ess2nginx -p tcp -m tcp --dport 5070 -j DROP
-A ess2nginx -p tcp -m tcp --dport 3001 -j DROP
-A ess2nginx -p tcp -m tcp --dport 9090 -j DROP
-A ess2nginx -p tcp -m tcp --dport 9093 -j DROP
-A ess2nginx -p tcp -m tcp --dport 5606 -j DROP
-A ess2nginx -m addrtype --dst-type BROADCAST -j DROP
-A ess2nginx -m addrtype --dst-type ANYCAST -j DROP
-A ess2nginx -m addrtype --dst-type MULTICAST -j DROP
-A ess2nginx -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:ess2nginx:DROP:" --log-level 6
-A ess2nginx -j DROP
-A ess2repo -m conntrack --ctstate INVALID -j _ess2repo
-A ess2repo -m addrtype --dst-type BROADCAST -j DROP
-A ess2repo -m addrtype --dst-type ANYCAST -j DROP
-A ess2repo -m addrtype --dst-type MULTICAST -j DROP
-A ess2repo -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:ess2repo:DROP:" --log-level 6
-A ess2repo -j DROP
-A ess2vip -m conntrack --ctstate INVALID -j _ess2vip
-A ess2vip -m addrtype --dst-type BROADCAST -j DROP
-A ess2vip -m addrtype --dst-type ANYCAST -j DROP
-A ess2vip -m addrtype --dst-type MULTICAST -j DROP
-A ess2vip -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:ess2vip:DROP:" --log-level 6
-A ess2vip -j DROP
-A ess2vpn -m conntrack --ctstate INVALID -j _ess2vpn
-A ess2vpn -m addrtype --dst-type BROADCAST -j DROP
-A ess2vpn -m addrtype --dst-type ANYCAST -j DROP
-A ess2vpn -m addrtype --dst-type MULTICAST -j DROP
-A ess2vpn -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:ess2vpn:DROP:" --log-level 6
-A ess2vpn -j DROP
-A ess2vrrp -m conntrack --ctstate INVALID -j _ess2vrrp
-A ess2vrrp -m addrtype --dst-type BROADCAST -j DROP
-A ess2vrrp -m addrtype --dst-type ANYCAST -j DROP
-A ess2vrrp -m addrtype --dst-type MULTICAST -j DROP
-A ess2vrrp -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:ess2vrrp:DROP:" --log-level 6
-A ess2vrrp -j DROP
-A ess2wan -m conntrack --ctstate INVALID -j _ess2wan
-A ess2wan -m addrtype --dst-type BROADCAST -j DROP
-A ess2wan -m addrtype --dst-type ANYCAST -j DROP
-A ess2wan -m addrtype --dst-type MULTICAST -j DROP
-A ess2wan -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:ess2wan:DROP:" --log-level 6
-A ess2wan -j DROP
-A ess_frwd -o ens160 -j ess2wan
-A ess_frwd -d 172.16.1.3/32 -o ens192 -j ess2nginx
-A ess_frwd -d 172.16.1.2/32 -o ens192 -j ess2nginx
-A ess_frwd -d 172.16.1.1/32 -o ens192 -j ess2nginx
-A ess_frwd -d 172.16.1.9/32 -o ens192 -j ess2bas
-A ess_frwd -d 172.16.1.10/32 -o ens192 -j ess2repo
-A ess_frwd -d 172.16.1.5/32 -o ens192 -j ess2vrrp
-A ess_frwd -d 172.16.1.4/32 -o ens192 -j ess2vrrp
-A ess_frwd -d 172.16.1.100/32 -o ens192 -j ess2vip
-A ess_frwd -d 172.16.1.6/32 -o ens192 -j ess2cde
-A ess_frwd -d 172.16.1.7/32 -o ens192 -j ess2cde
-A ess_frwd -d 172.16.1.8/32 -o ens192 -j ess2cde
-A ess_frwd -d 172.16.1.3/32 -o ens192 -j ess2clu
-A ess_frwd -d 172.16.1.2/32 -o ens192 -j ess2clu
-A ess_frwd -d 172.16.1.1/32 -o ens192 -j ess2clu
-A ess_frwd -o ens192 -j ess2net
-A ess_frwd -o docker0 -j ess2brg
-A ess_frwd -d 10.0.3.0/24 -o docker_gwbridge -j ess2vpn
-A ess_frwd -d 10.0.0.0/24 -o docker_gwbridge -j ess2loc
-A ess_frwd -o docker_gwbridge -j ess2geov
-A fw2bas -m conntrack --ctstate INVALID -j _fw2bas
-A fw2bas -d 127.0.0.53/32 -p tcp -m tcp --dport 53 -j ACCEPT
-A fw2bas -d 127.0.0.53/32 -p udp -m udp --dport 53 -j ACCEPT
-A fw2bas -p icmp -j ACCEPT
-A fw2bas -p tcp -m tcp --dport 22 -j ACCEPT
-A fw2bas -m addrtype --dst-type BROADCAST -j DROP
-A fw2bas -m addrtype --dst-type ANYCAST -j DROP
-A fw2bas -m addrtype --dst-type MULTICAST -j DROP
-A fw2bas -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:fw2bas:DROP:" --log-level 6
-A fw2bas -j DROP
-A fw2brg -m conntrack --ctstate INVALID -j _fw2brg
-A fw2brg -d 127.0.0.53/32 -p tcp -m tcp --dport 53 -j ACCEPT
-A fw2brg -d 127.0.0.53/32 -p udp -m udp --dport 53 -j ACCEPT
-A fw2brg -p icmp -j ACCEPT
-A fw2brg -p tcp -m tcp --dport 443 -j ACCEPT
-A fw2brg -m addrtype --dst-type BROADCAST -j DROP
-A fw2brg -m addrtype --dst-type ANYCAST -j DROP
-A fw2brg -m addrtype --dst-type MULTICAST -j DROP
-A fw2brg -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:fw2brg:DROP:" --log-level 6
-A fw2brg -j DROP
-A fw2cde -m conntrack --ctstate INVALID -j _fw2cde
-A fw2cde -d 127.0.0.53/32 -p tcp -m tcp --dport 53 -j ACCEPT
-A fw2cde -d 127.0.0.53/32 -p udp -m udp --dport 53 -j ACCEPT
-A fw2cde -p icmp -j ACCEPT
-A fw2cde -m addrtype --dst-type BROADCAST -j DROP
-A fw2cde -m addrtype --dst-type ANYCAST -j DROP
-A fw2cde -m addrtype --dst-type MULTICAST -j DROP
-A fw2cde -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:fw2cde:DROP:" --log-level 6
-A fw2cde -j DROP
-A fw2clu -m conntrack --ctstate INVALID -j _fw2clu
-A fw2clu -d 127.0.0.53/32 -p tcp -m tcp --dport 53 -j ACCEPT
-A fw2clu -d 127.0.0.53/32 -p udp -m udp --dport 53 -j ACCEPT
-A fw2clu -p icmp -j ACCEPT
-A fw2clu -p icmp -j ACCEPT
-A fw2clu -p icmp -j ACCEPT
-A fw2clu -p tcp -m multiport --dports 2376,2377,7946 -j ACCEPT
-A fw2clu -p udp -m multiport --dports 4789,7946 -j ACCEPT
-A fw2clu -p tcp -m multiport --dports 2376,2377,7946 -j ACCEPT
-A fw2clu -p udp -m multiport --dports 4789,7946 -j ACCEPT
-A fw2clu -m addrtype --dst-type BROADCAST -j DROP
-A fw2clu -m addrtype --dst-type ANYCAST -j DROP
-A fw2clu -m addrtype --dst-type MULTICAST -j DROP
-A fw2clu -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:fw2clu:DROP:" --log-level 6
-A fw2clu -j DROP
-A fw2ess -m conntrack --ctstate INVALID -j _fw2ess
-A fw2ess -d 127.0.0.53/32 -p tcp -m tcp --dport 53 -j ACCEPT
-A fw2ess -d 127.0.0.53/32 -p udp -m udp --dport 53 -j ACCEPT
-A fw2ess -p icmp -j ACCEPT
-A fw2ess -m addrtype --dst-type BROADCAST -j DROP
-A fw2ess -m addrtype --dst-type ANYCAST -j DROP
-A fw2ess -m addrtype --dst-type MULTICAST -j DROP
-A fw2ess -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:fw2ess:DROP:" --log-level 6
-A fw2ess -j DROP
-A fw2fw -m conntrack --ctstate INVALID -j _fw2fw
-A fw2fw -j ACCEPT
-A fw2geov -m conntrack --ctstate INVALID -j _fw2geov
-A fw2geov -d 127.0.0.53/32 -p tcp -m tcp --dport 53 -j ACCEPT
-A fw2geov -d 127.0.0.53/32 -p udp -m udp --dport 53 -j ACCEPT
-A fw2geov -p icmp -j ACCEPT
-A fw2geov -m addrtype --dst-type BROADCAST -j DROP
-A fw2geov -m addrtype --dst-type ANYCAST -j DROP
-A fw2geov -m addrtype --dst-type MULTICAST -j DROP
-A fw2geov -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:fw2geov:DROP:" --log-level 6
-A fw2geov -j DROP
-A fw2loc -m conntrack --ctstate INVALID -j _fw2loc
-A fw2loc -d 127.0.0.53/32 -p tcp -m tcp --dport 53 -j ACCEPT
-A fw2loc -d 127.0.0.53/32 -p udp -m udp --dport 53 -j ACCEPT
-A fw2loc -p icmp -j ACCEPT
-A fw2loc -m addrtype --dst-type BROADCAST -j DROP
-A fw2loc -m addrtype --dst-type ANYCAST -j DROP
-A fw2loc -m addrtype --dst-type MULTICAST -j DROP
-A fw2loc -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:fw2loc:DROP:" --log-level 6
-A fw2loc -j DROP
-A fw2net -m conntrack --ctstate INVALID -j _fw2net
-A fw2net -d 127.0.0.53/32 -p tcp -m tcp --dport 53 -j ACCEPT
-A fw2net -d 127.0.0.53/32 -p udp -m udp --dport 53 -j ACCEPT
-A fw2net -p icmp -j ACCEPT
-A fw2net -m addrtype --dst-type BROADCAST -j DROP
-A fw2net -m addrtype --dst-type ANYCAST -j DROP
-A fw2net -m addrtype --dst-type MULTICAST -j DROP
-A fw2net -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:fw2net:DROP:" --log-level 6
-A fw2net -j DROP
-A fw2nginx -m conntrack --ctstate INVALID -j _fw2nginx
-A fw2nginx -d 127.0.0.53/32 -p tcp -m tcp --dport 53 -j ACCEPT
-A fw2nginx -d 127.0.0.53/32 -p udp -m udp --dport 53 -j ACCEPT
-A fw2nginx -p icmp -j ACCEPT
-A fw2nginx -p udp -m udp --dport 53 -j ACCEPT
-A fw2nginx -p udp -m udp --dport 53 -j ACCEPT
-A fw2nginx -p tcp -m tcp --dport 6101 -j DROP
-A fw2nginx -p tcp -m tcp --dport 3100 -j DROP
-A fw2nginx -p tcp -m tcp --dport 4100 -j DROP
-A fw2nginx -p tcp -m tcp --dport 5100 -j DROP
-A fw2nginx -p tcp -m tcp --dport 8100 -j DROP
-A fw2nginx -p tcp -m tcp --dport 9100 -j DROP
-A fw2nginx -p tcp -m tcp --dport 4101 -j DROP
-A fw2nginx -p tcp -m tcp --dport 8022 -j DROP
-A fw2nginx -p tcp -m tcp --dport 7657 -j DROP
-A fw2nginx -p tcp -m tcp --dport 5104 -j DROP
-A fw2nginx -p tcp -m tcp --dport 5204 -j DROP
-A fw2nginx -p tcp -m tcp --dport 5304 -j DROP
-A fw2nginx -p tcp -m tcp --dport 5602 -j DROP
-A fw2nginx -p tcp -m tcp --dport 9702 -j DROP
-A fw2nginx -p tcp -m tcp --dport 4740 -j DROP
-A fw2nginx -p tcp -m tcp --dport 5052 -j DROP
-A fw2nginx -p tcp -m tcp --dport 3202 -j DROP
-A fw2nginx -p tcp -m tcp --dport 9003 -j DROP
-A fw2nginx -p tcp -m tcp --dport 8803 -j DROP
-A fw2nginx -p tcp -m tcp --dport 9997 -j DROP
-A fw2nginx -p tcp -m tcp --dport 9101 -j DROP
-A fw2nginx -p tcp -m tcp --dport 5070 -j DROP
-A fw2nginx -p tcp -m tcp --dport 3001 -j DROP
-A fw2nginx -p tcp -m tcp --dport 9090 -j DROP
-A fw2nginx -p tcp -m tcp --dport 9093 -j DROP
-A fw2nginx -p tcp -m tcp --dport 5606 -j DROP
-A fw2nginx -p tcp -m multiport --dports 2376,2377,7946 -j ACCEPT
-A fw2nginx -p udp -m multiport --dports 4789,7946 -j ACCEPT
-A fw2nginx -p tcp -m tcp --dport 2049 -j ACCEPT
-A fw2nginx -p tcp -m tcp --dport 38465 -j ACCEPT
-A fw2nginx -p tcp -m tcp --dport 38466 -j ACCEPT
-A fw2nginx -p tcp -m tcp --dport 38468 -j ACCEPT
-A fw2nginx -p tcp -m tcp --dport 38469 -j ACCEPT
-A fw2nginx -p tcp -m tcp --dport 24007 -j ACCEPT
-A fw2nginx -p tcp -m tcp --dport 49152:65535 -j ACCEPT
-A fw2nginx -p tcp -m tcp --dport 22 -j ACCEPT
-A fw2nginx -p tcp -m tcp --dport 111 -j ACCEPT
-A fw2nginx -p tcp -m tcp --dport 445 -j ACCEPT
-A fw2nginx -p tcp -m tcp --dport 8080 -j ACCEPT
-A fw2nginx -p tcp -m tcp --dport 6010 -j ACCEPT
-A fw2nginx -p tcp -m tcp --dport 6011 -j ACCEPT
-A fw2nginx -p tcp -m tcp --dport 6012 -j ACCEPT
-A fw2nginx -p tcp -m tcp --dport 443 -j ACCEPT
-A fw2nginx -p tcp -m tcp --dport 111 -j ACCEPT
-A fw2nginx -m addrtype --dst-type BROADCAST -j DROP
-A fw2nginx -m addrtype --dst-type ANYCAST -j DROP
-A fw2nginx -m addrtype --dst-type MULTICAST -j DROP
-A fw2nginx -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:fw2nginx:DROP:" --log-level 6
-A fw2nginx -j DROP
-A fw2repo -m conntrack --ctstate INVALID -j _fw2repo
-A fw2repo -d 127.0.0.53/32 -p tcp -m tcp --dport 53 -j ACCEPT
-A fw2repo -d 127.0.0.53/32 -p udp -m udp --dport 53 -j ACCEPT
-A fw2repo -p icmp -j ACCEPT
-A fw2repo -p tcp -m multiport --dports 80,443 -j ACCEPT
-A fw2repo -d 172.16.1.10/32 -p tcp -m multiport --dports 80,443 -j ACCEPT
-A fw2repo -m addrtype --dst-type BROADCAST -j DROP
-A fw2repo -m addrtype --dst-type ANYCAST -j DROP
-A fw2repo -m addrtype --dst-type MULTICAST -j DROP
-A fw2repo -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:fw2repo:DROP:" --log-level 6
-A fw2repo -j DROP
-A fw2vip -m conntrack --ctstate INVALID -j _fw2vip
-A fw2vip -d 127.0.0.53/32 -p tcp -m tcp --dport 53 -j ACCEPT
-A fw2vip -d 127.0.0.53/32 -p udp -m udp --dport 53 -j ACCEPT
-A fw2vip -p icmp -j ACCEPT
-A fw2vip -m addrtype --dst-type BROADCAST -j DROP
-A fw2vip -m addrtype --dst-type ANYCAST -j DROP
-A fw2vip -m addrtype --dst-type MULTICAST -j DROP
-A fw2vip -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:fw2vip:DROP:" --log-level 6
-A fw2vip -j DROP
-A fw2vpn -m conntrack --ctstate INVALID -j _fw2vpn
-A fw2vpn -d 127.0.0.53/32 -p tcp -m tcp --dport 53 -j ACCEPT
-A fw2vpn -d 127.0.0.53/32 -p udp -m udp --dport 53 -j ACCEPT
-A fw2vpn -p icmp -j ACCEPT
-A fw2vpn -m addrtype --dst-type BROADCAST -j DROP
-A fw2vpn -m addrtype --dst-type ANYCAST -j DROP
-A fw2vpn -m addrtype --dst-type MULTICAST -j DROP
-A fw2vpn -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:fw2vpn:DROP:" --log-level 6
-A fw2vpn -j DROP
-A fw2vrrp -m conntrack --ctstate INVALID -j _fw2vrrp
-A fw2vrrp -d 127.0.0.53/32 -p tcp -m tcp --dport 53 -j ACCEPT
-A fw2vrrp -d 127.0.0.53/32 -p udp -m udp --dport 53 -j ACCEPT
-A fw2vrrp -p icmp -j ACCEPT
-A fw2vrrp -p udp -m udp --dport 53 -j ACCEPT
-A fw2vrrp -m addrtype --dst-type BROADCAST -j DROP
-A fw2vrrp -m addrtype --dst-type ANYCAST -j DROP
-A fw2vrrp -m addrtype --dst-type MULTICAST -j DROP
-A fw2vrrp -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:fw2vrrp:DROP:" --log-level 6
-A fw2vrrp -j DROP
-A fw2wan -m conntrack --ctstate INVALID -j _fw2wan
-A fw2wan -d 127.0.0.53/32 -p tcp -m tcp --dport 53 -j ACCEPT
-A fw2wan -d 127.0.0.53/32 -p udp -m udp --dport 53 -j ACCEPT
-A fw2wan -p icmp -j ACCEPT
-A fw2wan -p tcp -m multiport --dports 80,443 -j ACCEPT
-A fw2wan -p udp -m udp --dport 123 -j ACCEPT
-A fw2wan -p udp -m udp --dport 53 -j ACCEPT
-A fw2wan -d 8.8.8.8/32 -p tcp -m tcp --dport 53 -j ACCEPT
-A fw2wan -d 8.8.4.4/32 -p tcp -m tcp --dport 53 -j ACCEPT
-A fw2wan -d 195.54.210.26/32 -p tcp -m tcp --dport 53 -j ACCEPT
-A fw2wan -d 8.8.8.8/32 -p udp -m udp --dport 53 -j ACCEPT
-A fw2wan -d 8.8.4.4/32 -p udp -m udp --dport 53 -j ACCEPT
-A fw2wan -d 195.54.210.26/32 -p udp -m udp --dport 53 -j ACCEPT
-A fw2wan -m addrtype --dst-type BROADCAST -j DROP
-A fw2wan -m addrtype --dst-type ANYCAST -j DROP
-A fw2wan -m addrtype --dst-type MULTICAST -j DROP
-A fw2wan -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:fw2wan:DROP:" --log-level 6
-A fw2wan -j DROP
-A geov2bas -m conntrack --ctstate INVALID -j _geov2bas
-A geov2bas -m addrtype --dst-type BROADCAST -j DROP
-A geov2bas -m addrtype --dst-type ANYCAST -j DROP
-A geov2bas -m addrtype --dst-type MULTICAST -j DROP
-A geov2bas -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:geov2bas:DROP:" --log-level 6
-A geov2bas -j DROP
-A geov2brg -m conntrack --ctstate INVALID -j _geov2brg
-A geov2brg -m addrtype --dst-type BROADCAST -j DROP
-A geov2brg -m addrtype --dst-type ANYCAST -j DROP
-A geov2brg -m addrtype --dst-type MULTICAST -j DROP
-A geov2brg -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:geov2brg:DROP:" --log-level 6
-A geov2brg -j DROP
-A geov2cde -m conntrack --ctstate INVALID -j _geov2cde
-A geov2cde -m addrtype --dst-type BROADCAST -j DROP
-A geov2cde -m addrtype --dst-type ANYCAST -j DROP
-A geov2cde -m addrtype --dst-type MULTICAST -j DROP
-A geov2cde -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:geov2cde:DROP:" --log-level 6
-A geov2cde -j DROP
-A geov2clu -m conntrack --ctstate INVALID -j _geov2clu
-A geov2clu -m addrtype --dst-type BROADCAST -j DROP
-A geov2clu -m addrtype --dst-type ANYCAST -j DROP
-A geov2clu -m addrtype --dst-type MULTICAST -j DROP
-A geov2clu -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:geov2clu:DROP:" --log-level 6
-A geov2clu -j DROP
-A geov2ess -m conntrack --ctstate INVALID -j _geov2ess
-A geov2ess -m addrtype --dst-type BROADCAST -j DROP
-A geov2ess -m addrtype --dst-type ANYCAST -j DROP
-A geov2ess -m addrtype --dst-type MULTICAST -j DROP
-A geov2ess -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:geov2ess:DROP:" --log-level 6
-A geov2ess -j DROP
-A geov2fw -m conntrack --ctstate INVALID -j _geov2fw
-A geov2fw -p icmp -m hashlimit --hashlimit-upto 2/sec --hashlimit-burst 5 --hashlimit-mode srcip --hashlimit-name shorewall23 -j ACCEPT
-A geov2fw -p tcp -m tcp --dport 22 -j ACCEPT
-A geov2fw -p icmp -m hashlimit --hashlimit-upto 2/sec --hashlimit-burst 5 --hashlimit-mode srcip --hashlimit-name shorewall37 -j ACCEPT
-A geov2fw -p tcp -m tcp --dport 9103 -j DROP
-A geov2fw -p tcp -m tcp --dport 8080 -j DROP
-A geov2fw -p tcp -m tcp --dport 22 -j ACCEPT
-A geov2fw -m addrtype --dst-type BROADCAST -j DROP
-A geov2fw -m addrtype --dst-type ANYCAST -j DROP
-A geov2fw -m addrtype --dst-type MULTICAST -j DROP
-A geov2fw -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:geov2fw:DROP:" --log-level 6
-A geov2fw -j DROP
-A geov2loc -m conntrack --ctstate INVALID -j _geov2loc
-A geov2loc -m addrtype --dst-type BROADCAST -j DROP
-A geov2loc -m addrtype --dst-type ANYCAST -j DROP
-A geov2loc -m addrtype --dst-type MULTICAST -j DROP
-A geov2loc -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:geov2loc:DROP:" --log-level 6
-A geov2loc -j DROP
-A geov2net -m conntrack --ctstate INVALID -j _geov2net
-A geov2net -m addrtype --dst-type BROADCAST -j DROP
-A geov2net -m addrtype --dst-type ANYCAST -j DROP
-A geov2net -m addrtype --dst-type MULTICAST -j DROP
-A geov2net -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:geov2net:DROP:" --log-level 6
-A geov2net -j DROP
-A geov2nginx -m conntrack --ctstate INVALID -j _geov2nginx
-A geov2nginx -p tcp -m tcp --dport 6101 -j DROP
-A geov2nginx -p tcp -m tcp --dport 3100 -j DROP
-A geov2nginx -p tcp -m tcp --dport 4100 -j DROP
-A geov2nginx -p tcp -m tcp --dport 5100 -j DROP
-A geov2nginx -p tcp -m tcp --dport 8100 -j DROP
-A geov2nginx -p tcp -m tcp --dport 9100 -j DROP
-A geov2nginx -p tcp -m tcp --dport 4101 -j DROP
-A geov2nginx -p tcp -m tcp --dport 8022 -j DROP
-A geov2nginx -p tcp -m tcp --dport 7657 -j DROP
-A geov2nginx -p tcp -m tcp --dport 5104 -j DROP
-A geov2nginx -p tcp -m tcp --dport 5204 -j DROP
-A geov2nginx -p tcp -m tcp --dport 5304 -j DROP
-A geov2nginx -p tcp -m tcp --dport 5602 -j DROP
-A geov2nginx -p tcp -m tcp --dport 9702 -j DROP
-A geov2nginx -p tcp -m tcp --dport 4740 -j DROP
-A geov2nginx -p tcp -m tcp --dport 5052 -j DROP
-A geov2nginx -p tcp -m tcp --dport 3202 -j DROP
-A geov2nginx -p tcp -m tcp --dport 9003 -j DROP
-A geov2nginx -p tcp -m tcp --dport 8803 -j DROP
-A geov2nginx -p tcp -m tcp --dport 9997 -j DROP
-A geov2nginx -p tcp -m tcp --dport 9101 -j DROP
-A geov2nginx -p tcp -m tcp --dport 5070 -j DROP
-A geov2nginx -p tcp -m tcp --dport 3001 -j DROP
-A geov2nginx -p tcp -m tcp --dport 9090 -j DROP
-A geov2nginx -p tcp -m tcp --dport 9093 -j DROP
-A geov2nginx -p tcp -m tcp --dport 5606 -j DROP
-A geov2nginx -m addrtype --dst-type BROADCAST -j DROP
-A geov2nginx -m addrtype --dst-type ANYCAST -j DROP
-A geov2nginx -m addrtype --dst-type MULTICAST -j DROP
-A geov2nginx -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:geov2nginx:DROP:" --log-level 6
-A geov2nginx -j DROP
-A geov2repo -m conntrack --ctstate INVALID -j _geov2repo
-A geov2repo -m addrtype --dst-type BROADCAST -j DROP
-A geov2repo -m addrtype --dst-type ANYCAST -j DROP
-A geov2repo -m addrtype --dst-type MULTICAST -j DROP
-A geov2repo -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:geov2repo:DROP:" --log-level 6
-A geov2repo -j DROP
-A geov2vip -m conntrack --ctstate INVALID -j _geov2vip
-A geov2vip -m addrtype --dst-type BROADCAST -j DROP
-A geov2vip -m addrtype --dst-type ANYCAST -j DROP
-A geov2vip -m addrtype --dst-type MULTICAST -j DROP
-A geov2vip -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:geov2vip:DROP:" --log-level 6
-A geov2vip -j DROP
-A geov2vpn -m conntrack --ctstate INVALID -j _geov2vpn
-A geov2vpn -m addrtype --dst-type BROADCAST -j DROP
-A geov2vpn -m addrtype --dst-type ANYCAST -j DROP
-A geov2vpn -m addrtype --dst-type MULTICAST -j DROP
-A geov2vpn -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:geov2vpn:DROP:" --log-level 6
-A geov2vpn -j DROP
-A geov2vrrp -m conntrack --ctstate INVALID -j _geov2vrrp
-A geov2vrrp -m addrtype --dst-type BROADCAST -j DROP
-A geov2vrrp -m addrtype --dst-type ANYCAST -j DROP
-A geov2vrrp -m addrtype --dst-type MULTICAST -j DROP
-A geov2vrrp -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:geov2vrrp:DROP:" --log-level 6
-A geov2vrrp -j DROP
-A geov2wan -m conntrack --ctstate INVALID -j _geov2wan
-A geov2wan -m addrtype --dst-type BROADCAST -j DROP
-A geov2wan -m addrtype --dst-type ANYCAST -j DROP
-A geov2wan -m addrtype --dst-type MULTICAST -j DROP
-A geov2wan -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:geov2wan:DROP:" --log-level 6
-A geov2wan -j DROP
-A geov_frwd -o ens160 -j geov2wan
-A geov_frwd -d 172.16.1.3/32 -o ens192 -j geov2nginx
-A geov_frwd -d 172.16.1.2/32 -o ens192 -j geov2nginx
-A geov_frwd -d 172.16.1.1/32 -o ens192 -j geov2nginx
-A geov_frwd -d 172.16.1.9/32 -o ens192 -j geov2bas
-A geov_frwd -d 172.16.1.10/32 -o ens192 -j geov2repo
-A geov_frwd -d 172.16.1.5/32 -o ens192 -j geov2vrrp
-A geov_frwd -d 172.16.1.4/32 -o ens192 -j geov2vrrp
-A geov_frwd -d 172.16.1.100/32 -o ens192 -j geov2vip
-A geov_frwd -d 172.16.1.6/32 -o ens192 -j geov2cde
-A geov_frwd -d 172.16.1.7/32 -o ens192 -j geov2cde
-A geov_frwd -d 172.16.1.8/32 -o ens192 -j geov2cde
-A geov_frwd -d 172.16.1.3/32 -o ens192 -j geov2clu
-A geov_frwd -d 172.16.1.2/32 -o ens192 -j geov2clu
-A geov_frwd -d 172.16.1.1/32 -o ens192 -j geov2clu
-A geov_frwd -o ens192 -j geov2net
-A geov_frwd -o docker0 -j geov2brg
-A geov_frwd -d 10.255.0.0/16 -o docker_gwbridge -j geov2ess
-A geov_frwd -d 10.0.3.0/24 -o docker_gwbridge -j geov2vpn
-A geov_frwd -d 10.0.0.0/24 -o docker_gwbridge -j geov2loc
-A geov_frwd -o docker_gwbridge -j ACCEPT
-A loc2bas -m conntrack --ctstate INVALID -j _loc2bas
-A loc2bas -m addrtype --dst-type BROADCAST -j DROP
-A loc2bas -m addrtype --dst-type ANYCAST -j DROP
-A loc2bas -m addrtype --dst-type MULTICAST -j DROP
-A loc2bas -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:loc2bas:DROP:" --log-level 6
-A loc2bas -j DROP
-A loc2brg -m conntrack --ctstate INVALID -j _loc2brg
-A loc2brg -m addrtype --dst-type BROADCAST -j DROP
-A loc2brg -m addrtype --dst-type ANYCAST -j DROP
-A loc2brg -m addrtype --dst-type MULTICAST -j DROP
-A loc2brg -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:loc2brg:DROP:" --log-level 6
-A loc2brg -j DROP
-A loc2cde -m conntrack --ctstate INVALID -j _loc2cde
-A loc2cde -m addrtype --dst-type BROADCAST -j DROP
-A loc2cde -m addrtype --dst-type ANYCAST -j DROP
-A loc2cde -m addrtype --dst-type MULTICAST -j DROP
-A loc2cde -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:loc2cde:DROP:" --log-level 6
-A loc2cde -j DROP
-A loc2clu -m conntrack --ctstate INVALID -j _loc2clu
-A loc2clu -m addrtype --dst-type BROADCAST -j DROP
-A loc2clu -m addrtype --dst-type ANYCAST -j DROP
-A loc2clu -m addrtype --dst-type MULTICAST -j DROP
-A loc2clu -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:loc2clu:DROP:" --log-level 6
-A loc2clu -j DROP
-A loc2ess -m conntrack --ctstate INVALID -j _loc2ess
-A loc2ess -m addrtype --dst-type BROADCAST -j DROP
-A loc2ess -m addrtype --dst-type ANYCAST -j DROP
-A loc2ess -m addrtype --dst-type MULTICAST -j DROP
-A loc2ess -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:loc2ess:DROP:" --log-level 6
-A loc2ess -j DROP
-A loc2fw -m conntrack --ctstate INVALID -j _loc2fw
-A loc2fw -p icmp -m hashlimit --hashlimit-upto 2/sec --hashlimit-burst 5 --hashlimit-mode srcip --hashlimit-name shorewall22 -j ACCEPT
-A loc2fw -p tcp -m tcp --dport 22 -j ACCEPT
-A loc2fw -p icmp -m hashlimit --hashlimit-upto 2/sec --hashlimit-burst 5 --hashlimit-mode srcip --hashlimit-name shorewall36 -j ACCEPT
-A loc2fw -p tcp -m tcp --dport 9103 -j DROP
-A loc2fw -p tcp -m tcp --dport 8080 -j DROP
-A loc2fw -p tcp -m tcp --dport 22 -j ACCEPT
-A loc2fw -m addrtype --dst-type BROADCAST -j DROP
-A loc2fw -m addrtype --dst-type ANYCAST -j DROP
-A loc2fw -m addrtype --dst-type MULTICAST -j DROP
-A loc2fw -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:loc2fw:DROP:" --log-level 6
-A loc2fw -j DROP
-A loc2geov -m conntrack --ctstate INVALID -j _loc2geov
-A loc2geov -m addrtype --dst-type BROADCAST -j DROP
-A loc2geov -m addrtype --dst-type ANYCAST -j DROP
-A loc2geov -m addrtype --dst-type MULTICAST -j DROP
-A loc2geov -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:loc2geov:DROP:" --log-level 6
-A loc2geov -j DROP
-A loc2net -m conntrack --ctstate INVALID -j _loc2net
-A loc2net -m addrtype --dst-type BROADCAST -j DROP
-A loc2net -m addrtype --dst-type ANYCAST -j DROP
-A loc2net -m addrtype --dst-type MULTICAST -j DROP
-A loc2net -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:loc2net:DROP:" --log-level 6
-A loc2net -j DROP
-A loc2nginx -m conntrack --ctstate INVALID -j _loc2nginx
-A loc2nginx -p tcp -m tcp --dport 6101 -j DROP
-A loc2nginx -p tcp -m tcp --dport 3100 -j DROP
-A loc2nginx -p tcp -m tcp --dport 4100 -j DROP
-A loc2nginx -p tcp -m tcp --dport 5100 -j DROP
-A loc2nginx -p tcp -m tcp --dport 8100 -j DROP
-A loc2nginx -p tcp -m tcp --dport 9100 -j DROP
-A loc2nginx -p tcp -m tcp --dport 4101 -j DROP
-A loc2nginx -p tcp -m tcp --dport 8022 -j DROP
-A loc2nginx -p tcp -m tcp --dport 7657 -j DROP
-A loc2nginx -p tcp -m tcp --dport 5104 -j DROP
-A loc2nginx -p tcp -m tcp --dport 5204 -j DROP
-A loc2nginx -p tcp -m tcp --dport 5304 -j DROP
-A loc2nginx -p tcp -m tcp --dport 5602 -j DROP
-A loc2nginx -p tcp -m tcp --dport 9702 -j DROP
-A loc2nginx -p tcp -m tcp --dport 4740 -j DROP
-A loc2nginx -p tcp -m tcp --dport 5052 -j DROP
-A loc2nginx -p tcp -m tcp --dport 3202 -j DROP
-A loc2nginx -p tcp -m tcp --dport 9003 -j DROP
-A loc2nginx -p tcp -m tcp --dport 8803 -j DROP
-A loc2nginx -p tcp -m tcp --dport 9997 -j DROP
-A loc2nginx -p tcp -m tcp --dport 9101 -j DROP
-A loc2nginx -p tcp -m tcp --dport 5070 -j DROP
-A loc2nginx -p tcp -m tcp --dport 3001 -j DROP
-A loc2nginx -p tcp -m tcp --dport 9090 -j DROP
-A loc2nginx -p tcp -m tcp --dport 9093 -j DROP
-A loc2nginx -p tcp -m tcp --dport 5606 -j DROP
-A loc2nginx -m addrtype --dst-type BROADCAST -j DROP
-A loc2nginx -m addrtype --dst-type ANYCAST -j DROP
-A loc2nginx -m addrtype --dst-type MULTICAST -j DROP
-A loc2nginx -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:loc2nginx:DROP:" --log-level 6
-A loc2nginx -j DROP
-A loc2repo -m conntrack --ctstate INVALID -j _loc2repo
-A loc2repo -m addrtype --dst-type BROADCAST -j DROP
-A loc2repo -m addrtype --dst-type ANYCAST -j DROP
-A loc2repo -m addrtype --dst-type MULTICAST -j DROP
-A loc2repo -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:loc2repo:DROP:" --log-level 6
-A loc2repo -j DROP
-A loc2vip -m conntrack --ctstate INVALID -j _loc2vip
-A loc2vip -m addrtype --dst-type BROADCAST -j DROP
-A loc2vip -m addrtype --dst-type ANYCAST -j DROP
-A loc2vip -m addrtype --dst-type MULTICAST -j DROP
-A loc2vip -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:loc2vip:DROP:" --log-level 6
-A loc2vip -j DROP
-A loc2vpn -m conntrack --ctstate INVALID -j _loc2vpn
-A loc2vpn -m addrtype --dst-type BROADCAST -j DROP
-A loc2vpn -m addrtype --dst-type ANYCAST -j DROP
-A loc2vpn -m addrtype --dst-type MULTICAST -j DROP
-A loc2vpn -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:loc2vpn:DROP:" --log-level 6
-A loc2vpn -j DROP
-A loc2vrrp -m conntrack --ctstate INVALID -j _loc2vrrp
-A loc2vrrp -m addrtype --dst-type BROADCAST -j DROP
-A loc2vrrp -m addrtype --dst-type ANYCAST -j DROP
-A loc2vrrp -m addrtype --dst-type MULTICAST -j DROP
-A loc2vrrp -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:loc2vrrp:DROP:" --log-level 6
-A loc2vrrp -j DROP
-A loc2wan -m conntrack --ctstate INVALID -j _loc2wan
-A loc2wan -m addrtype --dst-type BROADCAST -j DROP
-A loc2wan -m addrtype --dst-type ANYCAST -j DROP
-A loc2wan -m addrtype --dst-type MULTICAST -j DROP
-A loc2wan -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:loc2wan:DROP:" --log-level 6
-A loc2wan -j DROP
-A loc_frwd -o ens160 -j loc2wan
-A loc_frwd -d 172.16.1.3/32 -o ens192 -j loc2nginx
-A loc_frwd -d 172.16.1.2/32 -o ens192 -j loc2nginx
-A loc_frwd -d 172.16.1.1/32 -o ens192 -j loc2nginx
-A loc_frwd -d 172.16.1.9/32 -o ens192 -j loc2bas
-A loc_frwd -d 172.16.1.10/32 -o ens192 -j loc2repo
-A loc_frwd -d 172.16.1.5/32 -o ens192 -j loc2vrrp
-A loc_frwd -d 172.16.1.4/32 -o ens192 -j loc2vrrp
-A loc_frwd -d 172.16.1.100/32 -o ens192 -j loc2vip
-A loc_frwd -d 172.16.1.6/32 -o ens192 -j loc2cde
-A loc_frwd -d 172.16.1.7/32 -o ens192 -j loc2cde
-A loc_frwd -d 172.16.1.8/32 -o ens192 -j loc2cde
-A loc_frwd -d 172.16.1.3/32 -o ens192 -j loc2clu
-A loc_frwd -d 172.16.1.2/32 -o ens192 -j loc2clu
-A loc_frwd -d 172.16.1.1/32 -o ens192 -j loc2clu
-A loc_frwd -o ens192 -j loc2net
-A loc_frwd -o docker0 -j loc2brg
-A loc_frwd -d 10.255.0.0/16 -o docker_gwbridge -j loc2ess
-A loc_frwd -d 10.0.3.0/24 -o docker_gwbridge -j loc2vpn
-A loc_frwd -o docker_gwbridge -j loc2geov
-A logdrop -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:logdrop:DROP:" --log-level 6
-A logdrop -j DROP
-A logflags -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:logflags:DROP:" --log-level 6 --log-ip-options
-A logflags -j DROP
-A logreject -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:logreject:REJECT:" --log-level 6
-A logreject -j reject
-A net2bas -m conntrack --ctstate INVALID -j _net2bas
-A net2bas -m addrtype --dst-type BROADCAST -j DROP
-A net2bas -m addrtype --dst-type ANYCAST -j DROP
-A net2bas -m addrtype --dst-type MULTICAST -j DROP
-A net2bas -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:net2bas:DROP:" --log-level 6
-A net2bas -j DROP
-A net2brg -m conntrack --ctstate INVALID -j _net2brg
-A net2brg -m addrtype --dst-type BROADCAST -j DROP
-A net2brg -m addrtype --dst-type ANYCAST -j DROP
-A net2brg -m addrtype --dst-type MULTICAST -j DROP
-A net2brg -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:net2brg:DROP:" --log-level 6
-A net2brg -j DROP
-A net2cde -m conntrack --ctstate INVALID -j _net2cde
-A net2cde -m addrtype --dst-type BROADCAST -j DROP
-A net2cde -m addrtype --dst-type ANYCAST -j DROP
-A net2cde -m addrtype --dst-type MULTICAST -j DROP
-A net2cde -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:net2cde:DROP:" --log-level 6
-A net2cde -j DROP
-A net2clu -m conntrack --ctstate INVALID -j _net2clu
-A net2clu -m addrtype --dst-type BROADCAST -j DROP
-A net2clu -m addrtype --dst-type ANYCAST -j DROP
-A net2clu -m addrtype --dst-type MULTICAST -j DROP
-A net2clu -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:net2clu:DROP:" --log-level 6
-A net2clu -j DROP
-A net2ess -m conntrack --ctstate INVALID -j _net2ess
-A net2ess -m addrtype --dst-type BROADCAST -j DROP
-A net2ess -m addrtype --dst-type ANYCAST -j DROP
-A net2ess -m addrtype --dst-type MULTICAST -j DROP
-A net2ess -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:net2ess:DROP:" --log-level 6
-A net2ess -j DROP
-A net2fw -m conntrack --ctstate INVALID -j _net2fw
-A net2fw -s 10.0.0.0/8 -j DROP
-A net2fw -s 172.16.0.0/12 -j DROP
-A net2fw -s 192.168.0.0/16 -j DROP
-A net2fw -s 169.254.0.0/16 -j DROP
-A net2fw -s 0.0.0.0/8 -j DROP
-A net2fw -s 127.0.0.0/8 -j DROP
-A net2fw -s 240.0.0.0/4 -j DROP
-A net2fw -s 255.255.255.255/32 -j DROP
-A net2fw -s 192.0.2.0/24 -j DROP
-A net2fw -s 100.64.0.0/10 -j DROP
-A net2fw -s 192.0.0.0/24 -j DROP
-A net2fw -s 198.18.0.0/15 -j DROP
-A net2fw -s 198.51.100.0/24 -j DROP
-A net2fw -s 203.0.113.0/24 -j DROP
-A net2fw -s 224.0.0.0/4 -j DROP
-A net2fw -p icmp -m icmp --icmp-type 8 -m hashlimit --hashlimit-upto 2/sec --hashlimit-burst 5 --hashlimit-mode srcip --hashlimit-name shorewall1 -m comment --comment Ping -j ACCEPT
-A net2fw -p icmp -m icmp --icmp-type 3/4 -j ACCEPT
-A net2fw -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A net2fw -p icmp -m icmp --icmp-type 11 -j ACCEPT
-A net2fw -p udp -m udp --dport 33434:33529 -j ACCEPT
-A net2fw -p tcp -m tcp --dport 23 -j DROP
-A net2fw -p icmp -m hashlimit --hashlimit-upto 2/sec --hashlimit-burst 5 --hashlimit-mode srcip --hashlimit-name shorewall18 -j ACCEPT
-A net2fw -p tcp -m tcp --dport 22 -j ACCEPT
-A net2fw -p icmp -m hashlimit --hashlimit-upto 2/sec --hashlimit-burst 5 --hashlimit-mode srcip --hashlimit-name shorewall32 -j ACCEPT
-A net2fw -p tcp -m tcp --dport 9103 -j DROP
-A net2fw -p tcp -m tcp --dport 8080 -j DROP
-A net2fw -p tcp -m tcp --dport 22 -j ACCEPT
-A net2fw -m addrtype --dst-type BROADCAST -j DROP
-A net2fw -m addrtype --dst-type ANYCAST -j DROP
-A net2fw -m addrtype --dst-type MULTICAST -j DROP
-A net2fw -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:net2fw:DROP:" --log-level 6
-A net2fw -j DROP
-A net2geov -m conntrack --ctstate INVALID -j _net2geov
-A net2geov -m addrtype --dst-type BROADCAST -j DROP
-A net2geov -m addrtype --dst-type ANYCAST -j DROP
-A net2geov -m addrtype --dst-type MULTICAST -j DROP
-A net2geov -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:net2geov:DROP:" --log-level 6
-A net2geov -j DROP
-A net2loc -m conntrack --ctstate INVALID -j _net2loc
-A net2loc -m addrtype --dst-type BROADCAST -j DROP
-A net2loc -m addrtype --dst-type ANYCAST -j DROP
-A net2loc -m addrtype --dst-type MULTICAST -j DROP
-A net2loc -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:net2loc:DROP:" --log-level 6
-A net2loc -j DROP
-A net2nginx -m conntrack --ctstate INVALID -j _net2nginx
-A net2nginx -p tcp -m tcp --dport 6101 -j DROP
-A net2nginx -p tcp -m tcp --dport 3100 -j DROP
-A net2nginx -p tcp -m tcp --dport 4100 -j DROP
-A net2nginx -p tcp -m tcp --dport 5100 -j DROP
-A net2nginx -p tcp -m tcp --dport 8100 -j DROP
-A net2nginx -p tcp -m tcp --dport 9100 -j DROP
-A net2nginx -p tcp -m tcp --dport 4101 -j DROP
-A net2nginx -p tcp -m tcp --dport 8022 -j DROP
-A net2nginx -p tcp -m tcp --dport 7657 -j DROP
-A net2nginx -p tcp -m tcp --dport 5104 -j DROP
-A net2nginx -p tcp -m tcp --dport 5204 -j DROP
-A net2nginx -p tcp -m tcp --dport 5304 -j DROP
-A net2nginx -p tcp -m tcp --dport 5602 -j DROP
-A net2nginx -p tcp -m tcp --dport 9702 -j DROP
-A net2nginx -p tcp -m tcp --dport 4740 -j DROP
-A net2nginx -p tcp -m tcp --dport 5052 -j DROP
-A net2nginx -p tcp -m tcp --dport 3202 -j DROP
-A net2nginx -p tcp -m tcp --dport 9003 -j DROP
-A net2nginx -p tcp -m tcp --dport 8803 -j DROP
-A net2nginx -p tcp -m tcp --dport 9997 -j DROP
-A net2nginx -p tcp -m tcp --dport 9101 -j DROP
-A net2nginx -p tcp -m tcp --dport 5070 -j DROP
-A net2nginx -p tcp -m tcp --dport 3001 -j DROP
-A net2nginx -p tcp -m tcp --dport 9090 -j DROP
-A net2nginx -p tcp -m tcp --dport 9093 -j DROP
-A net2nginx -p tcp -m tcp --dport 5606 -j DROP
-A net2nginx -m addrtype --dst-type BROADCAST -j DROP
-A net2nginx -m addrtype --dst-type ANYCAST -j DROP
-A net2nginx -m addrtype --dst-type MULTICAST -j DROP
-A net2nginx -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:net2nginx:DROP:" --log-level 6
-A net2nginx -j DROP
-A net2repo -m conntrack --ctstate INVALID -j _net2repo
-A net2repo -m addrtype --dst-type BROADCAST -j DROP
-A net2repo -m addrtype --dst-type ANYCAST -j DROP
-A net2repo -m addrtype --dst-type MULTICAST -j DROP
-A net2repo -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:net2repo:DROP:" --log-level 6
-A net2repo -j DROP
-A net2vip -m conntrack --ctstate INVALID -j _net2vip
-A net2vip -m addrtype --dst-type BROADCAST -j DROP
-A net2vip -m addrtype --dst-type ANYCAST -j DROP
-A net2vip -m addrtype --dst-type MULTICAST -j DROP
-A net2vip -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:net2vip:DROP:" --log-level 6
-A net2vip -j DROP
-A net2vpn -m conntrack --ctstate INVALID -j _net2vpn
-A net2vpn -m addrtype --dst-type BROADCAST -j DROP
-A net2vpn -m addrtype --dst-type ANYCAST -j DROP
-A net2vpn -m addrtype --dst-type MULTICAST -j DROP
-A net2vpn -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:net2vpn:DROP:" --log-level 6
-A net2vpn -j DROP
-A net2vrrp -m conntrack --ctstate INVALID -j _net2vrrp
-A net2vrrp -m addrtype --dst-type BROADCAST -j DROP
-A net2vrrp -m addrtype --dst-type ANYCAST -j DROP
-A net2vrrp -m addrtype --dst-type MULTICAST -j DROP
-A net2vrrp -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:net2vrrp:DROP:" --log-level 6
-A net2vrrp -j DROP
-A net2wan -m conntrack --ctstate INVALID -j _net2wan
-A net2wan -s 172.16.1.3/32 -p icmp -j ACCEPT
-A net2wan -s 172.16.1.2/32 -p icmp -j ACCEPT
-A net2wan -s 172.16.1.1/32 -p icmp -j ACCEPT
-A net2wan -s 172.16.1.3/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A net2wan -s 172.16.1.2/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A net2wan -s 172.16.1.1/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A net2wan -s 172.16.1.3/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A net2wan -s 172.16.1.2/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A net2wan -s 172.16.1.1/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A net2wan -s 172.16.1.3/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A net2wan -s 172.16.1.2/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A net2wan -s 172.16.1.1/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A net2wan -s 172.16.1.3/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A net2wan -s 172.16.1.2/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A net2wan -s 172.16.1.1/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A net2wan -m addrtype --dst-type BROADCAST -j DROP
-A net2wan -m addrtype --dst-type ANYCAST -j DROP
-A net2wan -m addrtype --dst-type MULTICAST -j DROP
-A net2wan -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:net2wan:DROP:" --log-level 6
-A net2wan -j DROP
-A net_frwd -o ens160 -j net2wan
-A net_frwd -d 172.16.1.3/32 -o ens192 -j net2nginx
-A net_frwd -d 172.16.1.2/32 -o ens192 -j net2nginx
-A net_frwd -d 172.16.1.1/32 -o ens192 -j net2nginx
-A net_frwd -d 172.16.1.9/32 -o ens192 -j net2bas
-A net_frwd -d 172.16.1.10/32 -o ens192 -j net2repo
-A net_frwd -d 172.16.1.5/32 -o ens192 -j net2vrrp
-A net_frwd -d 172.16.1.4/32 -o ens192 -j net2vrrp
-A net_frwd -d 172.16.1.100/32 -o ens192 -j net2vip
-A net_frwd -d 172.16.1.6/32 -o ens192 -j net2cde
-A net_frwd -d 172.16.1.7/32 -o ens192 -j net2cde
-A net_frwd -d 172.16.1.8/32 -o ens192 -j net2cde
-A net_frwd -d 172.16.1.3/32 -o ens192 -j net2clu
-A net_frwd -d 172.16.1.2/32 -o ens192 -j net2clu
-A net_frwd -d 172.16.1.1/32 -o ens192 -j net2clu
-A net_frwd -o docker0 -j net2brg
-A net_frwd -d 10.255.0.0/16 -o docker_gwbridge -j net2ess
-A net_frwd -d 10.0.3.0/24 -o docker_gwbridge -j net2vpn
-A net_frwd -d 10.0.0.0/24 -o docker_gwbridge -j net2loc
-A net_frwd -o docker_gwbridge -j net2geov
-A nginx2bas -m conntrack --ctstate INVALID -j _nginx2bas
-A nginx2bas -m addrtype --dst-type BROADCAST -j DROP
-A nginx2bas -m addrtype --dst-type ANYCAST -j DROP
-A nginx2bas -m addrtype --dst-type MULTICAST -j DROP
-A nginx2bas -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:nginx2bas:DROP:" --log-level 6
-A nginx2bas -j DROP
-A nginx2brg -m conntrack --ctstate INVALID -j _nginx2brg
-A nginx2brg -m addrtype --dst-type BROADCAST -j DROP
-A nginx2brg -m addrtype --dst-type ANYCAST -j DROP
-A nginx2brg -m addrtype --dst-type MULTICAST -j DROP
-A nginx2brg -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:nginx2brg:DROP:" --log-level 6
-A nginx2brg -j DROP
-A nginx2cde -m conntrack --ctstate INVALID -j _nginx2cde
-A nginx2cde -m addrtype --dst-type BROADCAST -j DROP
-A nginx2cde -m addrtype --dst-type ANYCAST -j DROP
-A nginx2cde -m addrtype --dst-type MULTICAST -j DROP
-A nginx2cde -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:nginx2cde:DROP:" --log-level 6
-A nginx2cde -j DROP
-A nginx2clu -m conntrack --ctstate INVALID -j _nginx2clu
-A nginx2clu -m addrtype --dst-type BROADCAST -j DROP
-A nginx2clu -m addrtype --dst-type ANYCAST -j DROP
-A nginx2clu -m addrtype --dst-type MULTICAST -j DROP
-A nginx2clu -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:nginx2clu:DROP:" --log-level 6
-A nginx2clu -j DROP
-A nginx2ess -m conntrack --ctstate INVALID -j _nginx2ess
-A nginx2ess -m addrtype --dst-type BROADCAST -j DROP
-A nginx2ess -m addrtype --dst-type ANYCAST -j DROP
-A nginx2ess -m addrtype --dst-type MULTICAST -j DROP
-A nginx2ess -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:nginx2ess:DROP:" --log-level 6
-A nginx2ess -j DROP
-A nginx2fw -m conntrack --ctstate INVALID -j _nginx2fw
-A nginx2fw -p tcp -m tcp --dport 22 -j ACCEPT
-A nginx2fw -p tcp -m tcp --dport 1194 -j ACCEPT
-A nginx2fw -p tcp -m tcp --dport 1194 -j ACCEPT
-A nginx2fw -p tcp -m tcp --dport 11443 -j ACCEPT
-A nginx2fw -p tcp -m multiport --dports 2376,2377,7946 -j ACCEPT
-A nginx2fw -p udp -m multiport --dports 4789,7946 -j ACCEPT
-A nginx2fw -p tcp -m tcp --dport 2049 -j ACCEPT
-A nginx2fw -p tcp -m tcp --dport 38465 -j ACCEPT
-A nginx2fw -p tcp -m tcp --dport 38466 -j ACCEPT
-A nginx2fw -p tcp -m tcp --dport 38468 -j ACCEPT
-A nginx2fw -p tcp -m tcp --dport 38469 -j ACCEPT
-A nginx2fw -p tcp -m tcp --dport 24007 -j ACCEPT
-A nginx2fw -p tcp -m tcp --dport 49152:65535 -j ACCEPT
-A nginx2fw -p tcp -m tcp --dport 22 -j ACCEPT
-A nginx2fw -p tcp -m tcp --dport 111 -j ACCEPT
-A nginx2fw -p tcp -m tcp --dport 445 -j ACCEPT
-A nginx2fw -p tcp -m tcp --dport 8080 -j ACCEPT
-A nginx2fw -p tcp -m tcp --dport 6010 -j ACCEPT
-A nginx2fw -p tcp -m tcp --dport 6011 -j ACCEPT
-A nginx2fw -p tcp -m tcp --dport 6012 -j ACCEPT
-A nginx2fw -p tcp -m tcp --dport 443 -j ACCEPT
-A nginx2fw -p tcp -m tcp --dport 111 -j ACCEPT
-A nginx2fw -s 10.0.0.0/8 -j DROP
-A nginx2fw -s 172.16.0.0/12 -j DROP
-A nginx2fw -s 192.168.0.0/16 -j DROP
-A nginx2fw -s 169.254.0.0/16 -j DROP
-A nginx2fw -s 0.0.0.0/8 -j DROP
-A nginx2fw -s 127.0.0.0/8 -j DROP
-A nginx2fw -s 240.0.0.0/4 -j DROP
-A nginx2fw -s 255.255.255.255/32 -j DROP
-A nginx2fw -s 192.0.2.0/24 -j DROP
-A nginx2fw -s 100.64.0.0/10 -j DROP
-A nginx2fw -s 192.0.0.0/24 -j DROP
-A nginx2fw -s 198.18.0.0/15 -j DROP
-A nginx2fw -s 198.51.100.0/24 -j DROP
-A nginx2fw -s 203.0.113.0/24 -j DROP
-A nginx2fw -s 224.0.0.0/4 -j DROP
-A nginx2fw -p icmp -m icmp --icmp-type 8 -m hashlimit --hashlimit-upto 2/sec --hashlimit-burst 5 --hashlimit-mode srcip --hashlimit-name shorewall2 -m comment --comment Ping -j ACCEPT
-A nginx2fw -p icmp -m icmp --icmp-type 3/4 -j ACCEPT
-A nginx2fw -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A nginx2fw -p icmp -m icmp --icmp-type 11 -j ACCEPT
-A nginx2fw -p udp -m udp --dport 33434:33529 -j ACCEPT
-A nginx2fw -p tcp -m tcp --dport 23 -j DROP
-A nginx2fw -p icmp -m hashlimit --hashlimit-upto 2/sec --hashlimit-burst 5 --hashlimit-mode srcip --hashlimit-name shorewall11 -j ACCEPT
-A nginx2fw -p tcp -m tcp --dport 22 -j ACCEPT
-A nginx2fw -p icmp -m hashlimit --hashlimit-upto 2/sec --hashlimit-burst 5 --hashlimit-mode srcip --hashlimit-name shorewall25 -j ACCEPT
-A nginx2fw -p tcp -m tcp --dport 9103 -j DROP
-A nginx2fw -p tcp -m tcp --dport 8080 -j DROP
-A nginx2fw -p tcp -m tcp --dport 22 -j ACCEPT
-A nginx2fw -m addrtype --dst-type BROADCAST -j DROP
-A nginx2fw -m addrtype --dst-type ANYCAST -j DROP
-A nginx2fw -m addrtype --dst-type MULTICAST -j DROP
-A nginx2fw -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:nginx2fw:DROP:" --log-level 6
-A nginx2fw -j DROP
-A nginx2geov -m conntrack --ctstate INVALID -j _nginx2geov
-A nginx2geov -m addrtype --dst-type BROADCAST -j DROP
-A nginx2geov -m addrtype --dst-type ANYCAST -j DROP
-A nginx2geov -m addrtype --dst-type MULTICAST -j DROP
-A nginx2geov -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:nginx2geov:DROP:" --log-level 6
-A nginx2geov -j DROP
-A nginx2loc -m conntrack --ctstate INVALID -j _nginx2loc
-A nginx2loc -m addrtype --dst-type BROADCAST -j DROP
-A nginx2loc -m addrtype --dst-type ANYCAST -j DROP
-A nginx2loc -m addrtype --dst-type MULTICAST -j DROP
-A nginx2loc -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:nginx2loc:DROP:" --log-level 6
-A nginx2loc -j DROP
-A nginx2net -m conntrack --ctstate INVALID -j _nginx2net
-A nginx2net -p tcp -m tcp --dport 80 -j ACCEPT
-A nginx2net -p tcp -m tcp --dport 443 -j ACCEPT
-A nginx2net -m addrtype --dst-type BROADCAST -j DROP
-A nginx2net -m addrtype --dst-type ANYCAST -j DROP
-A nginx2net -m addrtype --dst-type MULTICAST -j DROP
-A nginx2net -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:nginx2net:DROP:" --log-level 6
-A nginx2net -j DROP
-A nginx2repo -m conntrack --ctstate INVALID -j _nginx2repo
-A nginx2repo -m addrtype --dst-type BROADCAST -j DROP
-A nginx2repo -m addrtype --dst-type ANYCAST -j DROP
-A nginx2repo -m addrtype --dst-type MULTICAST -j DROP
-A nginx2repo -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:nginx2repo:DROP:" --log-level 6
-A nginx2repo -j DROP
-A nginx2vip -m conntrack --ctstate INVALID -j _nginx2vip
-A nginx2vip -m addrtype --dst-type BROADCAST -j DROP
-A nginx2vip -m addrtype --dst-type ANYCAST -j DROP
-A nginx2vip -m addrtype --dst-type MULTICAST -j DROP
-A nginx2vip -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:nginx2vip:DROP:" --log-level 6
-A nginx2vip -j DROP
-A nginx2vpn -m conntrack --ctstate INVALID -j _nginx2vpn
-A nginx2vpn -m addrtype --dst-type BROADCAST -j DROP
-A nginx2vpn -m addrtype --dst-type ANYCAST -j DROP
-A nginx2vpn -m addrtype --dst-type MULTICAST -j DROP
-A nginx2vpn -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:nginx2vpn:DROP:" --log-level 6
-A nginx2vpn -j DROP
-A nginx2vrrp -m conntrack --ctstate INVALID -j _nginx2vrrp
-A nginx2vrrp -m addrtype --dst-type BROADCAST -j DROP
-A nginx2vrrp -m addrtype --dst-type ANYCAST -j DROP
-A nginx2vrrp -m addrtype --dst-type MULTICAST -j DROP
-A nginx2vrrp -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:nginx2vrrp:DROP:" --log-level 6
-A nginx2vrrp -j DROP
-A nginx2wan -m conntrack --ctstate INVALID -j _nginx2wan
-A nginx2wan -m addrtype --dst-type BROADCAST -j DROP
-A nginx2wan -m addrtype --dst-type ANYCAST -j DROP
-A nginx2wan -m addrtype --dst-type MULTICAST -j DROP
-A nginx2wan -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:nginx2wan:DROP:" --log-level 6
-A nginx2wan -j DROP
-A nginx_frwd -o ens160 -j nginx2wan
-A nginx_frwd -d 172.16.1.9/32 -o ens192 -j nginx2bas
-A nginx_frwd -d 172.16.1.10/32 -o ens192 -j nginx2repo
-A nginx_frwd -d 172.16.1.5/32 -o ens192 -j nginx2vrrp
-A nginx_frwd -d 172.16.1.4/32 -o ens192 -j nginx2vrrp
-A nginx_frwd -d 172.16.1.100/32 -o ens192 -j nginx2vip
-A nginx_frwd -d 172.16.1.6/32 -o ens192 -j nginx2cde
-A nginx_frwd -d 172.16.1.7/32 -o ens192 -j nginx2cde
-A nginx_frwd -d 172.16.1.8/32 -o ens192 -j nginx2cde
-A nginx_frwd -d 172.16.1.3/32 -o ens192 -j nginx2clu
-A nginx_frwd -d 172.16.1.2/32 -o ens192 -j nginx2clu
-A nginx_frwd -d 172.16.1.1/32 -o ens192 -j nginx2clu
-A nginx_frwd -o ens192 -j nginx2net
-A nginx_frwd -o docker0 -j nginx2brg
-A nginx_frwd -d 10.255.0.0/16 -o docker_gwbridge -j nginx2ess
-A nginx_frwd -d 10.0.3.0/24 -o docker_gwbridge -j nginx2vpn
-A nginx_frwd -d 10.0.0.0/24 -o docker_gwbridge -j nginx2loc
-A nginx_frwd -o docker_gwbridge -j nginx2geov
-A reject -m addrtype --src-type BROADCAST -j DROP
-A reject -s 224.0.0.0/4 -j DROP
-A reject -p igmp -j DROP
-A reject -p tcp -j REJECT --reject-with tcp-reset
-A reject -p udp -j REJECT --reject-with icmp-port-unreachable
-A reject -p icmp -j REJECT --reject-with icmp-host-unreachable
-A reject -j REJECT --reject-with icmp-host-prohibited
-A repo2bas -m conntrack --ctstate INVALID -j _repo2bas
-A repo2bas -m addrtype --dst-type BROADCAST -j DROP
-A repo2bas -m addrtype --dst-type ANYCAST -j DROP
-A repo2bas -m addrtype --dst-type MULTICAST -j DROP
-A repo2bas -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:repo2bas:DROP:" --log-level 6
-A repo2bas -j DROP
-A repo2brg -m conntrack --ctstate INVALID -j _repo2brg
-A repo2brg -m addrtype --dst-type BROADCAST -j DROP
-A repo2brg -m addrtype --dst-type ANYCAST -j DROP
-A repo2brg -m addrtype --dst-type MULTICAST -j DROP
-A repo2brg -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:repo2brg:DROP:" --log-level 6
-A repo2brg -j DROP
-A repo2cde -m conntrack --ctstate INVALID -j _repo2cde
-A repo2cde -m addrtype --dst-type BROADCAST -j DROP
-A repo2cde -m addrtype --dst-type ANYCAST -j DROP
-A repo2cde -m addrtype --dst-type MULTICAST -j DROP
-A repo2cde -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:repo2cde:DROP:" --log-level 6
-A repo2cde -j DROP
-A repo2clu -m conntrack --ctstate INVALID -j _repo2clu
-A repo2clu -m addrtype --dst-type BROADCAST -j DROP
-A repo2clu -m addrtype --dst-type ANYCAST -j DROP
-A repo2clu -m addrtype --dst-type MULTICAST -j DROP
-A repo2clu -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:repo2clu:DROP:" --log-level 6
-A repo2clu -j DROP
-A repo2ess -m conntrack --ctstate INVALID -j _repo2ess
-A repo2ess -m addrtype --dst-type BROADCAST -j DROP
-A repo2ess -m addrtype --dst-type ANYCAST -j DROP
-A repo2ess -m addrtype --dst-type MULTICAST -j DROP
-A repo2ess -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:repo2ess:DROP:" --log-level 6
-A repo2ess -j DROP
-A repo2fw -m conntrack --ctstate INVALID -j _repo2fw
-A repo2fw -d 172.16.1.10/32 -p tcp -m multiport --dports 80,443 -j ACCEPT
-A repo2fw -s 10.0.0.0/8 -j DROP
-A repo2fw -s 172.16.0.0/12 -j DROP
-A repo2fw -s 192.168.0.0/16 -j DROP
-A repo2fw -s 169.254.0.0/16 -j DROP
-A repo2fw -s 0.0.0.0/8 -j DROP
-A repo2fw -s 127.0.0.0/8 -j DROP
-A repo2fw -s 240.0.0.0/4 -j DROP
-A repo2fw -s 255.255.255.255/32 -j DROP
-A repo2fw -s 192.0.2.0/24 -j DROP
-A repo2fw -s 100.64.0.0/10 -j DROP
-A repo2fw -s 192.0.0.0/24 -j DROP
-A repo2fw -s 198.18.0.0/15 -j DROP
-A repo2fw -s 198.51.100.0/24 -j DROP
-A repo2fw -s 203.0.113.0/24 -j DROP
-A repo2fw -s 224.0.0.0/4 -j DROP
-A repo2fw -p icmp -m icmp --icmp-type 8 -m hashlimit --hashlimit-upto 2/sec --hashlimit-burst 5 --hashlimit-mode srcip --hashlimit-name shorewall5 -m comment --comment Ping -j ACCEPT
-A repo2fw -p icmp -m icmp --icmp-type 3/4 -j ACCEPT
-A repo2fw -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A repo2fw -p icmp -m icmp --icmp-type 11 -j ACCEPT
-A repo2fw -p udp -m udp --dport 33434:33529 -j ACCEPT
-A repo2fw -p tcp -m tcp --dport 23 -j DROP
-A repo2fw -p icmp -m hashlimit --hashlimit-upto 2/sec --hashlimit-burst 5 --hashlimit-mode srcip --hashlimit-name shorewall13 -j ACCEPT
-A repo2fw -p tcp -m tcp --dport 22 -j ACCEPT
-A repo2fw -p icmp -m hashlimit --hashlimit-upto 2/sec --hashlimit-burst 5 --hashlimit-mode srcip --hashlimit-name shorewall27 -j ACCEPT
-A repo2fw -p tcp -m tcp --dport 9103 -j DROP
-A repo2fw -p tcp -m tcp --dport 8080 -j DROP
-A repo2fw -p tcp -m tcp --dport 22 -j ACCEPT
-A repo2fw -m addrtype --dst-type BROADCAST -j DROP
-A repo2fw -m addrtype --dst-type ANYCAST -j DROP
-A repo2fw -m addrtype --dst-type MULTICAST -j DROP
-A repo2fw -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:repo2fw:DROP:" --log-level 6
-A repo2fw -j DROP
-A repo2geov -m conntrack --ctstate INVALID -j _repo2geov
-A repo2geov -m addrtype --dst-type BROADCAST -j DROP
-A repo2geov -m addrtype --dst-type ANYCAST -j DROP
-A repo2geov -m addrtype --dst-type MULTICAST -j DROP
-A repo2geov -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:repo2geov:DROP:" --log-level 6
-A repo2geov -j DROP
-A repo2loc -m conntrack --ctstate INVALID -j _repo2loc
-A repo2loc -m addrtype --dst-type BROADCAST -j DROP
-A repo2loc -m addrtype --dst-type ANYCAST -j DROP
-A repo2loc -m addrtype --dst-type MULTICAST -j DROP
-A repo2loc -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:repo2loc:DROP:" --log-level 6
-A repo2loc -j DROP
-A repo2net -m conntrack --ctstate INVALID -j _repo2net
-A repo2net -m addrtype --dst-type BROADCAST -j DROP
-A repo2net -m addrtype --dst-type ANYCAST -j DROP
-A repo2net -m addrtype --dst-type MULTICAST -j DROP
-A repo2net -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:repo2net:DROP:" --log-level 6
-A repo2net -j DROP
-A repo2nginx -m conntrack --ctstate INVALID -j _repo2nginx
-A repo2nginx -p tcp -m tcp --dport 6101 -j DROP
-A repo2nginx -p tcp -m tcp --dport 3100 -j DROP
-A repo2nginx -p tcp -m tcp --dport 4100 -j DROP
-A repo2nginx -p tcp -m tcp --dport 5100 -j DROP
-A repo2nginx -p tcp -m tcp --dport 8100 -j DROP
-A repo2nginx -p tcp -m tcp --dport 9100 -j DROP
-A repo2nginx -p tcp -m tcp --dport 4101 -j DROP
-A repo2nginx -p tcp -m tcp --dport 8022 -j DROP
-A repo2nginx -p tcp -m tcp --dport 7657 -j DROP
-A repo2nginx -p tcp -m tcp --dport 5104 -j DROP
-A repo2nginx -p tcp -m tcp --dport 5204 -j DROP
-A repo2nginx -p tcp -m tcp --dport 5304 -j DROP
-A repo2nginx -p tcp -m tcp --dport 5602 -j DROP
-A repo2nginx -p tcp -m tcp --dport 9702 -j DROP
-A repo2nginx -p tcp -m tcp --dport 4740 -j DROP
-A repo2nginx -p tcp -m tcp --dport 5052 -j DROP
-A repo2nginx -p tcp -m tcp --dport 3202 -j DROP
-A repo2nginx -p tcp -m tcp --dport 9003 -j DROP
-A repo2nginx -p tcp -m tcp --dport 8803 -j DROP
-A repo2nginx -p tcp -m tcp --dport 9997 -j DROP
-A repo2nginx -p tcp -m tcp --dport 9101 -j DROP
-A repo2nginx -p tcp -m tcp --dport 5070 -j DROP
-A repo2nginx -p tcp -m tcp --dport 3001 -j DROP
-A repo2nginx -p tcp -m tcp --dport 9090 -j DROP
-A repo2nginx -p tcp -m tcp --dport 9093 -j DROP
-A repo2nginx -p tcp -m tcp --dport 5606 -j DROP
-A repo2nginx -m addrtype --dst-type BROADCAST -j DROP
-A repo2nginx -m addrtype --dst-type ANYCAST -j DROP
-A repo2nginx -m addrtype --dst-type MULTICAST -j DROP
-A repo2nginx -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:repo2nginx:DROP:" --log-level 6
-A repo2nginx -j DROP
-A repo2vip -m conntrack --ctstate INVALID -j _repo2vip
-A repo2vip -m addrtype --dst-type BROADCAST -j DROP
-A repo2vip -m addrtype --dst-type ANYCAST -j DROP
-A repo2vip -m addrtype --dst-type MULTICAST -j DROP
-A repo2vip -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:repo2vip:DROP:" --log-level 6
-A repo2vip -j DROP
-A repo2vpn -m conntrack --ctstate INVALID -j _repo2vpn
-A repo2vpn -m addrtype --dst-type BROADCAST -j DROP
-A repo2vpn -m addrtype --dst-type ANYCAST -j DROP
-A repo2vpn -m addrtype --dst-type MULTICAST -j DROP
-A repo2vpn -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:repo2vpn:DROP:" --log-level 6
-A repo2vpn -j DROP
-A repo2vrrp -m conntrack --ctstate INVALID -j _repo2vrrp
-A repo2vrrp -m addrtype --dst-type BROADCAST -j DROP
-A repo2vrrp -m addrtype --dst-type ANYCAST -j DROP
-A repo2vrrp -m addrtype --dst-type MULTICAST -j DROP
-A repo2vrrp -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:repo2vrrp:DROP:" --log-level 6
-A repo2vrrp -j DROP
-A repo2wan -m conntrack --ctstate INVALID -j _repo2wan
-A repo2wan -m addrtype --dst-type BROADCAST -j DROP
-A repo2wan -m addrtype --dst-type ANYCAST -j DROP
-A repo2wan -m addrtype --dst-type MULTICAST -j DROP
-A repo2wan -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:repo2wan:DROP:" --log-level 6
-A repo2wan -j DROP
-A repo_frwd -o ens160 -j repo2wan
-A repo_frwd -d 172.16.1.3/32 -o ens192 -j repo2nginx
-A repo_frwd -d 172.16.1.2/32 -o ens192 -j repo2nginx
-A repo_frwd -d 172.16.1.1/32 -o ens192 -j repo2nginx
-A repo_frwd -d 172.16.1.9/32 -o ens192 -j repo2bas
-A repo_frwd -d 172.16.1.5/32 -o ens192 -j repo2vrrp
-A repo_frwd -d 172.16.1.4/32 -o ens192 -j repo2vrrp
-A repo_frwd -d 172.16.1.100/32 -o ens192 -j repo2vip
-A repo_frwd -d 172.16.1.6/32 -o ens192 -j repo2cde
-A repo_frwd -d 172.16.1.7/32 -o ens192 -j repo2cde
-A repo_frwd -d 172.16.1.8/32 -o ens192 -j repo2cde
-A repo_frwd -d 172.16.1.3/32 -o ens192 -j repo2clu
-A repo_frwd -d 172.16.1.2/32 -o ens192 -j repo2clu
-A repo_frwd -d 172.16.1.1/32 -o ens192 -j repo2clu
-A repo_frwd -o ens192 -j repo2net
-A repo_frwd -o docker0 -j repo2brg
-A repo_frwd -d 10.255.0.0/16 -o docker_gwbridge -j repo2ess
-A repo_frwd -d 10.0.3.0/24 -o docker_gwbridge -j repo2vpn
-A repo_frwd -d 10.0.0.0/24 -o docker_gwbridge -j repo2loc
-A repo_frwd -o docker_gwbridge -j repo2geov
-A shorewall -m recent --set --name %CURRENTTIME --mask 255.255.255.255 --rsource
-A smurflog -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:smurfs:DROP:" --log-level 6
-A smurflog -j DROP
-A smurfs -s 0.0.0.0/32 -j RETURN
-A smurfs -m addrtype --src-type BROADCAST -g smurflog
-A smurfs -s 224.0.0.0/4 -g smurflog
-A tcpflags -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,PSH,URG -g logflags
-A tcpflags -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG NONE -g logflags
-A tcpflags -p tcp -m tcp --tcp-flags SYN,RST SYN,RST -g logflags
-A tcpflags -p tcp -m tcp --tcp-flags FIN,RST FIN,RST -g logflags
-A tcpflags -p tcp -m tcp --tcp-flags FIN,SYN FIN,SYN -g logflags
-A tcpflags -p tcp -m tcp --tcp-flags FIN,PSH,ACK FIN,PSH -g logflags
-A tcpflags -p tcp -m tcp --sport 0 --tcp-flags FIN,SYN,RST,ACK SYN -g logflags
-A vip2bas -m conntrack --ctstate INVALID -j _vip2bas
-A vip2bas -m addrtype --dst-type BROADCAST -j DROP
-A vip2bas -m addrtype --dst-type ANYCAST -j DROP
-A vip2bas -m addrtype --dst-type MULTICAST -j DROP
-A vip2bas -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:vip2bas:DROP:" --log-level 6
-A vip2bas -j DROP
-A vip2brg -m conntrack --ctstate INVALID -j _vip2brg
-A vip2brg -m addrtype --dst-type BROADCAST -j DROP
-A vip2brg -m addrtype --dst-type ANYCAST -j DROP
-A vip2brg -m addrtype --dst-type MULTICAST -j DROP
-A vip2brg -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:vip2brg:DROP:" --log-level 6
-A vip2brg -j DROP
-A vip2cde -m conntrack --ctstate INVALID -j _vip2cde
-A vip2cde -m addrtype --dst-type BROADCAST -j DROP
-A vip2cde -m addrtype --dst-type ANYCAST -j DROP
-A vip2cde -m addrtype --dst-type MULTICAST -j DROP
-A vip2cde -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:vip2cde:DROP:" --log-level 6
-A vip2cde -j DROP
-A vip2clu -m conntrack --ctstate INVALID -j _vip2clu
-A vip2clu -m addrtype --dst-type BROADCAST -j DROP
-A vip2clu -m addrtype --dst-type ANYCAST -j DROP
-A vip2clu -m addrtype --dst-type MULTICAST -j DROP
-A vip2clu -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:vip2clu:DROP:" --log-level 6
-A vip2clu -j DROP
-A vip2ess -m conntrack --ctstate INVALID -j _vip2ess
-A vip2ess -m addrtype --dst-type BROADCAST -j DROP
-A vip2ess -m addrtype --dst-type ANYCAST -j DROP
-A vip2ess -m addrtype --dst-type MULTICAST -j DROP
-A vip2ess -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:vip2ess:DROP:" --log-level 6
-A vip2ess -j DROP
-A vip2fw -m conntrack --ctstate INVALID -j _vip2fw
-A vip2fw -p icmp -m hashlimit --hashlimit-upto 2/sec --hashlimit-burst 5 --hashlimit-mode srcip --hashlimit-name shorewall15 -j ACCEPT
-A vip2fw -p tcp -m tcp --dport 22 -j ACCEPT
-A vip2fw -p icmp -m hashlimit --hashlimit-upto 2/sec --hashlimit-burst 5 --hashlimit-mode srcip --hashlimit-name shorewall29 -j ACCEPT
-A vip2fw -p tcp -m tcp --dport 9103 -j DROP
-A vip2fw -p tcp -m tcp --dport 8080 -j DROP
-A vip2fw -p tcp -m tcp --dport 22 -j ACCEPT
-A vip2fw -m addrtype --dst-type BROADCAST -j DROP
-A vip2fw -m addrtype --dst-type ANYCAST -j DROP
-A vip2fw -m addrtype --dst-type MULTICAST -j DROP
-A vip2fw -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:vip2fw:DROP:" --log-level 6
-A vip2fw -j DROP
-A vip2geov -m conntrack --ctstate INVALID -j _vip2geov
-A vip2geov -m addrtype --dst-type BROADCAST -j DROP
-A vip2geov -m addrtype --dst-type ANYCAST -j DROP
-A vip2geov -m addrtype --dst-type MULTICAST -j DROP
-A vip2geov -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:vip2geov:DROP:" --log-level 6
-A vip2geov -j DROP
-A vip2loc -m conntrack --ctstate INVALID -j _vip2loc
-A vip2loc -m addrtype --dst-type BROADCAST -j DROP
-A vip2loc -m addrtype --dst-type ANYCAST -j DROP
-A vip2loc -m addrtype --dst-type MULTICAST -j DROP
-A vip2loc -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:vip2loc:DROP:" --log-level 6
-A vip2loc -j DROP
-A vip2net -m conntrack --ctstate INVALID -j _vip2net
-A vip2net -m addrtype --dst-type BROADCAST -j DROP
-A vip2net -m addrtype --dst-type ANYCAST -j DROP
-A vip2net -m addrtype --dst-type MULTICAST -j DROP
-A vip2net -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:vip2net:DROP:" --log-level 6
-A vip2net -j DROP
-A vip2nginx -m conntrack --ctstate INVALID -j _vip2nginx
-A vip2nginx -p tcp -m tcp --dport 6101 -j DROP
-A vip2nginx -p tcp -m tcp --dport 3100 -j DROP
-A vip2nginx -p tcp -m tcp --dport 4100 -j DROP
-A vip2nginx -p tcp -m tcp --dport 5100 -j DROP
-A vip2nginx -p tcp -m tcp --dport 8100 -j DROP
-A vip2nginx -p tcp -m tcp --dport 9100 -j DROP
-A vip2nginx -p tcp -m tcp --dport 4101 -j DROP
-A vip2nginx -p tcp -m tcp --dport 8022 -j DROP
-A vip2nginx -p tcp -m tcp --dport 7657 -j DROP
-A vip2nginx -p tcp -m tcp --dport 5104 -j DROP
-A vip2nginx -p tcp -m tcp --dport 5204 -j DROP
-A vip2nginx -p tcp -m tcp --dport 5304 -j DROP
-A vip2nginx -p tcp -m tcp --dport 5602 -j DROP
-A vip2nginx -p tcp -m tcp --dport 9702 -j DROP
-A vip2nginx -p tcp -m tcp --dport 4740 -j DROP
-A vip2nginx -p tcp -m tcp --dport 5052 -j DROP
-A vip2nginx -p tcp -m tcp --dport 3202 -j DROP
-A vip2nginx -p tcp -m tcp --dport 9003 -j DROP
-A vip2nginx -p tcp -m tcp --dport 8803 -j DROP
-A vip2nginx -p tcp -m tcp --dport 9997 -j DROP
-A vip2nginx -p tcp -m tcp --dport 9101 -j DROP
-A vip2nginx -p tcp -m tcp --dport 5070 -j DROP
-A vip2nginx -p tcp -m tcp --dport 3001 -j DROP
-A vip2nginx -p tcp -m tcp --dport 9090 -j DROP
-A vip2nginx -p tcp -m tcp --dport 9093 -j DROP
-A vip2nginx -p tcp -m tcp --dport 5606 -j DROP
-A vip2nginx -m addrtype --dst-type BROADCAST -j DROP
-A vip2nginx -m addrtype --dst-type ANYCAST -j DROP
-A vip2nginx -m addrtype --dst-type MULTICAST -j DROP
-A vip2nginx -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:vip2nginx:DROP:" --log-level 6
-A vip2nginx -j DROP
-A vip2repo -m conntrack --ctstate INVALID -j _vip2repo
-A vip2repo -m addrtype --dst-type BROADCAST -j DROP
-A vip2repo -m addrtype --dst-type ANYCAST -j DROP
-A vip2repo -m addrtype --dst-type MULTICAST -j DROP
-A vip2repo -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:vip2repo:DROP:" --log-level 6
-A vip2repo -j DROP
-A vip2vpn -m conntrack --ctstate INVALID -j _vip2vpn
-A vip2vpn -m addrtype --dst-type BROADCAST -j DROP
-A vip2vpn -m addrtype --dst-type ANYCAST -j DROP
-A vip2vpn -m addrtype --dst-type MULTICAST -j DROP
-A vip2vpn -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:vip2vpn:DROP:" --log-level 6
-A vip2vpn -j DROP
-A vip2vrrp -m conntrack --ctstate INVALID -j _vip2vrrp
-A vip2vrrp -m addrtype --dst-type BROADCAST -j DROP
-A vip2vrrp -m addrtype --dst-type ANYCAST -j DROP
-A vip2vrrp -m addrtype --dst-type MULTICAST -j DROP
-A vip2vrrp -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:vip2vrrp:DROP:" --log-level 6
-A vip2vrrp -j DROP
-A vip2wan -m conntrack --ctstate INVALID -j _vip2wan
-A vip2wan -m addrtype --dst-type BROADCAST -j DROP
-A vip2wan -m addrtype --dst-type ANYCAST -j DROP
-A vip2wan -m addrtype --dst-type MULTICAST -j DROP
-A vip2wan -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:vip2wan:DROP:" --log-level 6
-A vip2wan -j DROP
-A vip_frwd -o ens160 -j vip2wan
-A vip_frwd -d 172.16.1.3/32 -o ens192 -j vip2nginx
-A vip_frwd -d 172.16.1.2/32 -o ens192 -j vip2nginx
-A vip_frwd -d 172.16.1.1/32 -o ens192 -j vip2nginx
-A vip_frwd -d 172.16.1.9/32 -o ens192 -j vip2bas
-A vip_frwd -d 172.16.1.10/32 -o ens192 -j vip2repo
-A vip_frwd -d 172.16.1.5/32 -o ens192 -j vip2vrrp
-A vip_frwd -d 172.16.1.4/32 -o ens192 -j vip2vrrp
-A vip_frwd -d 172.16.1.6/32 -o ens192 -j vip2cde
-A vip_frwd -d 172.16.1.7/32 -o ens192 -j vip2cde
-A vip_frwd -d 172.16.1.8/32 -o ens192 -j vip2cde
-A vip_frwd -d 172.16.1.3/32 -o ens192 -j vip2clu
-A vip_frwd -d 172.16.1.2/32 -o ens192 -j vip2clu
-A vip_frwd -d 172.16.1.1/32 -o ens192 -j vip2clu
-A vip_frwd -o ens192 -j vip2net
-A vip_frwd -o docker0 -j vip2brg
-A vip_frwd -d 10.255.0.0/16 -o docker_gwbridge -j vip2ess
-A vip_frwd -d 10.0.3.0/24 -o docker_gwbridge -j vip2vpn
-A vip_frwd -d 10.0.0.0/24 -o docker_gwbridge -j vip2loc
-A vip_frwd -o docker_gwbridge -j vip2geov
-A vpn2bas -m conntrack --ctstate INVALID -j _vpn2bas
-A vpn2bas -p icmp -j ACCEPT
-A vpn2bas -p tcp -m tcp --dport 22 -j ACCEPT
-A vpn2bas -p icmp -j ACCEPT
-A vpn2bas -p tcp -m tcp --dport 22 -j ACCEPT
-A vpn2bas -m addrtype --dst-type BROADCAST -j DROP
-A vpn2bas -m addrtype --dst-type ANYCAST -j DROP
-A vpn2bas -m addrtype --dst-type MULTICAST -j DROP
-A vpn2bas -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:vpn2bas:DROP:" --log-level 6
-A vpn2bas -j DROP
-A vpn2brg -m conntrack --ctstate INVALID -j _vpn2brg
-A vpn2brg -m addrtype --dst-type BROADCAST -j DROP
-A vpn2brg -m addrtype --dst-type ANYCAST -j DROP
-A vpn2brg -m addrtype --dst-type MULTICAST -j DROP
-A vpn2brg -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:vpn2brg:DROP:" --log-level 6
-A vpn2brg -j DROP
-A vpn2cde -m conntrack --ctstate INVALID -j _vpn2cde
-A vpn2cde -m addrtype --dst-type BROADCAST -j DROP
-A vpn2cde -m addrtype --dst-type ANYCAST -j DROP
-A vpn2cde -m addrtype --dst-type MULTICAST -j DROP
-A vpn2cde -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:vpn2cde:DROP:" --log-level 6
-A vpn2cde -j DROP
-A vpn2clu -m conntrack --ctstate INVALID -j _vpn2clu
-A vpn2clu -m addrtype --dst-type BROADCAST -j DROP
-A vpn2clu -m addrtype --dst-type ANYCAST -j DROP
-A vpn2clu -m addrtype --dst-type MULTICAST -j DROP
-A vpn2clu -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:vpn2clu:DROP:" --log-level 6
-A vpn2clu -j DROP
-A vpn2ess -m conntrack --ctstate INVALID -j _vpn2ess
-A vpn2ess -m addrtype --dst-type BROADCAST -j DROP
-A vpn2ess -m addrtype --dst-type ANYCAST -j DROP
-A vpn2ess -m addrtype --dst-type MULTICAST -j DROP
-A vpn2ess -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:vpn2ess:DROP:" --log-level 6
-A vpn2ess -j DROP
-A vpn2fw -m conntrack --ctstate INVALID -j _vpn2fw
-A vpn2fw -s 10.0.0.0/8 -j DROP
-A vpn2fw -s 172.16.0.0/12 -j DROP
-A vpn2fw -s 192.168.0.0/16 -j DROP
-A vpn2fw -s 169.254.0.0/16 -j DROP
-A vpn2fw -s 0.0.0.0/8 -j DROP
-A vpn2fw -s 127.0.0.0/8 -j DROP
-A vpn2fw -s 240.0.0.0/4 -j DROP
-A vpn2fw -s 255.255.255.255/32 -j DROP
-A vpn2fw -s 192.0.2.0/24 -j DROP
-A vpn2fw -s 100.64.0.0/10 -j DROP
-A vpn2fw -s 192.0.0.0/24 -j DROP
-A vpn2fw -s 198.18.0.0/15 -j DROP
-A vpn2fw -s 198.51.100.0/24 -j DROP
-A vpn2fw -s 203.0.113.0/24 -j DROP
-A vpn2fw -s 224.0.0.0/4 -j DROP
-A vpn2fw -p icmp -m icmp --icmp-type 8 -m hashlimit --hashlimit-upto 2/sec --hashlimit-burst 5 --hashlimit-mode srcip --hashlimit-name shorewall3 -m comment --comment Ping -j ACCEPT
-A vpn2fw -p icmp -m icmp --icmp-type 3/4 -j ACCEPT
-A vpn2fw -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A vpn2fw -p icmp -m icmp --icmp-type 11 -j ACCEPT
-A vpn2fw -p udp -m udp --dport 33434:33529 -j ACCEPT
-A vpn2fw -p tcp -m tcp --dport 23 -j DROP
-A vpn2fw -s 10.0.0.0/8 -j DROP
-A vpn2fw -s 172.16.0.0/12 -j DROP
-A vpn2fw -s 192.168.0.0/16 -j DROP
-A vpn2fw -s 169.254.0.0/16 -j DROP
-A vpn2fw -s 0.0.0.0/8 -j DROP
-A vpn2fw -s 127.0.0.0/8 -j DROP
-A vpn2fw -s 240.0.0.0/4 -j DROP
-A vpn2fw -s 255.255.255.255/32 -j DROP
-A vpn2fw -s 192.0.2.0/24 -j DROP
-A vpn2fw -s 100.64.0.0/10 -j DROP
-A vpn2fw -s 192.0.0.0/24 -j DROP
-A vpn2fw -s 198.18.0.0/15 -j DROP
-A vpn2fw -s 198.51.100.0/24 -j DROP
-A vpn2fw -s 203.0.113.0/24 -j DROP
-A vpn2fw -s 224.0.0.0/4 -j DROP
-A vpn2fw -p icmp -m icmp --icmp-type 8 -m hashlimit --hashlimit-upto 2/sec --hashlimit-burst 5 --hashlimit-mode srcip --hashlimit-name shorewall7 -m comment --comment Ping -j ACCEPT
-A vpn2fw -p icmp -m icmp --icmp-type 3/4 -j ACCEPT
-A vpn2fw -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A vpn2fw -p icmp -m icmp --icmp-type 11 -j ACCEPT
-A vpn2fw -p udp -m udp --dport 33434:33529 -j ACCEPT
-A vpn2fw -p tcp -m tcp --dport 23 -j DROP
-A vpn2fw -p icmp -m hashlimit --hashlimit-upto 2/sec --hashlimit-burst 5 --hashlimit-mode srcip --hashlimit-name shorewall21 -j ACCEPT
-A vpn2fw -p tcp -m tcp --dport 22 -j ACCEPT
-A vpn2fw -p icmp -m hashlimit --hashlimit-upto 2/sec --hashlimit-burst 5 --hashlimit-mode srcip --hashlimit-name shorewall35 -j ACCEPT
-A vpn2fw -p tcp -m tcp --dport 9103 -j DROP
-A vpn2fw -p tcp -m tcp --dport 8080 -j DROP
-A vpn2fw -p tcp -m tcp --dport 22 -j ACCEPT
-A vpn2fw -m addrtype --dst-type BROADCAST -j DROP
-A vpn2fw -m addrtype --dst-type ANYCAST -j DROP
-A vpn2fw -m addrtype --dst-type MULTICAST -j DROP
-A vpn2fw -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:vpn2fw:DROP:" --log-level 6
-A vpn2fw -j DROP
-A vpn2geov -m conntrack --ctstate INVALID -j _vpn2geov
-A vpn2geov -m addrtype --dst-type BROADCAST -j DROP
-A vpn2geov -m addrtype --dst-type ANYCAST -j DROP
-A vpn2geov -m addrtype --dst-type MULTICAST -j DROP
-A vpn2geov -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:vpn2geov:DROP:" --log-level 6
-A vpn2geov -j DROP
-A vpn2loc -m conntrack --ctstate INVALID -j _vpn2loc
-A vpn2loc -m addrtype --dst-type BROADCAST -j DROP
-A vpn2loc -m addrtype --dst-type ANYCAST -j DROP
-A vpn2loc -m addrtype --dst-type MULTICAST -j DROP
-A vpn2loc -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:vpn2loc:DROP:" --log-level 6
-A vpn2loc -j DROP
-A vpn2net -m conntrack --ctstate INVALID -j _vpn2net
-A vpn2net -m addrtype --dst-type BROADCAST -j DROP
-A vpn2net -m addrtype --dst-type ANYCAST -j DROP
-A vpn2net -m addrtype --dst-type MULTICAST -j DROP
-A vpn2net -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:vpn2net:DROP:" --log-level 6
-A vpn2net -j DROP
-A vpn2nginx -m conntrack --ctstate INVALID -j _vpn2nginx
-A vpn2nginx -p tcp -m tcp --dport 6101 -j DROP
-A vpn2nginx -p tcp -m tcp --dport 3100 -j DROP
-A vpn2nginx -p tcp -m tcp --dport 4100 -j DROP
-A vpn2nginx -p tcp -m tcp --dport 5100 -j DROP
-A vpn2nginx -p tcp -m tcp --dport 8100 -j DROP
-A vpn2nginx -p tcp -m tcp --dport 9100 -j DROP
-A vpn2nginx -p tcp -m tcp --dport 4101 -j DROP
-A vpn2nginx -p tcp -m tcp --dport 8022 -j DROP
-A vpn2nginx -p tcp -m tcp --dport 7657 -j DROP
-A vpn2nginx -p tcp -m tcp --dport 5104 -j DROP
-A vpn2nginx -p tcp -m tcp --dport 5204 -j DROP
-A vpn2nginx -p tcp -m tcp --dport 5304 -j DROP
-A vpn2nginx -p tcp -m tcp --dport 5602 -j DROP
-A vpn2nginx -p tcp -m tcp --dport 9702 -j DROP
-A vpn2nginx -p tcp -m tcp --dport 4740 -j DROP
-A vpn2nginx -p tcp -m tcp --dport 5052 -j DROP
-A vpn2nginx -p tcp -m tcp --dport 3202 -j DROP
-A vpn2nginx -p tcp -m tcp --dport 9003 -j DROP
-A vpn2nginx -p tcp -m tcp --dport 8803 -j DROP
-A vpn2nginx -p tcp -m tcp --dport 9997 -j DROP
-A vpn2nginx -p tcp -m tcp --dport 9101 -j DROP
-A vpn2nginx -p tcp -m tcp --dport 5070 -j DROP
-A vpn2nginx -p tcp -m tcp --dport 3001 -j DROP
-A vpn2nginx -p tcp -m tcp --dport 9090 -j DROP
-A vpn2nginx -p tcp -m tcp --dport 9093 -j DROP
-A vpn2nginx -p tcp -m tcp --dport 5606 -j DROP
-A vpn2nginx -d 172.16.1.3/32 -p udp -m udp --dport 53 -j ACCEPT
-A vpn2nginx -d 172.16.1.2/32 -p udp -m udp --dport 53 -j ACCEPT
-A vpn2nginx -d 172.16.1.1/32 -p udp -m udp --dport 53 -j ACCEPT
-A vpn2nginx -d 172.16.1.3/32 -p udp -m udp --dport 53 -j ACCEPT
-A vpn2nginx -d 172.16.1.2/32 -p udp -m udp --dport 53 -j ACCEPT
-A vpn2nginx -d 172.16.1.1/32 -p udp -m udp --dport 53 -j ACCEPT
-A vpn2nginx -m addrtype --dst-type BROADCAST -j DROP
-A vpn2nginx -m addrtype --dst-type ANYCAST -j DROP
-A vpn2nginx -m addrtype --dst-type MULTICAST -j DROP
-A vpn2nginx -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:vpn2nginx:DROP:" --log-level 6
-A vpn2nginx -j DROP
-A vpn2repo -m conntrack --ctstate INVALID -j _vpn2repo
-A vpn2repo -m addrtype --dst-type BROADCAST -j DROP
-A vpn2repo -m addrtype --dst-type ANYCAST -j DROP
-A vpn2repo -m addrtype --dst-type MULTICAST -j DROP
-A vpn2repo -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:vpn2repo:DROP:" --log-level 6
-A vpn2repo -j DROP
-A vpn2vip -m conntrack --ctstate INVALID -j _vpn2vip
-A vpn2vip -m addrtype --dst-type BROADCAST -j DROP
-A vpn2vip -m addrtype --dst-type ANYCAST -j DROP
-A vpn2vip -m addrtype --dst-type MULTICAST -j DROP
-A vpn2vip -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:vpn2vip:DROP:" --log-level 6
-A vpn2vip -j DROP
-A vpn2vrrp -m conntrack --ctstate INVALID -j _vpn2vrrp
-A vpn2vrrp -m addrtype --dst-type BROADCAST -j DROP
-A vpn2vrrp -m addrtype --dst-type ANYCAST -j DROP
-A vpn2vrrp -m addrtype --dst-type MULTICAST -j DROP
-A vpn2vrrp -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:vpn2vrrp:DROP:" --log-level 6
-A vpn2vrrp -j DROP
-A vpn2wan -m conntrack --ctstate INVALID -j _vpn2wan
-A vpn2wan -m addrtype --dst-type BROADCAST -j DROP
-A vpn2wan -m addrtype --dst-type ANYCAST -j DROP
-A vpn2wan -m addrtype --dst-type MULTICAST -j DROP
-A vpn2wan -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:vpn2wan:DROP:" --log-level 6
-A vpn2wan -j DROP
-A vpn_frwd -o ens160 -j vpn2wan
-A vpn_frwd -d 172.16.1.3/32 -o ens192 -j vpn2nginx
-A vpn_frwd -d 172.16.1.2/32 -o ens192 -j vpn2nginx
-A vpn_frwd -d 172.16.1.1/32 -o ens192 -j vpn2nginx
-A vpn_frwd -d 172.16.1.9/32 -o ens192 -j vpn2bas
-A vpn_frwd -d 172.16.1.10/32 -o ens192 -j vpn2repo
-A vpn_frwd -d 172.16.1.5/32 -o ens192 -j vpn2vrrp
-A vpn_frwd -d 172.16.1.4/32 -o ens192 -j vpn2vrrp
-A vpn_frwd -d 172.16.1.100/32 -o ens192 -j vpn2vip
-A vpn_frwd -d 172.16.1.6/32 -o ens192 -j vpn2cde
-A vpn_frwd -d 172.16.1.7/32 -o ens192 -j vpn2cde
-A vpn_frwd -d 172.16.1.8/32 -o ens192 -j vpn2cde
-A vpn_frwd -d 172.16.1.3/32 -o ens192 -j vpn2clu
-A vpn_frwd -d 172.16.1.2/32 -o ens192 -j vpn2clu
-A vpn_frwd -d 172.16.1.1/32 -o ens192 -j vpn2clu
-A vpn_frwd -o ens192 -j vpn2net
-A vpn_frwd -o docker0 -j vpn2brg
-A vpn_frwd -d 10.255.0.0/16 -o docker_gwbridge -j vpn2ess
-A vpn_frwd -d 10.0.0.0/24 -o docker_gwbridge -j vpn2loc
-A vpn_frwd -o docker_gwbridge -j vpn2geov
-A vrrp2bas -m conntrack --ctstate INVALID -j _vrrp2bas
-A vrrp2bas -m addrtype --dst-type BROADCAST -j DROP
-A vrrp2bas -m addrtype --dst-type ANYCAST -j DROP
-A vrrp2bas -m addrtype --dst-type MULTICAST -j DROP
-A vrrp2bas -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:vrrp2bas:DROP:" --log-level 6
-A vrrp2bas -j DROP
-A vrrp2brg -m conntrack --ctstate INVALID -j _vrrp2brg
-A vrrp2brg -m addrtype --dst-type BROADCAST -j DROP
-A vrrp2brg -m addrtype --dst-type ANYCAST -j DROP
-A vrrp2brg -m addrtype --dst-type MULTICAST -j DROP
-A vrrp2brg -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:vrrp2brg:DROP:" --log-level 6
-A vrrp2brg -j DROP
-A vrrp2cde -m conntrack --ctstate INVALID -j _vrrp2cde
-A vrrp2cde -m addrtype --dst-type BROADCAST -j DROP
-A vrrp2cde -m addrtype --dst-type ANYCAST -j DROP
-A vrrp2cde -m addrtype --dst-type MULTICAST -j DROP
-A vrrp2cde -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:vrrp2cde:DROP:" --log-level 6
-A vrrp2cde -j DROP
-A vrrp2clu -m conntrack --ctstate INVALID -j _vrrp2clu
-A vrrp2clu -m addrtype --dst-type BROADCAST -j DROP
-A vrrp2clu -m addrtype --dst-type ANYCAST -j DROP
-A vrrp2clu -m addrtype --dst-type MULTICAST -j DROP
-A vrrp2clu -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:vrrp2clu:DROP:" --log-level 6
-A vrrp2clu -j DROP
-A vrrp2ess -m conntrack --ctstate INVALID -j _vrrp2ess
-A vrrp2ess -m addrtype --dst-type BROADCAST -j DROP
-A vrrp2ess -m addrtype --dst-type ANYCAST -j DROP
-A vrrp2ess -m addrtype --dst-type MULTICAST -j DROP
-A vrrp2ess -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:vrrp2ess:DROP:" --log-level 6
-A vrrp2ess -j DROP
-A vrrp2fw -m conntrack --ctstate INVALID -j _vrrp2fw
-A vrrp2fw -s 10.0.0.0/8 -j DROP
-A vrrp2fw -s 172.16.0.0/12 -j DROP
-A vrrp2fw -s 192.168.0.0/16 -j DROP
-A vrrp2fw -s 169.254.0.0/16 -j DROP
-A vrrp2fw -s 0.0.0.0/8 -j DROP
-A vrrp2fw -s 127.0.0.0/8 -j DROP
-A vrrp2fw -s 240.0.0.0/4 -j DROP
-A vrrp2fw -s 255.255.255.255/32 -j DROP
-A vrrp2fw -s 192.0.2.0/24 -j DROP
-A vrrp2fw -s 100.64.0.0/10 -j DROP
-A vrrp2fw -s 192.0.0.0/24 -j DROP
-A vrrp2fw -s 198.18.0.0/15 -j DROP
-A vrrp2fw -s 198.51.100.0/24 -j DROP
-A vrrp2fw -s 203.0.113.0/24 -j DROP
-A vrrp2fw -s 224.0.0.0/4 -j DROP
-A vrrp2fw -p icmp -m icmp --icmp-type 8 -m hashlimit --hashlimit-upto 2/sec --hashlimit-burst 5 --hashlimit-mode srcip --hashlimit-name shorewall6 -m comment --comment Ping -j ACCEPT
-A vrrp2fw -p icmp -m icmp --icmp-type 3/4 -j ACCEPT
-A vrrp2fw -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A vrrp2fw -p icmp -m icmp --icmp-type 11 -j ACCEPT
-A vrrp2fw -p udp -m udp --dport 33434:33529 -j ACCEPT
-A vrrp2fw -p tcp -m tcp --dport 23 -j DROP
-A vrrp2fw -p icmp -m hashlimit --hashlimit-upto 2/sec --hashlimit-burst 5 --hashlimit-mode srcip --hashlimit-name shorewall14 -j ACCEPT
-A vrrp2fw -p tcp -m tcp --dport 22 -j ACCEPT
-A vrrp2fw -p icmp -m hashlimit --hashlimit-upto 2/sec --hashlimit-burst 5 --hashlimit-mode srcip --hashlimit-name shorewall28 -j ACCEPT
-A vrrp2fw -p tcp -m tcp --dport 9103 -j DROP
-A vrrp2fw -p tcp -m tcp --dport 8080 -j DROP
-A vrrp2fw -p tcp -m tcp --dport 22 -j ACCEPT
-A vrrp2fw -m addrtype --dst-type BROADCAST -j DROP
-A vrrp2fw -m addrtype --dst-type ANYCAST -j DROP
-A vrrp2fw -m addrtype --dst-type MULTICAST -j DROP
-A vrrp2fw -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:vrrp2fw:DROP:" --log-level 6
-A vrrp2fw -j DROP
-A vrrp2geov -m conntrack --ctstate INVALID -j _vrrp2geov
-A vrrp2geov -m addrtype --dst-type BROADCAST -j DROP
-A vrrp2geov -m addrtype --dst-type ANYCAST -j DROP
-A vrrp2geov -m addrtype --dst-type MULTICAST -j DROP
-A vrrp2geov -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:vrrp2geov:DROP:" --log-level 6
-A vrrp2geov -j DROP
-A vrrp2loc -m conntrack --ctstate INVALID -j _vrrp2loc
-A vrrp2loc -m addrtype --dst-type BROADCAST -j DROP
-A vrrp2loc -m addrtype --dst-type ANYCAST -j DROP
-A vrrp2loc -m addrtype --dst-type MULTICAST -j DROP
-A vrrp2loc -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:vrrp2loc:DROP:" --log-level 6
-A vrrp2loc -j DROP
-A vrrp2net -m conntrack --ctstate INVALID -j _vrrp2net
-A vrrp2net -m addrtype --dst-type BROADCAST -j DROP
-A vrrp2net -m addrtype --dst-type ANYCAST -j DROP
-A vrrp2net -m addrtype --dst-type MULTICAST -j DROP
-A vrrp2net -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:vrrp2net:DROP:" --log-level 6
-A vrrp2net -j DROP
-A vrrp2nginx -m conntrack --ctstate INVALID -j _vrrp2nginx
-A vrrp2nginx -p tcp -m tcp --dport 6101 -j DROP
-A vrrp2nginx -p tcp -m tcp --dport 3100 -j DROP
-A vrrp2nginx -p tcp -m tcp --dport 4100 -j DROP
-A vrrp2nginx -p tcp -m tcp --dport 5100 -j DROP
-A vrrp2nginx -p tcp -m tcp --dport 8100 -j DROP
-A vrrp2nginx -p tcp -m tcp --dport 9100 -j DROP
-A vrrp2nginx -p tcp -m tcp --dport 4101 -j DROP
-A vrrp2nginx -p tcp -m tcp --dport 8022 -j DROP
-A vrrp2nginx -p tcp -m tcp --dport 7657 -j DROP
-A vrrp2nginx -p tcp -m tcp --dport 5104 -j DROP
-A vrrp2nginx -p tcp -m tcp --dport 5204 -j DROP
-A vrrp2nginx -p tcp -m tcp --dport 5304 -j DROP
-A vrrp2nginx -p tcp -m tcp --dport 5602 -j DROP
-A vrrp2nginx -p tcp -m tcp --dport 9702 -j DROP
-A vrrp2nginx -p tcp -m tcp --dport 4740 -j DROP
-A vrrp2nginx -p tcp -m tcp --dport 5052 -j DROP
-A vrrp2nginx -p tcp -m tcp --dport 3202 -j DROP
-A vrrp2nginx -p tcp -m tcp --dport 9003 -j DROP
-A vrrp2nginx -p tcp -m tcp --dport 8803 -j DROP
-A vrrp2nginx -p tcp -m tcp --dport 9997 -j DROP
-A vrrp2nginx -p tcp -m tcp --dport 9101 -j DROP
-A vrrp2nginx -p tcp -m tcp --dport 5070 -j DROP
-A vrrp2nginx -p tcp -m tcp --dport 3001 -j DROP
-A vrrp2nginx -p tcp -m tcp --dport 9090 -j DROP
-A vrrp2nginx -p tcp -m tcp --dport 9093 -j DROP
-A vrrp2nginx -p tcp -m tcp --dport 5606 -j DROP
-A vrrp2nginx -m addrtype --dst-type BROADCAST -j DROP
-A vrrp2nginx -m addrtype --dst-type ANYCAST -j DROP
-A vrrp2nginx -m addrtype --dst-type MULTICAST -j DROP
-A vrrp2nginx -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:vrrp2nginx:DROP:" --log-level 6
-A vrrp2nginx -j DROP
-A vrrp2repo -m conntrack --ctstate INVALID -j _vrrp2repo
-A vrrp2repo -m addrtype --dst-type BROADCAST -j DROP
-A vrrp2repo -m addrtype --dst-type ANYCAST -j DROP
-A vrrp2repo -m addrtype --dst-type MULTICAST -j DROP
-A vrrp2repo -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:vrrp2repo:DROP:" --log-level 6
-A vrrp2repo -j DROP
-A vrrp2vip -m conntrack --ctstate INVALID -j _vrrp2vip
-A vrrp2vip -m addrtype --dst-type BROADCAST -j DROP
-A vrrp2vip -m addrtype --dst-type ANYCAST -j DROP
-A vrrp2vip -m addrtype --dst-type MULTICAST -j DROP
-A vrrp2vip -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:vrrp2vip:DROP:" --log-level 6
-A vrrp2vip -j DROP
-A vrrp2vpn -m conntrack --ctstate INVALID -j _vrrp2vpn
-A vrrp2vpn -m addrtype --dst-type BROADCAST -j DROP
-A vrrp2vpn -m addrtype --dst-type ANYCAST -j DROP
-A vrrp2vpn -m addrtype --dst-type MULTICAST -j DROP
-A vrrp2vpn -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:vrrp2vpn:DROP:" --log-level 6
-A vrrp2vpn -j DROP
-A vrrp2wan -m conntrack --ctstate INVALID -j _vrrp2wan
-A vrrp2wan -m addrtype --dst-type BROADCAST -j DROP
-A vrrp2wan -m addrtype --dst-type ANYCAST -j DROP
-A vrrp2wan -m addrtype --dst-type MULTICAST -j DROP
-A vrrp2wan -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:vrrp2wan:DROP:" --log-level 6
-A vrrp2wan -j DROP
-A vrrp_frwd -o ens160 -j vrrp2wan
-A vrrp_frwd -d 172.16.1.3/32 -o ens192 -j vrrp2nginx
-A vrrp_frwd -d 172.16.1.2/32 -o ens192 -j vrrp2nginx
-A vrrp_frwd -d 172.16.1.1/32 -o ens192 -j vrrp2nginx
-A vrrp_frwd -d 172.16.1.9/32 -o ens192 -j vrrp2bas
-A vrrp_frwd -d 172.16.1.10/32 -o ens192 -j vrrp2repo
-A vrrp_frwd -d 172.16.1.100/32 -o ens192 -j vrrp2vip
-A vrrp_frwd -d 172.16.1.6/32 -o ens192 -j vrrp2cde
-A vrrp_frwd -d 172.16.1.7/32 -o ens192 -j vrrp2cde
-A vrrp_frwd -d 172.16.1.8/32 -o ens192 -j vrrp2cde
-A vrrp_frwd -d 172.16.1.3/32 -o ens192 -j vrrp2clu
-A vrrp_frwd -d 172.16.1.2/32 -o ens192 -j vrrp2clu
-A vrrp_frwd -d 172.16.1.1/32 -o ens192 -j vrrp2clu
-A vrrp_frwd -o ens192 -j vrrp2net
-A vrrp_frwd -o docker0 -j vrrp2brg
-A vrrp_frwd -d 10.255.0.0/16 -o docker_gwbridge -j vrrp2ess
-A vrrp_frwd -d 10.0.3.0/24 -o docker_gwbridge -j vrrp2vpn
-A vrrp_frwd -d 10.0.0.0/24 -o docker_gwbridge -j vrrp2loc
-A vrrp_frwd -o docker_gwbridge -j vrrp2geov
-A wan2bas -m conntrack --ctstate INVALID -j _wan2bas
-A wan2bas -m addrtype --dst-type BROADCAST -j DROP
-A wan2bas -m addrtype --dst-type ANYCAST -j DROP
-A wan2bas -m addrtype --dst-type MULTICAST -j DROP
-A wan2bas -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:wan2bas:DROP:" --log-level 6
-A wan2bas -j DROP
-A wan2brg -m conntrack --ctstate INVALID -j _wan2brg
-A wan2brg -m addrtype --dst-type BROADCAST -j DROP
-A wan2brg -m addrtype --dst-type ANYCAST -j DROP
-A wan2brg -m addrtype --dst-type MULTICAST -j DROP
-A wan2brg -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:wan2brg:DROP:" --log-level 6
-A wan2brg -j DROP
-A wan2cde -m conntrack --ctstate INVALID -j _wan2cde
-A wan2cde -m addrtype --dst-type BROADCAST -j DROP
-A wan2cde -m addrtype --dst-type ANYCAST -j DROP
-A wan2cde -m addrtype --dst-type MULTICAST -j DROP
-A wan2cde -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:wan2cde:DROP:" --log-level 6
-A wan2cde -j DROP
-A wan2clu -m conntrack --ctstate INVALID -j _wan2clu
-A wan2clu -m addrtype --dst-type BROADCAST -j DROP
-A wan2clu -m addrtype --dst-type ANYCAST -j DROP
-A wan2clu -m addrtype --dst-type MULTICAST -j DROP
-A wan2clu -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:wan2clu:DROP:" --log-level 6
-A wan2clu -j DROP
-A wan2ess -m conntrack --ctstate INVALID -j _wan2ess
-A wan2ess -m addrtype --dst-type BROADCAST -j DROP
-A wan2ess -m addrtype --dst-type ANYCAST -j DROP
-A wan2ess -m addrtype --dst-type MULTICAST -j DROP
-A wan2ess -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:wan2ess:DROP:" --log-level 6
-A wan2ess -j DROP
-A wan2fw -m conntrack --ctstate INVALID,NEW,UNTRACKED -j dynamic
-A wan2fw -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A wan2fw -m conntrack --ctstate INVALID,NEW,UNTRACKED -j smurfs
-A wan2fw -p tcp -j tcpflags
-A wan2fw -m conntrack --ctstate INVALID -j _wan2fw
-A wan2fw -p tcp -m multiport --dports 53,80,443,1194 -j ACCEPT
-A wan2fw -s 10.0.0.0/8 -j DROP
-A wan2fw -s 172.16.0.0/12 -j DROP
-A wan2fw -s 192.168.0.0/16 -j DROP
-A wan2fw -s 169.254.0.0/16 -j DROP
-A wan2fw -s 0.0.0.0/8 -j DROP
-A wan2fw -s 127.0.0.0/8 -j DROP
-A wan2fw -s 240.0.0.0/4 -j DROP
-A wan2fw -s 255.255.255.255/32 -j DROP
-A wan2fw -s 192.0.2.0/24 -j DROP
-A wan2fw -s 100.64.0.0/10 -j DROP
-A wan2fw -s 192.0.0.0/24 -j DROP
-A wan2fw -s 198.18.0.0/15 -j DROP
-A wan2fw -s 198.51.100.0/24 -j DROP
-A wan2fw -s 203.0.113.0/24 -j DROP
-A wan2fw -s 224.0.0.0/4 -j DROP
-A wan2fw -p icmp -m icmp --icmp-type 8 -m hashlimit --hashlimit-upto 2/sec --hashlimit-burst 5 --hashlimit-mode srcip --hashlimit-name shorewall0 -m comment --comment Ping -j ACCEPT
-A wan2fw -p icmp -m icmp --icmp-type 3/4 -j ACCEPT
-A wan2fw -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A wan2fw -p icmp -m icmp --icmp-type 11 -j ACCEPT
-A wan2fw -p udp -m udp --dport 33434:33529 -j ACCEPT
-A wan2fw -p tcp -m tcp --dport 23 -j DROP
-A wan2fw -p icmp -m hashlimit --hashlimit-upto 2/sec --hashlimit-burst 5 --hashlimit-mode srcip --hashlimit-name shorewall10 -j ACCEPT
-A wan2fw -p tcp -m tcp --dport 22 -j ACCEPT
-A wan2fw -p icmp -m hashlimit --hashlimit-upto 2/sec --hashlimit-burst 5 --hashlimit-mode srcip --hashlimit-name shorewall24 -j ACCEPT
-A wan2fw -p tcp -m tcp --dport 9103 -j DROP
-A wan2fw -p tcp -m tcp --dport 8080 -j DROP
-A wan2fw -p tcp -m tcp --dport 11443 -j ACCEPT
-A wan2fw -p tcp -m tcp --dport 22 -j ACCEPT
-A wan2fw -p udp -m udp --dport 53 -j ACCEPT
-A wan2fw -m addrtype --dst-type BROADCAST -j DROP
-A wan2fw -m addrtype --dst-type ANYCAST -j DROP
-A wan2fw -m addrtype --dst-type MULTICAST -j DROP
-A wan2fw -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:wan2fw:DROP:" --log-level 6
-A wan2fw -j DROP
-A wan2geov -m conntrack --ctstate INVALID -j _wan2geov
-A wan2geov -m addrtype --dst-type BROADCAST -j DROP
-A wan2geov -m addrtype --dst-type ANYCAST -j DROP
-A wan2geov -m addrtype --dst-type MULTICAST -j DROP
-A wan2geov -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:wan2geov:DROP:" --log-level 6
-A wan2geov -j DROP
-A wan2loc -m conntrack --ctstate INVALID -j _wan2loc
-A wan2loc -m addrtype --dst-type BROADCAST -j DROP
-A wan2loc -m addrtype --dst-type ANYCAST -j DROP
-A wan2loc -m addrtype --dst-type MULTICAST -j DROP
-A wan2loc -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:wan2loc:DROP:" --log-level 6
-A wan2loc -j DROP
-A wan2net -m conntrack --ctstate INVALID -j _wan2net
-A wan2net -d 172.16.1.3/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A wan2net -d 172.16.1.2/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A wan2net -d 172.16.1.1/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A wan2net -d 172.16.1.3/32 -p tcp -m tcp --dport 53 -j ACCEPT
-A wan2net -d 172.16.1.2/32 -p tcp -m tcp --dport 53 -j ACCEPT
-A wan2net -d 172.16.1.1/32 -p tcp -m tcp --dport 53 -j ACCEPT
-A wan2net -d 172.16.1.3/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A wan2net -d 172.16.1.2/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A wan2net -d 172.16.1.1/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A wan2net -d 172.16.1.3/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A wan2net -d 172.16.1.2/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A wan2net -d 172.16.1.1/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A wan2net -d 172.16.1.3/32 -p tcp -m tcp --dport 1194 -j ACCEPT
-A wan2net -d 172.16.1.2/32 -p tcp -m tcp --dport 1194 -j ACCEPT
-A wan2net -d 172.16.1.1/32 -p tcp -m tcp --dport 1194 -j ACCEPT
-A wan2net -m addrtype --dst-type BROADCAST -j DROP
-A wan2net -m addrtype --dst-type ANYCAST -j DROP
-A wan2net -m addrtype --dst-type MULTICAST -j DROP
-A wan2net -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:wan2net:DROP:" --log-level 6
-A wan2net -j DROP
-A wan2nginx -m conntrack --ctstate INVALID -j _wan2nginx
-A wan2nginx -p tcp -m tcp --dport 6101 -j DROP
-A wan2nginx -p tcp -m tcp --dport 3100 -j DROP
-A wan2nginx -p tcp -m tcp --dport 4100 -j DROP
-A wan2nginx -p tcp -m tcp --dport 5100 -j DROP
-A wan2nginx -p tcp -m tcp --dport 8100 -j DROP
-A wan2nginx -p tcp -m tcp --dport 9100 -j DROP
-A wan2nginx -p tcp -m tcp --dport 4101 -j DROP
-A wan2nginx -p tcp -m tcp --dport 8022 -j DROP
-A wan2nginx -p tcp -m tcp --dport 7657 -j DROP
-A wan2nginx -p tcp -m tcp --dport 5104 -j DROP
-A wan2nginx -p tcp -m tcp --dport 5204 -j DROP
-A wan2nginx -p tcp -m tcp --dport 5304 -j DROP
-A wan2nginx -p tcp -m tcp --dport 5602 -j DROP
-A wan2nginx -p tcp -m tcp --dport 9702 -j DROP
-A wan2nginx -p tcp -m tcp --dport 4740 -j DROP
-A wan2nginx -p tcp -m tcp --dport 5052 -j DROP
-A wan2nginx -p tcp -m tcp --dport 3202 -j DROP
-A wan2nginx -p tcp -m tcp --dport 9003 -j DROP
-A wan2nginx -p tcp -m tcp --dport 8803 -j DROP
-A wan2nginx -p tcp -m tcp --dport 9997 -j DROP
-A wan2nginx -p tcp -m tcp --dport 9101 -j DROP
-A wan2nginx -p tcp -m tcp --dport 5070 -j DROP
-A wan2nginx -p tcp -m tcp --dport 3001 -j DROP
-A wan2nginx -p tcp -m tcp --dport 9090 -j DROP
-A wan2nginx -p tcp -m tcp --dport 9093 -j DROP
-A wan2nginx -p tcp -m tcp --dport 5606 -j DROP
-A wan2nginx -m addrtype --dst-type BROADCAST -j DROP
-A wan2nginx -m addrtype --dst-type ANYCAST -j DROP
-A wan2nginx -m addrtype --dst-type MULTICAST -j DROP
-A wan2nginx -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:wan2nginx:DROP:" --log-level 6
-A wan2nginx -j DROP
-A wan2repo -m conntrack --ctstate INVALID -j _wan2repo
-A wan2repo -m addrtype --dst-type BROADCAST -j DROP
-A wan2repo -m addrtype --dst-type ANYCAST -j DROP
-A wan2repo -m addrtype --dst-type MULTICAST -j DROP
-A wan2repo -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:wan2repo:DROP:" --log-level 6
-A wan2repo -j DROP
-A wan2vip -m conntrack --ctstate INVALID -j _wan2vip
-A wan2vip -m addrtype --dst-type BROADCAST -j DROP
-A wan2vip -m addrtype --dst-type ANYCAST -j DROP
-A wan2vip -m addrtype --dst-type MULTICAST -j DROP
-A wan2vip -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:wan2vip:DROP:" --log-level 6
-A wan2vip -j DROP
-A wan2vpn -m conntrack --ctstate INVALID -j _wan2vpn
-A wan2vpn -m addrtype --dst-type BROADCAST -j DROP
-A wan2vpn -m addrtype --dst-type ANYCAST -j DROP
-A wan2vpn -m addrtype --dst-type MULTICAST -j DROP
-A wan2vpn -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:wan2vpn:DROP:" --log-level 6
-A wan2vpn -j DROP
-A wan2vrrp -m conntrack --ctstate INVALID -j _wan2vrrp
-A wan2vrrp -m addrtype --dst-type BROADCAST -j DROP
-A wan2vrrp -m addrtype --dst-type ANYCAST -j DROP
-A wan2vrrp -m addrtype --dst-type MULTICAST -j DROP
-A wan2vrrp -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name lograte -j LOG --log-prefix "Shorewall:wan2vrrp:DROP:" --log-level 6
-A wan2vrrp -j DROP
-A wan_frwd -m conntrack --ctstate INVALID,NEW,UNTRACKED -j dynamic
-A wan_frwd -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A wan_frwd -m conntrack --ctstate INVALID,NEW,UNTRACKED -j smurfs
-A wan_frwd -p tcp -j tcpflags
-A wan_frwd -d 172.16.1.3/32 -o ens192 -j wan2nginx
-A wan_frwd -d 172.16.1.2/32 -o ens192 -j wan2nginx
-A wan_frwd -d 172.16.1.1/32 -o ens192 -j wan2nginx
-A wan_frwd -d 172.16.1.9/32 -o ens192 -j wan2bas
-A wan_frwd -d 172.16.1.10/32 -o ens192 -j wan2repo
-A wan_frwd -d 172.16.1.5/32 -o ens192 -j wan2vrrp
-A wan_frwd -d 172.16.1.4/32 -o ens192 -j wan2vrrp
-A wan_frwd -d 172.16.1.100/32 -o ens192 -j wan2vip
-A wan_frwd -d 172.16.1.6/32 -o ens192 -j wan2cde
-A wan_frwd -d 172.16.1.7/32 -o ens192 -j wan2cde
-A wan_frwd -d 172.16.1.8/32 -o ens192 -j wan2cde
-A wan_frwd -d 172.16.1.3/32 -o ens192 -j wan2clu
-A wan_frwd -d 172.16.1.2/32 -o ens192 -j wan2clu
-A wan_frwd -d 172.16.1.1/32 -o ens192 -j wan2clu
-A wan_frwd -o ens192 -j wan2net
-A wan_frwd -o docker0 -j wan2brg
-A wan_frwd -d 10.255.0.0/16 -o docker_gwbridge -j wan2ess
-A wan_frwd -d 10.0.3.0/24 -o docker_gwbridge -j wan2vpn
-A wan_frwd -d 10.0.0.0/24 -o docker_gwbridge -j wan2loc
-A wan_frwd -o docker_gwbridge -j wan2geov
COMMIT
# Completed on Wed Oct 16 11:06:25 2019
# Generated by iptables-save v1.6.1 on Wed Oct 16 11:06:25 2019
*nat
:PREROUTING ACCEPT [79:4722]
:INPUT ACCEPT [48:3022]
:OUTPUT ACCEPT [144:14989]
:POSTROUTING ACCEPT [139:14528]
:DOCKER - [0:0]
:SHOREWALL - [0:0]
:ens160_masq - [0:0]
:ens192_masq - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.3/32 -d 172.17.0.3/32 -p tcp -m tcp --dport 9153 -j MASQUERADE
-A POSTROUTING -s 172.17.0.3/32 -d 172.17.0.3/32 -p tcp -m tcp --dport 53 -j MASQUERADE
-A POSTROUTING -s 172.17.0.3/32 -d 172.17.0.3/32 -p udp -m udp --dport 53 -j MASQUERADE
-A POSTROUTING -s 172.17.0.5/32 -d 172.17.0.5/32 -p tcp -m tcp --dport 443 -j MASQUERADE
-A POSTROUTING -s 172.17.0.5/32 -d 172.17.0.5/32 -p tcp -m tcp --dport 1194 -j MASQUERADE
-A POSTROUTING -s 172.17.0.5/32 -d 172.17.0.5/32 -p tcp -m tcp --dport 80 -j MASQUERADE
-A POSTROUTING -j SHOREWALL
-A DOCKER -d 195.54.210.26/32 ! -i docker0 -p tcp -m tcp --dport 9153 -j DNAT --to-destination 172.17.0.3:9153
-A DOCKER -d 195.54.210.26/32 ! -i docker0 -p tcp -m tcp --dport 53 -j DNAT --to-destination 172.17.0.3:53
-A DOCKER -d 195.54.210.26/32 ! -i docker0 -p udp -m udp --dport 53 -j DNAT --to-destination 172.17.0.3:53
-A DOCKER ! -i docker0 -p tcp -m tcp --dport 11443 -j DNAT --to-destination 172.17.0.5:443
-A DOCKER ! -i docker0 -p tcp -m tcp --dport 1194 -j DNAT --to-destination 172.17.0.5:1194
-A DOCKER ! -i docker0 -p tcp -m tcp --dport 11480 -j DNAT --to-destination 172.17.0.5:80
-A SHOREWALL -o ens160 -j ens160_masq
-A SHOREWALL -o ens192 -j ens192_masq
-A ens160_masq -s 172.16.0.0/12 -j MASQUERADE
-A ens192_masq -s 172.16.0.0/12 -j MASQUERADE
COMMIT
# Completed on Wed Oct 16 11:06:25 2019
# Generated by iptables-save v1.6.1 on Wed Oct 16 11:06:25 2019
*mangle
:PREROUTING ACCEPT [2961:1138918]
:INPUT ACCEPT [2845:808572]
:FORWARD ACCEPT [116:330346]
:OUTPUT ACCEPT [2817:1191961]
:POSTROUTING ACCEPT [2933:1522307]
:tcfor - [0:0]
:tcin - [0:0]
:tcout - [0:0]
:tcpost - [0:0]
:tcpre - [0:0]
-A PREROUTING -j tcpre
-A INPUT -j tcin
-A FORWARD -j MARK --set-xmark 0x0/0xff
-A FORWARD -j tcfor
-A OUTPUT -j tcout
-A POSTROUTING -j tcpost
COMMIT
# Completed on Wed Oct 16 11:06:25 2019
